Updated po files and Greek translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-06-02 18:22+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: angelodos angelo2807@hotmail.com\n"
@@ -24,11 +24,6 @@ msgid ""
 msgstr ""
 "\n"
 "Després de prémer d'acord, si us plau esperi!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-" de conflictes desactivat!"
 
 #
 msgid ""
@@ -394,10 +389,6 @@ msgstr[1] "paquets actualitzats% s disponible"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(Tipus VU +)"
 
@@ -470,23 +461,13 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 #
 msgid "12V output"
 msgstr "sortida 12V"
 
-msgid "12bit"
-msgstr "12bit"
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -495,10 +476,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -518,6 +495,10 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Dues línies"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -557,19 +538,6 @@ msgstr "3d mode"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -603,9 +571,6 @@ msgstr "8"
 #
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 #
 msgid "9"
@@ -765,9 +730,6 @@ msgstr "ACQUIRING TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS File"
 
 msgid "ASS file"
 msgstr "ASS file"
@@ -1395,10 +1357,6 @@ msgstr "S’ha completat la instal·lació automàtica"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Si voleu actualitzar els paquets, espereu que s’actualitzin els paquets"
 
-#
-msgid "Automatic"
-msgstr "Automatic"
-
 msgid "Automatic Scan"
 msgstr "Escaneig automàtic"
 
@@ -1440,15 +1398,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 #
 msgid "Back"
@@ -1716,10 +1665,6 @@ msgstr "CI slot: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2258,6 +2203,9 @@ msgstr "Configura en quins dispositius s’ha d’utilitzar l’opció d’elimi
 msgid "Configure remote control type"
 msgstr "Configura el tipus de control remot"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configura el mode DiSEqC per aquest LNB."
 
@@ -2515,6 +2463,9 @@ msgstr "Configura quin connector de sortida de vídeo s’utilitzarà."
 msgid "Configuring"
 msgstr "Configurant"
 
+msgid "Conflict detection disabled!"
+msgstr " de conflictes desactivat!"
+
 msgid "Conflict not resolved!"
 msgstr "Conflicte no resolt."
 
@@ -2745,9 +2696,6 @@ msgstr "Txèquia"
 #
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 #
 msgid "DHCP"
@@ -3357,9 +3305,6 @@ msgstr "Voleu actualitzar el receptor a% s?"
 msgid "Do you want to update your receiver?"
 msgstr "Voleu actualitzar el receptor?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3536,9 +3481,6 @@ msgstr "El Salvador"
 #
 msgid "Electronic Program Guide"
 msgstr "Guia electrònica de programes"
-
-msgid "Embedded"
-msgstr "Incrustat"
 
 msgid "Emergency"
 msgstr "Emergencia "
@@ -4355,6 +4297,9 @@ msgstr "De:"
 msgid "Frontprocessor version: %s"
 msgstr "Versió del processador frontal:% s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Pantalla completa"
@@ -4588,9 +4533,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "Colordepth HDMI"
 
@@ -4612,9 +4554,6 @@ msgstr "Font HDMI-CEC Inactiva"
 msgid "HDMI-CEC setup"
 msgstr "Configuració HDMI-CEC"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 support"
 
@@ -4623,9 +4562,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "AJUDA"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "Suport HLG"
@@ -5073,16 +5009,13 @@ msgstr "Instal·lant"
 msgid "Installing software..."
 msgstr "S’està instal·lant el programari …"
 
-msgid "Instant record"
-msgstr "Registre instantani"
+#
+msgid "Instant recording"
+msgstr "Enregistrament instantani"
 
 #
 msgid "Instant recording location"
 msgstr "Canviar la gravació (durada)"
-
-#
-msgid "Instant recording"
-msgstr "Enregistrament instantani"
 
 #
 msgid "Interface: "
@@ -6516,17 +6449,11 @@ msgstr "Configuració del sintonitzador?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS File"
 
 msgid "PGS file"
 msgstr "PGS file"
@@ -6554,7 +6481,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7400,10 +7327,6 @@ msgid "RF output"
 msgstr "Sortida RF"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7715,6 +7638,9 @@ msgstr "Repeteix"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Substitueix els diàlegs `-` en text de colors per altaveu (com els subtítols de teletext per a deficiències auditives)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Sol·licitud d’informe d’adreça física"
 
@@ -7930,10 +7856,6 @@ msgstr "Federació Russa"
 msgid "Rwanda"
 msgstr "Rwanda"
 
-#
-msgid "S-Video"
-msgstr "S-Vídeo"
-
 msgid "SCPC optimized search range"
 msgstr "Interval de cerca optimitzat per SCPC"
 
@@ -7945,9 +7867,6 @@ msgstr "SCR JESS"
 
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
-
-msgid "SDR"
-msgstr "SDR"
 
 #
 msgid "SINGLE LAYER DVD"
@@ -7961,17 +7880,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "SRT Fila"
-
 msgid "SRT file"
 msgstr "SRT fila"
-
-msgid "SSA File"
-msgstr "SSA Fila"
 
 msgid "SSA file"
 msgstr "SSA fila"
@@ -8394,6 +8304,9 @@ msgstr "Selecciona el canal "
 #
 msgid "Select channel to record from"
 msgstr "Selecciona el canal a gravar"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Seleccioneu la destinació de la còpia per a:"
@@ -11013,12 +10926,12 @@ msgstr "S’ha completat l’actualització. Voleu reiniciar el receptor?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "No s’ha pogut actualitzar. El receptor no té connexió a Internet que funciona."
 
-msgid "Update has completed."
-msgstr "S’ha finalitzat l’actualització."
-
 #
 msgid "Update feed not available."
 msgstr "Actualització no disponible."
+
+msgid "Update has completed."
+msgstr "S’ha finalitzat l’actualització."
 
 #
 msgid "Updating"
@@ -11212,9 +11125,6 @@ msgstr "Connexió VLAN"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (introducció del tràiler)"
-
-msgid "VOB File"
-msgstr "Fitxer VOB"
 
 msgid "VOB file"
 msgstr "Fitxer VOB"
@@ -11874,21 +11784,8 @@ msgstr "L’escriptura ha fallat!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Escriviu a /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "SI"
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12040,10 +11937,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "No heu seleccionat cap canal per enregistrar-lo."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Heu d’esperar% s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12784,10 +12680,6 @@ msgid "mins"
 msgstr "minuts"
 
 #
-msgid "minutes"
-msgstr "minuts"
-
-#
 msgid "month"
 msgstr "mes"
 
@@ -12819,10 +12711,6 @@ msgstr "pel·lícula / drama (general)"
 msgid "multi"
 msgstr "multi"
 
-#
-msgid "multinorm"
-msgstr "multinorma"
-
 msgid "music/ballet/dance (general)"
 msgstr "música / ballet / ball (general)"
 
@@ -12835,6 +12723,10 @@ msgstr "natura / animals / entorn"
 #
 msgid "never"
 msgstr "mai"
+
+#, fuzzy
+msgid "new line"
+msgstr "Dues línies"
 
 msgid "new media"
 msgstr "nou media"
@@ -12904,6 +12796,11 @@ msgid "not_tested"
 msgstr "no_testat"
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "No facis res"
+
+#
 msgid "nothing connected"
 msgstr "res connectat"
 
@@ -12924,6 +12821,9 @@ msgstr "desactivat o wpa2 activat"
 
 msgid "offset is"
 msgstr "desactivat està"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -13024,9 +12924,6 @@ msgstr "revertir per data"
 msgid "rewind to the previous chapter"
 msgstr "rebobina al capítol anterior"
 
-msgid "rgb"
-msgstr "rgb"
-
 #
 msgid "right"
 msgstr "dreta"
@@ -13055,10 +12952,6 @@ msgstr "estat de la recerca"
 
 msgid "science fiction/fantasy/horror"
 msgstr "ciència ficció / fantasia / terror"
-
-#
-msgid "seconds"
-msgstr "segons"
 
 #
 msgid "select CAId's"
@@ -13165,6 +13058,9 @@ msgstr "qüestions socials / polítiques / economia (general)"
 
 msgid "social/spiritual science"
 msgstr "ciències socials / espirituals"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "events especials"
