--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -22,11 +22,6 @@ msgid ""
 msgstr ""
 "\n"
 "Efter tryk på OK, vent venligst!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Konflikt detektion deaktiveret!"
 
 #
 msgid ""
@@ -384,10 +379,6 @@ msgstr[1] "%s  opdateringer tilgængelige"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 #, fuzzy
 msgid "(VU+ type)"
 msgstr "DVB type"
@@ -460,32 +451,18 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 msgid "12V output"
 msgstr "12V udgang"
-
-msgid "12bit"
-msgstr ""
 
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 Panscan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -503,6 +480,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Vis infoinje"
 
 msgid "20 MB/s"
 msgstr ""
@@ -542,19 +524,6 @@ msgstr "3d tilstand"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -589,9 +558,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 #
 msgid "9"
@@ -753,10 +719,6 @@ msgstr ""
 
 msgid "AGC:"
 msgstr "AGC:"
-
-#, fuzzy
-msgid "ASS File"
-msgstr "ASS fil"
 
 msgid "ASS file"
 msgstr "ASS fil"
@@ -1412,10 +1374,6 @@ msgstr "Installationen er færdig"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-#
-msgid "Automatic"
-msgstr "Automatisk"
-
 msgid "Automatic Scan"
 msgstr "Automatisk Skan"
 
@@ -1459,15 +1417,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 #
 msgid "Back"
@@ -1744,10 +1693,6 @@ msgstr "CI port: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2287,6 +2232,9 @@ msgstr "Konfigurer på hvilke enheder at sletning i baggrunden funktionen skal b
 msgid "Configure remote control type"
 msgstr "Konfigurer fjernbetjeningstypen"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Konfigurer DiSEqC typen for denne LNB"
 
@@ -2558,6 +2506,9 @@ msgstr "Konfigurer hvilken video forbindelse der vil blive brugt."
 msgid "Configuring"
 msgstr "Konfigurerer"
 
+msgid "Conflict detection disabled!"
+msgstr "Konflikt detektion deaktiveret!"
+
 msgid "Conflict not resolved!"
 msgstr "Konflikt ikke løst!"
 
@@ -2803,10 +2754,6 @@ msgstr "Tjekkisk"
 #
 msgid "D"
 msgstr "D"
-
-#, fuzzy
-msgid "DAC"
-msgstr "PDC"
 
 #
 msgid "DHCP"
@@ -3433,9 +3380,6 @@ msgstr "Vil du hente opdateringer til din receiver %s ?"
 msgid "Do you want to update your receiver?"
 msgstr "Vil du opdatere din receiver?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3618,10 +3562,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Elektronisk Program Guide"
-
-#, fuzzy
-msgid "Embedded"
-msgstr "indlejret"
 
 msgid "Emergency"
 msgstr ""
@@ -4452,6 +4392,9 @@ msgstr "Fra"
 msgid "Frontprocessor version: %s"
 msgstr "Frontprocessor version: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
 msgid "Full screen"
@@ -4688,9 +4631,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4715,9 +4655,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC indstillinger "
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ikke supporteret"
@@ -4727,9 +4664,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr "HD1100/HD1200/HD1265/et7x00/et8500/et7000mini"
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -5188,16 +5122,13 @@ msgstr "Installerer"
 msgid "Installing software..."
 msgstr "Installerer software..."
 
-msgid "Instant record"
-msgstr "Øjeblikkelig optagelse"
+#
+msgid "Instant recording"
+msgstr "Hurtig optagelse"
 
 #
 msgid "Instant recording location"
 msgstr "Umiddelbar optagelses placering"
-
-#
-msgid "Instant recording"
-msgstr "Hurtig optagelse"
 
 #
 msgid "Interface: "
@@ -6683,19 +6614,11 @@ msgstr "Overskriv konfigurations filer"
 msgid "PAL"
 msgstr "PAL"
 
-#, fuzzy
-msgid "PCM"
-msgstr "PDC"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-#, fuzzy
-msgid "PGS File"
-msgstr "PGS fil"
 
 msgid "PGS file"
 msgstr "PGS fil"
@@ -6724,7 +6647,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7593,10 +7516,6 @@ msgid "RF output"
 msgstr "RF Udgang"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7917,6 +7836,9 @@ msgstr "Gentagelser"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Erstat `- `  i dialoger med farvet tekst per speaker (lidt ligesom teletekst undertekster for hørehæmmede)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 #, fuzzy
 msgid "Request for physical address report"
 msgstr "TV fysisk adresse angivelse"
@@ -8141,10 +8063,6 @@ msgstr "Fan tilstand"
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimeret søgerækkevide"
 
@@ -8158,11 +8076,6 @@ msgid "SCR Unicable"
 msgstr ""
 
 #
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
-#
 msgid "SINGLE LAYER DVD"
 msgstr "DVD-R"
 
@@ -8174,19 +8087,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-#, fuzzy
-msgid "SRT File"
-msgstr "SRT fil"
-
 msgid "SRT file"
 msgstr "SRT fil"
-
-#, fuzzy
-msgid "SSA File"
-msgstr "SSA fil"
 
 msgid "SSA file"
 msgstr "SSA fil"
@@ -8615,6 +8517,9 @@ msgstr "Vælg kanal"
 #
 msgid "Select channel to record from"
 msgstr "Vælg optagekanal"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Vælg kopi destination for"
@@ -11345,12 +11250,12 @@ msgstr "Opdatering færdig. Vil du genstarte din receiver?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Opdatering fejlede. Din receiver har ikke en fungerende internet forbindelse."
 
-msgid "Update has completed."
-msgstr "Opdatering er færdiggjort."
-
 #
 msgid "Update feed not available."
 msgstr "Opdateringsservice er ikke tilgengælig."
+
+msgid "Update has completed."
+msgstr "Opdatering er færdiggjort."
 
 #
 msgid "Updating"
@@ -11548,10 +11453,6 @@ msgstr "LAN Forbindelse"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-#, fuzzy
-msgid "VOB File"
-msgstr "VOB fil"
 
 msgid "VOB file"
 msgstr "VOB fil"
@@ -12232,21 +12133,8 @@ msgstr "Skrivning mislykkedes!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Gem til /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr "JA"
-
-#
-msgid "YPbPr"
-msgstr "Komponent"
 
 #
 msgid "Year"
@@ -12395,10 +12283,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Du har ikke valgt en kanal at optage fra"
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Du må vente %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13157,10 +13044,6 @@ msgid "mins"
 msgstr "min"
 
 #
-msgid "minutes"
-msgstr "minutter"
-
-#
 msgid "month"
 msgstr "måned"
 
@@ -13192,10 +13075,6 @@ msgstr "film/drama"
 msgid "multi"
 msgstr "multi"
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "musik/ballet/dans"
 
@@ -13208,6 +13087,11 @@ msgstr "natur/dyr/omverdenen"
 #
 msgid "never"
 msgstr "aldrig"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Vis infoinje"
 
 msgid "new media"
 msgstr "nyt medie"
@@ -13279,6 +13163,11 @@ msgid "not_tested"
 msgstr "Ikke_testet"
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Gør intet"
+
+#
 msgid "nothing connected"
 msgstr "Intet tilsluttet"
 
@@ -13299,6 +13188,9 @@ msgstr "fra eller wpa2 til"
 
 msgid "offset is"
 msgstr "offset er"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -13399,9 +13291,6 @@ msgstr "omvendt dato"
 msgid "rewind to the previous chapter"
 msgstr "kør tilbage til forrige kapitel"
 
-msgid "rgb"
-msgstr "rgb"
-
 #
 msgid "right"
 msgstr "højre"
@@ -13433,10 +13322,6 @@ msgstr "søge status"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasy/gys"
-
-#
-msgid "seconds"
-msgstr "sekunder"
 
 #
 msgid "select CAId's"
@@ -13543,6 +13428,9 @@ msgstr "social/politiske emner/økonomi"
 
 msgid "social/spiritual science"
 msgstr "social/spirituel science"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "special begivenheder"
