--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -19,10 +19,6 @@ msgid ""
 msgstr ""
 "\n"
 "After pressing OK, please wait!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 msgid ""
 "\n"
@@ -362,10 +358,6 @@ msgstr[1] "%s updated packages available"
 msgid "%s%d min"
 msgstr ""
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -429,29 +421,17 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 msgid "12V output"
 msgstr "12V output"
 
-msgid "12bit"
-msgstr ""
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -467,6 +447,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Show info line"
 
 msgid "20 MB/s"
 msgstr ""
@@ -504,18 +488,6 @@ msgstr "3d mode"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -544,9 +516,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 msgid "9"
 msgstr "9"
@@ -690,9 +659,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1265,9 +1231,6 @@ msgstr "Installation has completed."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-msgid "Automatic"
-msgstr "Automatic"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1305,15 +1268,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 msgid "Back"
 msgstr "Back"
@@ -1558,9 +1512,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr ""
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Cable"
@@ -2038,6 +1989,9 @@ msgstr "Configure on which devices the background delete option should be used."
 msgid "Configure remote control type"
 msgstr "Configure remote control type"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configure the DiSEqC mode for this LNB."
 
@@ -2293,6 +2247,9 @@ msgstr "Configures which video output connector will be used."
 msgid "Configuring"
 msgstr "Configuring"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2504,9 +2461,6 @@ msgstr "Czech"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3051,9 +3005,6 @@ msgstr "Do you want to update your receiver to %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Do you want to update your receiver?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3209,9 +3160,6 @@ msgstr ""
 
 msgid "Electronic Program Guide"
 msgstr "Electronic Program Guide"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -3948,6 +3896,9 @@ msgstr "From:"
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
 msgid "Full screen"
@@ -4167,9 +4118,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4191,9 +4139,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr ""
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "not supported"
@@ -4202,9 +4147,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -4621,14 +4563,11 @@ msgstr "Installing"
 msgid "Installing software..."
 msgstr "Installing software..."
 
-msgid "Instant record"
-msgstr ""
+msgid "Instant recording"
+msgstr "Instant recording"
 
 msgid "Instant recording location"
 msgstr "Instant recording location"
-
-msgid "Instant recording"
-msgstr "Instant recording"
 
 msgid "Interface: "
 msgstr "Interface: "
@@ -5926,16 +5865,10 @@ msgstr "Overwrite configuration files?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -5963,7 +5896,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6710,9 +6643,6 @@ msgstr ""
 msgid "RF output"
 msgstr "RF output"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -6983,6 +6913,9 @@ msgstr "Repeats"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 #, fuzzy
 msgid "Request for physical address report"
 msgstr "TV physical address report"
@@ -7178,9 +7111,6 @@ msgstr ""
 msgid "Rwanda"
 msgstr ""
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -7193,10 +7123,6 @@ msgstr ""
 msgid "SCR Unicable"
 msgstr ""
 
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "SINGLE LAYER DVD"
 
@@ -7206,16 +7132,7 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -7594,6 +7511,9 @@ msgstr ""
 
 msgid "Select channel to record from"
 msgstr "Select channel to record from"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Select copy destination for:"
@@ -10008,11 +9928,11 @@ msgstr "Update completed. Do you want to reboot your receiver?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Update failed. Your receiver does not have a working internet connection."
 
-msgid "Update has completed."
-msgstr "Update has completed."
-
 msgid "Update feed not available."
 msgstr "Update feed not available."
+
+msgid "Update has completed."
+msgstr "Update has completed."
 
 msgid "Updating"
 msgstr "Updating"
@@ -10190,9 +10110,6 @@ msgstr "LAN connection"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr ""
@@ -10812,20 +10729,8 @@ msgstr "Write failed!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr ""
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Year"
@@ -10960,8 +10865,8 @@ msgid "You didn't select a channel to record from."
 msgstr "You didn't select a channel to record from."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "You have to wait %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11632,9 +11537,6 @@ msgstr "menu"
 msgid "mins"
 msgstr "mins"
 
-msgid "minutes"
-msgstr "minutes"
-
 msgid "month"
 msgstr "month"
 
@@ -11662,9 +11564,6 @@ msgstr "movie/drama (general)"
 msgid "multi"
 msgstr ""
 
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "music/ballet/dance (general)"
 
@@ -11676,6 +11575,10 @@ msgstr "nature/animals/environment"
 
 msgid "never"
 msgstr "never"
+
+#, fuzzy
+msgid "new line"
+msgstr "Show info line"
 
 msgid "new media"
 msgstr "new media"
@@ -11739,6 +11642,10 @@ msgstr "invalid type"
 msgid "not_tested"
 msgstr ""
 
+#, fuzzy
+msgid "nothing"
+msgstr "Do nothing"
+
 msgid "nothing connected"
 msgstr "nothing connected"
 
@@ -11756,6 +11663,9 @@ msgstr ""
 
 msgid "offset is"
 msgstr "offset is"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "on"
@@ -11841,9 +11751,6 @@ msgstr "reverse by date"
 msgid "rewind to the previous chapter"
 msgstr "rewind to the previous chapter"
 
-msgid "rgb"
-msgstr ""
-
 msgid "right"
 msgstr "right"
 
@@ -11873,9 +11780,6 @@ msgstr "scan state"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasy/horror"
-
-msgid "seconds"
-msgstr "seconds"
 
 msgid "select CAId's"
 msgstr "select CAId's"
@@ -11973,6 +11877,9 @@ msgstr "social/political issues/economics (general)"
 
 msgid "social/spiritual science"
 msgstr "social/spiritual science"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "special events"
