--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-05-25 18:08+0200\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -23,11 +23,6 @@ msgid ""
 msgstr ""
 "\n"
 "Después de pulsar OK, espere!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Desactivada la deteccion de conflictos!"
 
 #
 msgid ""
@@ -392,10 +387,6 @@ msgstr[1] "%s actualizaciones disponibles."
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(tipo VU+)"
 
@@ -467,23 +458,13 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 #
 msgid "12V output"
 msgstr "12V salida"
 
-msgid "12bit"
-msgstr "12bit"
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -492,10 +473,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -515,6 +492,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Dos lineas"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -554,19 +536,6 @@ msgstr "3d mode"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -601,9 +570,6 @@ msgstr "8"
 #
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 #
 msgid "9"
@@ -764,9 +730,6 @@ msgstr "ADQUISICIÓN DE TSID / ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "Archivo ASS"
 
 msgid "ASS file"
 msgstr "ASS file"
@@ -1403,10 +1366,6 @@ msgstr "Instalación automática completada"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Instalación automática por favor espere a que los paquetes se actualizan"
 
-#
-msgid "Automatic"
-msgstr "Automático"
-
 msgid "Automatic Scan"
 msgstr "Búsqueda automática"
 
@@ -1448,15 +1407,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 #
 msgid "Back"
@@ -1722,10 +1672,6 @@ msgstr "Ranura CI:"
 
 msgid "CPU: "
 msgstr "CPU: "
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2252,6 +2198,9 @@ msgstr "Configure en qué dispositivos debe usarse la opción de borrado de fond
 msgid "Configure remote control type"
 msgstr "Tipo de control de adultos"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configure el modo DiSEqC para este LNB."
 
@@ -2519,6 +2468,9 @@ msgstr "Configura el conector de salida de video que se utilizará."
 msgid "Configuring"
 msgstr "Configurando"
 
+msgid "Conflict detection disabled!"
+msgstr "Desactivada la deteccion de conflictos!"
+
 msgid "Conflict not resolved!"
 msgstr "Conflicto no resuelto"
 
@@ -2758,9 +2710,6 @@ msgstr "Czechia"
 #
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 #
 msgid "DHCP"
@@ -3359,9 +3308,6 @@ msgstr "¿Quiere descargar la imagen a %s?"
 msgid "Do you want to update your receiver?"
 msgstr "¿Desea actualizar su receptor?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3536,9 +3482,6 @@ msgstr "El Salvador"
 #
 msgid "Electronic Program Guide"
 msgstr "Guía de Programación Electrónica"
-
-msgid "Embedded"
-msgstr "Incrustado"
 
 msgid "Emergency"
 msgstr " Emergencia "
@@ -4351,6 +4294,9 @@ msgstr "De"
 msgid "Frontprocessor version: %s"
 msgstr "Versión de FrontProcessor:% s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Pantalla completa"
@@ -4586,9 +4532,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI Colordepth"
 
@@ -4610,9 +4553,6 @@ msgstr "HDMI-CEC Fuente Inactiva"
 msgid "HDMI-CEC setup"
 msgstr "Configuración de HDMI-CEC"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "Soporte HDR10"
 
@@ -4621,9 +4561,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "Ayuda"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "Soporte de HLG"
@@ -5068,16 +5005,13 @@ msgstr "Instalando"
 msgid "Installing software..."
 msgstr "Instalando software …"
 
-msgid "Instant record"
-msgstr "Registro instantáneo"
+#
+msgid "Instant recording"
+msgstr "Grabación instantánea"
 
 #
 msgid "Instant recording location"
 msgstr "Ubicación de grabación instantánea"
-
-#
-msgid "Instant recording"
-msgstr "Grabación instantánea"
 
 #
 msgid "Interface: "
@@ -6511,17 +6445,11 @@ msgstr "¿Sobreescribir archivos de configuración?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "Archivo PGS"
 
 msgid "PGS file"
 msgstr "Archivo PGS"
@@ -6548,7 +6476,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7390,10 +7318,6 @@ msgid "RF output"
 msgstr "Salida de antena"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7708,6 +7632,9 @@ msgstr "Repeticiones"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Reemplace `-` en diálogos con texto de color por altavoz (como los subtítulos de teletexto para personas con discapacidad auditiva)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Solicitud de informe de dirección física"
 
@@ -7916,10 +7843,6 @@ msgstr "Federación Rusa"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "Alcance de búsqueda optimizado SCPC"
 
@@ -7932,10 +7855,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-#
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "DVD CAPA SIMPLE"
 
@@ -7947,17 +7866,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "Archivo SRT"
-
 msgid "SRT file"
 msgstr "Archivo SRT"
-
-msgid "SSA File"
-msgstr "Archivo SSA"
 
 msgid "SSA file"
 msgstr "Archivo SSA"
@@ -8375,6 +8285,9 @@ msgstr "Seleccionar canal"
 #
 msgid "Select channel to record from"
 msgstr "Seleccione canal a grabar"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Seleccione el destino de la copia para:"
@@ -11002,11 +10915,11 @@ msgstr "Actualización completada. ¿Desea reiniciar su receptor?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Error en la actualización. Su receptor no tiene una conexión a Internet de trabajo."
 
-msgid "Update has completed."
-msgstr "Se ha completado la actualización."
-
 msgid "Update feed not available."
 msgstr "Update feed no disponible."
+
+msgid "Update has completed."
+msgstr "Se ha completado la actualización."
 
 #
 msgid "Updating"
@@ -11200,9 +11113,6 @@ msgstr "Conexión VLAN"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (trailer intro)"
-
-msgid "VOB File"
-msgstr "Archivo VOB"
 
 msgid "VOB file"
 msgstr "Archivo VOB"
@@ -11867,21 +11777,8 @@ msgstr "¡Falló la escritura!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Escribir en /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "SI"
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12035,10 +11932,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "No ha seleccionado un canal desde el cual grabar."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Tiene que esperar %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12780,10 +12676,6 @@ msgid "mins"
 msgstr "mins"
 
 #
-msgid "minutes"
-msgstr "minutos"
-
-#
 msgid "month"
 msgstr "mes"
 
@@ -12815,10 +12707,6 @@ msgstr "Película / drama (general)"
 msgid "multi"
 msgstr "multi"
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "Música / ballet / danza (general)"
 
@@ -12831,6 +12719,11 @@ msgstr "Naturaleza / animales / medio ambiente"
 #
 msgid "never"
 msgstr "nunca"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Dos lineas"
 
 msgid "new media"
 msgstr "nuevos medios de comunicacion"
@@ -12899,6 +12792,11 @@ msgid "not_tested"
 msgstr "no probado"
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "no hacer nada"
+
+#
 msgid "nothing connected"
 msgstr "nada conectado"
 
@@ -12919,6 +12817,9 @@ msgstr "Apagado o wpa2 en"
 
 msgid "offset is"
 msgstr "El desplazamiento es"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -13019,9 +12920,6 @@ msgstr "Invertir por fecha"
 msgid "rewind to the previous chapter"
 msgstr "vuelva al capítulo anterior"
 
-msgid "rgb"
-msgstr "rgb"
-
 #
 msgid "right"
 msgstr "derecha"
@@ -13050,10 +12948,6 @@ msgstr "estado de la búsqueda"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Ciencia ficción / fantasía / horror"
-
-#
-msgid "seconds"
-msgstr "segundos"
 
 #
 msgid "select CAId's"
@@ -13159,6 +13053,9 @@ msgstr "Cuestiones sociales / políticas / economía (general)"
 
 msgid "social/spiritual science"
 msgstr "Ciencia social / espiritual"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "especial eventos"
