--- a/po/fa.po
+++ b/po/fa.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -22,10 +22,6 @@ msgid ""
 msgstr ""
 "\n"
 "بعد از فشار دادن دکمه OK لطفا صبر کنید"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 msgid ""
 "\n"
@@ -353,10 +349,6 @@ msgstr[0] "به روز رسانی های در دسترس"
 msgid "%s%d min"
 msgstr "%s%d دقیقه"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(نوع ووپلاس)"
 
@@ -420,29 +412,17 @@ msgstr "10 مگ بر ثانیه"
 msgid "100 MB/s"
 msgstr "100 مگ بر ثانیه"
 
-msgid "10bit"
-msgstr "10 بیت"
-
 msgid "12V output"
 msgstr "خروجی 12 ولت"
 
-msgid "12bit"
-msgstr "12 بیت"
-
 msgid "13 V"
 msgstr "13 ولت"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -458,6 +438,10 @@ msgstr "18 ولت"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "نمایش اطلاعات"
 
 msgid "20 MB/s"
 msgstr "20 مگ بر ثانیه"
@@ -495,18 +479,6 @@ msgstr "حالت 3 بعدی"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -535,9 +507,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr "8 بیت"
 
 msgid "9"
 msgstr "9"
@@ -674,10 +643,6 @@ msgstr ""
 
 msgid "AGC:"
 msgstr ""
-
-#, fuzzy
-msgid "ASS File"
-msgstr "فایل ASS"
 
 msgid "ASS file"
 msgstr "فایل ASS"
@@ -1273,9 +1238,6 @@ msgstr "محاسبه کامل شد"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-msgid "Automatic"
-msgstr "خودکار"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1314,15 +1276,6 @@ msgstr "مقدار خطا"
 
 msgid "BER:"
 msgstr "مقدار خطا:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 msgid "Back"
 msgstr "بازگشت"
@@ -1572,9 +1525,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr ""
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "کابل"
@@ -2066,6 +2016,9 @@ msgstr ""
 msgid "Configure remote control type"
 msgstr "نوع کنترل والدین"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr ""
 
@@ -2323,6 +2276,9 @@ msgstr ""
 msgid "Configuring"
 msgstr "پیکربندی"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2540,9 +2496,6 @@ msgstr "چکوسلواکی"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3097,9 +3050,6 @@ msgstr "آیا میخواهید ایمیج را در %s دانلود کنید ؟
 msgid "Do you want to update your receiver?"
 msgstr ""
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3258,9 +3208,6 @@ msgstr ""
 
 msgid "Electronic Program Guide"
 msgstr "راهنمای الکترونیکی برنامه"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4006,6 +3953,9 @@ msgstr "از:"
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
 msgid "Full screen"
@@ -4235,9 +4185,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4259,9 +4206,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr ""
 
-msgid "HDR10"
-msgstr ""
-
 msgid "HDR10 support"
 msgstr ""
 
@@ -4269,9 +4213,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 msgid "HLG support"
@@ -4692,15 +4633,12 @@ msgstr "در حال نصب"
 msgid "Installing software..."
 msgstr "در حال نصب نرم افزار..."
 
-msgid "Instant record"
-msgstr ""
-
 #, fuzzy
-msgid "Instant recording location"
+msgid "Instant recording"
 msgstr "مکان ضبط کردن فوری"
 
 #, fuzzy
-msgid "Instant recording"
+msgid "Instant recording location"
 msgstr "مکان ضبط کردن فوری"
 
 msgid "Interface: "
@@ -6026,16 +5964,10 @@ msgstr "بازنویسی فایل های پیکربندی ؟"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6063,7 +5995,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6821,9 +6753,6 @@ msgstr ""
 msgid "RF output"
 msgstr "خروجی RF"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "رادیو"
 
@@ -7102,6 +7031,9 @@ msgstr "تکرار ها"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr ""
 
@@ -7304,9 +7236,6 @@ msgstr ""
 msgid "Rwanda"
 msgstr ""
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -7319,10 +7248,6 @@ msgstr ""
 msgid "SCR Unicable"
 msgstr ""
 
-#, fuzzy
-msgid "SDR"
-msgstr "کیفیت سیگنال"
-
 #
 msgid "SINGLE LAYER DVD"
 msgstr "DVD یک لایه ای"
@@ -7333,16 +7258,7 @@ msgstr "کیفیت سیگنال"
 msgid "SNR:"
 msgstr "کیفیت سیگنال:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -7727,6 +7643,9 @@ msgstr ""
 
 msgid "Select channel to record from"
 msgstr "انتخاب کانال برای ضبط کردن از"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "انتخاب مقصد رونوشت برای:"
@@ -10154,10 +10073,10 @@ msgstr ""
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr ""
 
-msgid "Update has completed."
+msgid "Update feed not available."
 msgstr ""
 
-msgid "Update feed not available."
+msgid "Update has completed."
 msgstr ""
 
 msgid "Updating"
@@ -10334,9 +10253,6 @@ msgid "VLAN connection"
 msgstr "ارتباط VLAN"
 
 msgid "VMGM (intro trailer)"
-msgstr ""
-
-msgid "VOB File"
 msgstr ""
 
 msgid "VOB file"
@@ -10927,20 +10843,8 @@ msgstr ""
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "بله"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "سال"
@@ -11068,7 +10972,7 @@ msgid "You didn't select a channel to record from."
 msgstr ""
 
 #, python-format
-msgid "You have to wait %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
 msgstr ""
 
 #, python-format
@@ -11722,9 +11626,6 @@ msgstr ""
 msgid "mins"
 msgstr "دقیقه"
 
-msgid "minutes"
-msgstr "دقیقه"
-
 msgid "month"
 msgstr "ماه"
 
@@ -11752,9 +11653,6 @@ msgstr ""
 msgid "multi"
 msgstr ""
 
-msgid "multinorm"
-msgstr ""
-
 msgid "music/ballet/dance (general)"
 msgstr ""
 
@@ -11766,6 +11664,10 @@ msgstr ""
 
 msgid "never"
 msgstr "هیچ وقت"
+
+#, fuzzy
+msgid "new line"
+msgstr "نمایش اطلاعات"
 
 msgid "new media"
 msgstr ""
@@ -11827,6 +11729,10 @@ msgstr ""
 msgid "not_tested"
 msgstr ""
 
+#, fuzzy
+msgid "nothing"
+msgstr "خیر ، کاری انجام نشود"
+
 msgid "nothing connected"
 msgstr ""
 
@@ -11843,6 +11749,9 @@ msgid "off or wpa2 on"
 msgstr ""
 
 msgid "offset is"
+msgstr ""
+
+msgid "omit"
 msgstr ""
 
 msgid "on"
@@ -11929,9 +11838,6 @@ msgstr ""
 msgid "rewind to the previous chapter"
 msgstr ""
 
-msgid "rgb"
-msgstr "rgb"
-
 msgid "right"
 msgstr "راست"
 
@@ -11959,9 +11865,6 @@ msgstr ""
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-msgid "seconds"
-msgstr "ثانیه"
 
 msgid "select CAId's"
 msgstr "انتخاب CAId's"
@@ -12058,6 +11961,9 @@ msgid "social/political issues/economics (general)"
 msgstr ""
 
 msgid "social/spiritual science"
+msgstr ""
+
+msgid "space"
 msgstr ""
 
 msgid "special events"
