--- a/po/fr.po
+++ b/po/fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-08-24 20:12+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
@@ -19,11 +19,6 @@ msgid ""
 msgstr ""
 "\n"
 "Après avoir appuyé sur OK, veuillez patienter!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"La détection des conflits est désactivée!"
 
 msgid ""
 "\n"
@@ -370,10 +365,6 @@ msgstr[1] "%s mises à jour disponibles"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(type VU+)"
 
@@ -436,29 +427,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 msgid "12V output"
 msgstr "Sortie 12V"
 
-msgid "12bit"
-msgstr "12bit"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -474,6 +453,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Deux lignes"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -511,18 +494,6 @@ msgstr "Mode 3D"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -549,9 +520,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 msgid "9"
 msgstr "9"
@@ -694,9 +662,6 @@ msgstr "ACQUISITION DE TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "Fichier ASS"
 
 msgid "ASS file"
 msgstr "Fichier ASS"
@@ -1256,9 +1221,6 @@ msgstr "Autoinstallation terminée"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Autoinstallation veuillez attendre que les packages soient mis à jour"
 
-msgid "Automatic"
-msgstr "Automatique"
-
 msgid "Automatic Scan"
 msgstr "Recherche automatique"
 
@@ -1294,15 +1256,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Retour"
@@ -1541,9 +1494,6 @@ msgstr "Slot CI: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Câble"
@@ -2022,6 +1972,9 @@ msgstr "Configure sur quels dispositifs l'option de suppression d'arrière-plan 
 msgid "Configure remote control type"
 msgstr "Configure le type de télécommande"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configure le mode DiSEqC pour cette LNB."
 
@@ -2274,6 +2227,9 @@ msgstr "Configure le type de sortie vidéo qui sera utilisé."
 msgid "Configuring"
 msgstr "Configuration"
 
+msgid "Conflict detection disabled!"
+msgstr "La détection des conflits est désactivée!"
+
 msgid "Conflict not resolved!"
 msgstr "Conflit non résolu!"
 
@@ -2482,9 +2438,6 @@ msgstr "République Tchèque"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3012,9 +2965,6 @@ msgstr "Voulez-vous mettre à jour votre récepteur vers %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Voulez-vous mettre à jour votre récepteur?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominique"
 
@@ -3166,9 +3116,6 @@ msgstr "Le Salvador"
 
 msgid "Electronic Program Guide"
 msgstr "Guide électronique programme (EPG)"
-
-msgid "Embedded"
-msgstr "Embarqué"
 
 msgid "Emergency"
 msgstr "Urgence"
@@ -3910,6 +3857,9 @@ msgstr "De:"
 msgid "Frontprocessor version: %s"
 msgstr "Version du frontprocessor: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Plein écran"
@@ -4122,9 +4072,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "Profondeur de couleurs HDMI"
 
@@ -4146,9 +4093,6 @@ msgstr "HDMI-CEC source Inactive"
 msgid "HDMI-CEC setup"
 msgstr "Configurer HDMI-CEC"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "support HDR10"
 
@@ -4157,9 +4101,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "AIDE"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "support HLG"
@@ -4563,14 +4504,11 @@ msgstr "Installation"
 msgid "Installing software..."
 msgstr "Installation du logiciel..."
 
-msgid "Instant record"
-msgstr "Enregistrement immédiat"
+msgid "Instant recording"
+msgstr "Enregistrement Immédiat"
 
 msgid "Instant recording location"
 msgstr "Emplacement des enregistrements immédiats"
-
-msgid "Instant recording"
-msgstr "Enregistrement Immédiat"
 
 msgid "Interface: "
 msgstr "Interface: "
@@ -5837,17 +5775,11 @@ msgstr "Ecraser les fichiers de configuration?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PID PCR"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "Fichier PGS"
 
 msgid "PGS file"
 msgstr "Fichier PGS"
@@ -5873,7 +5805,8 @@ msgstr "PID PMT"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+#, fuzzy
+msgid "PULSe 4K(mini)"
 msgstr "PULSe 4K"
 
 msgid "Package list update"
@@ -6604,9 +6537,6 @@ msgstr "REC"
 msgid "RF output"
 msgstr "Sortie RF"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -6876,6 +6806,9 @@ msgstr "Répétitions"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Remplacer `- ` dans les dialogues par un texte coloré en fonction de l’intervenant (comme les sous-titres télétexte pour les malentendants)."
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Demande du rapport d’adresse physique"
 
@@ -7061,9 +6994,6 @@ msgstr "Fédération de Russie"
 msgid "Rwanda"
 msgstr "Rwanda"
 
-msgid "S-Video"
-msgstr "S-Vidéo"
-
 msgid "SCPC optimized search range"
 msgstr "Plage de recherche SCPC optimisée"
 
@@ -7076,9 +7006,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "DVD SIMPLE COUCHE"
 
@@ -7088,17 +7015,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "Fichier SRT"
-
 msgid "SRT file"
 msgstr "Fichier SRT"
-
-msgid "SSA File"
-msgstr "Fichier SSA"
 
 msgid "SSA file"
 msgstr "Fichier SSA"
@@ -7469,6 +7387,9 @@ msgstr "Sélectionner une chaîne"
 
 msgid "Select channel to record from"
 msgstr "Sélectionner la chaîne à enregistrer"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Sélectionnez la destination de copie pour:"
@@ -9849,11 +9770,11 @@ msgstr "Mise à jour terminée. Voulez-vous redémarrer votre récepteur?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "La mise à jour a échoué. Votre récepteur ne dispose pas de connexion Internet."
 
-msgid "Update has completed."
-msgstr "La mise à jour est terminée."
-
 msgid "Update feed not available."
 msgstr "MAJ feed non disponible."
+
+msgid "Update has completed."
+msgstr "La mise à jour est terminée."
 
 msgid "Updating"
 msgstr "Mise à jour en cours"
@@ -10027,9 +9948,6 @@ msgstr "Connexion VLAN"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro bande-annonce)"
-
-msgid "VOB File"
-msgstr "Fichier VOB"
 
 msgid "VOB file"
 msgstr "Fichier VOB"
@@ -10638,20 +10556,8 @@ msgstr "Échec d'écriture!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Ecrire dans /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "OUI"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Année"
@@ -10796,8 +10702,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Vous n'avez pas sélectionné une chaîne à enregistrer."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Vous devez attendre %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11461,9 +11367,6 @@ msgstr "Menu"
 msgid "mins"
 msgstr "Mins"
 
-msgid "minutes"
-msgstr "Minutes"
-
 msgid "month"
 msgstr "Mois"
 
@@ -11491,9 +11394,6 @@ msgstr "Film/Théâtre (général)"
 msgid "multi"
 msgstr "multi"
 
-msgid "multinorm"
-msgstr "Multinorme"
-
 msgid "music/ballet/dance (general)"
 msgstr "Musique/Ballet/Danse (général)"
 
@@ -11505,6 +11405,10 @@ msgstr "Nature/Animaux/Environnement"
 
 msgid "never"
 msgstr "Jamais"
+
+#, fuzzy
+msgid "new line"
+msgstr "Deux lignes"
 
 msgid "new media"
 msgstr "Nouveaux médias"
@@ -11566,6 +11470,10 @@ msgstr "frontend non valide"
 msgid "not_tested"
 msgstr "pas_testé"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Ne rien faire"
+
 msgid "nothing connected"
 msgstr "Rien n'est connecté"
 
@@ -11583,6 +11491,9 @@ msgstr "off ou WPA2 on"
 
 msgid "offset is"
 msgstr "Position finale sur"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "Marche"
@@ -11668,9 +11579,6 @@ msgstr "Inverser par date"
 msgid "rewind to the previous chapter"
 msgstr "Retour au chapitre précédant"
 
-msgid "rgb"
-msgstr "RGB"
-
 msgid "right"
 msgstr "droite"
 
@@ -11697,9 +11605,6 @@ msgstr "Etat de la recherche"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Science-fiction/Fantastique/Horreur"
-
-msgid "seconds"
-msgstr "Secondes"
 
 msgid "select CAId's"
 msgstr "Sélectionner CAId's"
@@ -11797,6 +11702,9 @@ msgstr "Questions sociales/Politiques/Economie (général)"
 
 msgid "social/spiritual science"
 msgstr "Science sociale/Spirituelle"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "Évènements spéciaux"
