--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -24,10 +24,6 @@ msgstr ""
 msgid ""
 "\n"
 "After pressing OK, please wait!"
-msgstr ""
-
-msgid ""
-"Conflict detection disabled!"
 msgstr ""
 
 #
@@ -385,10 +381,6 @@ msgstr[1] ""
 msgid "%s%d min"
 msgstr ""
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr ""
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -462,23 +454,13 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "12V útgong"
 
-msgid "12bit"
-msgstr ""
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -487,10 +469,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -510,6 +488,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Infolyne sjen litte"
 
 msgid "20 MB/s"
 msgstr ""
@@ -549,19 +532,6 @@ msgstr ""
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -598,9 +568,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 #
 msgid "9"
@@ -753,9 +720,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1412,10 +1376,6 @@ msgstr ""
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-#
-msgid "Automatic"
-msgstr "Automatysk"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1461,15 +1421,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 #
 msgid "Back"
@@ -1747,10 +1698,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr ""
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2302,6 +2249,9 @@ msgstr ""
 msgid "Configure remote control type"
 msgstr "Alderlik tasjoch type"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr ""
 
@@ -2572,6 +2522,9 @@ msgstr ""
 msgid "Configuring"
 msgstr "Oan it ynstellen"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2818,9 +2771,6 @@ msgstr "Tsjechysk"
 #
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 #
 msgid "DHCP"
@@ -3457,9 +3407,6 @@ msgstr "Wolle jo jo ynstellingen wêrom sette ?"
 msgid "Do you want to update your receiver?"
 msgstr ""
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3645,9 +3592,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Elektroniske Programma Gids"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4476,6 +4420,9 @@ msgstr ""
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr ""
@@ -4722,9 +4669,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4746,9 +4690,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr ""
 
-msgid "HDR10"
-msgstr ""
-
 msgid "HDR10 support"
 msgstr ""
 
@@ -4756,9 +4697,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 msgid "HLG support"
@@ -5223,18 +5161,15 @@ msgstr "Oan it ynstallearjen"
 msgid "Installing software..."
 msgstr "Software oan it ynstallearjen..."
 
-msgid "Instant record"
-msgstr ""
+#
+#, fuzzy
+msgid "Instant recording"
+msgstr "In direct opnimmen"
 
 #
 #, fuzzy
 msgid "Instant recording location"
 msgstr "feroarje opnim tiiden"
-
-#
-#, fuzzy
-msgid "Instant recording"
-msgstr "In direct opnimmen"
 
 #
 msgid "Interface: "
@@ -6750,16 +6685,10 @@ msgstr "Tuner ynstellingen"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr ""
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6790,7 +6719,7 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7665,10 +7594,6 @@ msgid "RF output"
 msgstr "RF Ynstellingen"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7994,6 +7919,9 @@ msgstr "Herhellingen"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr ""
 
@@ -8217,10 +8145,6 @@ msgstr ""
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr "S Video"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -8234,11 +8158,6 @@ msgid "SCR Unicable"
 msgstr ""
 
 #
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
-#
 msgid "SINGLE LAYER DVD"
 msgstr ""
 
@@ -8250,16 +8169,7 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -8709,6 +8619,9 @@ msgstr ""
 #
 msgid "Select channel to record from"
 msgstr "Kies kanaal om fan op te nimmen"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr ""
@@ -11443,11 +11356,11 @@ msgstr ""
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr ""
 
-msgid "Update has completed."
-msgstr ""
-
 #
 msgid "Update feed not available."
+msgstr ""
+
+msgid "Update has completed."
 msgstr ""
 
 #
@@ -11658,9 +11571,6 @@ msgstr "Doel"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (yntro fan film)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr ""
@@ -12330,21 +12240,8 @@ msgstr "Skriuw flater!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr ""
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12484,10 +12381,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr ""
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Jo moatte %s wachtsje!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13224,10 +13120,6 @@ msgid "mins"
 msgstr "min"
 
 #
-msgid "minutes"
-msgstr "minuten"
-
-#
 msgid "month"
 msgstr "maand"
 
@@ -13259,10 +13151,6 @@ msgstr ""
 msgid "multi"
 msgstr ""
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr ""
 
@@ -13275,6 +13163,11 @@ msgstr ""
 #
 msgid "never"
 msgstr "nea"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Infolyne sjen litte"
 
 msgid "new media"
 msgstr ""
@@ -13346,6 +13239,11 @@ msgid "not_tested"
 msgstr ""
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "doch neat"
+
+#
 msgid "nothing connected"
 msgstr "neat anslúten"
 
@@ -13365,6 +13263,9 @@ msgid "off or wpa2 on"
 msgstr ""
 
 msgid "offset is"
+msgstr ""
+
+msgid "omit"
 msgstr ""
 
 #
@@ -13466,9 +13367,6 @@ msgstr ""
 msgid "rewind to the previous chapter"
 msgstr "werom spile nei it foarige haadstik"
 
-msgid "rgb"
-msgstr ""
-
 #
 msgid "right"
 msgstr "rjochts"
@@ -13499,10 +13397,6 @@ msgstr "sykjen status"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-#
-msgid "seconds"
-msgstr "seconden"
 
 #
 msgid "select CAId's"
@@ -13609,6 +13503,9 @@ msgid "social/political issues/economics (general)"
 msgstr ""
 
 msgid "social/spiritual science"
+msgstr ""
+
+msgid "space"
 msgstr ""
 
 msgid "special events"
