--- a/po/gl.po
+++ b/po/gl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-02-20 16:11+0100\n"
 "Last-Translator: Luis A. Martínez <luis.a.martinez@gmail.com>\n"
 "Language-Team: LAMS\n"
@@ -23,11 +23,6 @@ msgid ""
 msgstr ""
 "\n"
 "Despois de pulsar OK, espera!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Desactivada a detección de conflitos!"
 
 #
 msgid ""
@@ -393,10 +388,6 @@ msgstr[1] "%s actualizacións dispoñibles"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(tipo VU+)"
 
@@ -468,23 +459,13 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 #
 msgid "12V output"
 msgstr "saída de 12V"
 
-msgid "12bit"
-msgstr "12bit"
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -493,10 +474,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -516,6 +493,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Dúas liñas"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -555,19 +537,6 @@ msgstr "modo 3d"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -602,9 +571,6 @@ msgstr "8"
 #
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 #
 msgid "9"
@@ -765,9 +731,6 @@ msgstr "ADQUIRINDO TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "Ficheiro ASS"
 
 msgid "ASS file"
 msgstr "Ficheiro ASS"
@@ -1406,10 +1369,6 @@ msgstr "Instalación automática completada"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Instalación automática. Por favor, espera a que se actualicen os paquetes"
 
-#
-msgid "Automatic"
-msgstr "Automático"
-
 msgid "Automatic Scan"
 msgstr "Escaneo automático"
 
@@ -1451,15 +1410,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 #
 msgid "Back"
@@ -1725,10 +1675,6 @@ msgstr "Rañura CI: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2262,6 +2208,9 @@ msgstr "Configurar en que dispositivos debe usarse a opción de borrado de fondo
 msgid "Configure remote control type"
 msgstr "Configurar tipo de control remoto"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configurar o modo DiSEqC para este LNB."
 
@@ -2529,6 +2478,9 @@ msgstr "Configurar o conector de saída de vídeo que se vai usar."
 msgid "Configuring"
 msgstr "Configurando"
 
+msgid "Conflict detection disabled!"
+msgstr "Desactivada a detección de conflitos!"
+
 msgid "Conflict not resolved!"
 msgstr "Conflito non resolto!"
 
@@ -2768,9 +2720,6 @@ msgstr "República Checa"
 #
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 #
 msgid "DHCP"
@@ -3369,9 +3318,6 @@ msgstr "Queres actualizar o teu receptor a %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Queres actualizar o teu receptor?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3546,9 +3492,6 @@ msgstr "O Salvador"
 #
 msgid "Electronic Program Guide"
 msgstr "Guía de Programación Electrónica"
-
-msgid "Embedded"
-msgstr "Incrustado"
 
 msgid "Emergency"
 msgstr "Emerxencia"
@@ -4362,6 +4305,9 @@ msgstr "De:"
 msgid "Frontprocessor version: %s"
 msgstr "Versión do FrontProcessor: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Pantalla completa"
@@ -4597,9 +4543,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "Profundidade de cor HDMI"
 
@@ -4621,9 +4564,6 @@ msgstr "Fonte inactiva HDMI-CEC"
 msgid "HDMI-CEC setup"
 msgstr "Configuración de HDMI-CEC"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "Soporte HDR10"
 
@@ -4632,9 +4572,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "AXUDA"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "Soporte HLG"
@@ -5079,16 +5016,13 @@ msgstr "Instalando"
 msgid "Installing software..."
 msgstr "Instalando software…"
 
-msgid "Instant record"
+#
+msgid "Instant recording"
 msgstr "Gravación instantánea"
 
 #
 msgid "Instant recording location"
 msgstr "Localización da gravación instantánea"
-
-#
-msgid "Instant recording"
-msgstr "Gravación instantánea"
 
 #
 msgid "Interface: "
@@ -6523,17 +6457,11 @@ msgstr "Sobreescribir os ficheiros de configuración?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "Ficheiro PGS"
 
 msgid "PGS file"
 msgstr "Ficheiro PGS"
@@ -6560,7 +6488,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7402,10 +7330,6 @@ msgid "RF output"
 msgstr "Saída de RF"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7720,6 +7644,9 @@ msgstr "Repeticións"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Substituír `-` en diálogos por texto en diferentes cores para cada falante (como os subtítulos de teletexto para persoas con discapacidade auditiva)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Solicitude de informe de enderezo físico"
 
@@ -7928,10 +7855,6 @@ msgstr "Federación Rusa"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "Rango de busca optimizado SCPC"
 
@@ -7944,10 +7867,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-#
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "DVD CAPA SIMPLE"
 
@@ -7959,17 +7878,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "Ficheiro SRT"
-
 msgid "SRT file"
 msgstr "Ficheiro SRT"
-
-msgid "SSA File"
-msgstr "Ficheiro SSA"
 
 msgid "SSA file"
 msgstr "Ficheiro SSA"
@@ -8387,6 +8297,9 @@ msgstr "Seleccionar canle"
 #
 msgid "Select channel to record from"
 msgstr "Seleccionar canle para gravar"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Seleccionar o destino da copia para:"
@@ -11011,11 +10924,11 @@ msgstr "Completouse a instalación. Quere reiniciar o receptor?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Fallou a actualización. O receptor non ten unha conexión a internet en funcionamento."
 
-msgid "Update has completed."
-msgstr "Completouse a instalación."
-
 msgid "Update feed not available."
 msgstr "Fonte de actualizacións non dispoñible."
+
+msgid "Update has completed."
+msgstr "Completouse a instalación."
 
 #
 msgid "Updating"
@@ -11209,9 +11122,6 @@ msgstr "Conexión VLAN"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (trailer intro)"
-
-msgid "VOB File"
-msgstr "Ficheiro VOB"
 
 msgid "VOB file"
 msgstr "Ficheiro VOB"
@@ -11876,21 +11786,8 @@ msgstr "Erro de escritura!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Escribir en /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "SI"
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12045,10 +11942,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Non seleccionaches unha canle para gravar."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Tes que esperar %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12794,10 +12690,6 @@ msgid "mins"
 msgstr "mins"
 
 #
-msgid "minutes"
-msgstr "minutos"
-
-#
 msgid "month"
 msgstr "mes"
 
@@ -12829,10 +12721,6 @@ msgstr "película/drama (xeral)"
 msgid "multi"
 msgstr "multi"
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "música/ballet/danza (xeral)"
 
@@ -12845,6 +12733,11 @@ msgstr "natureza/animais/medio ambiente"
 #
 msgid "never"
 msgstr "nunca"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Dúas liñas"
 
 msgid "new media"
 msgstr "novos medios de comunicación"
@@ -12914,6 +12807,11 @@ msgid "not_tested"
 msgstr "non_probado"
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Non facer nada"
+
+#
 msgid "nothing connected"
 msgstr "nada conectado"
 
@@ -12934,6 +12832,9 @@ msgstr "apagado ou wpa2 acendido"
 
 msgid "offset is"
 msgstr "o desplazamento é"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -13034,9 +12935,6 @@ msgstr "por data inversa"
 msgid "rewind to the previous chapter"
 msgstr "volver ao capítulo anterior"
 
-msgid "rgb"
-msgstr "rgb"
-
 #
 msgid "right"
 msgstr "dereita"
@@ -13066,10 +12964,6 @@ msgstr "estado do escaneo"
 
 msgid "science fiction/fantasy/horror"
 msgstr "ciencia ficción/fantasía/horror"
-
-#
-msgid "seconds"
-msgstr "segundos"
 
 #
 msgid "select CAId's"
@@ -13175,6 +13069,9 @@ msgstr "sociedade/política/economía (xeral)"
 
 msgid "social/spiritual science"
 msgstr "ciencias sociais/espirituais"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "eventos especiais"
