--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -27,10 +27,6 @@ msgid ""
 msgstr ""
 "\n"
 "!אחרי לחיצה על אשר,נא המתן"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 #
 msgid ""
@@ -379,10 +375,6 @@ msgstr[1] "עדכונים זמינים"
 msgid "%s%d min"
 msgstr ""
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr ""
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -446,22 +438,13 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "12V output"
 
-msgid "12bit"
-msgstr ""
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -470,9 +453,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -490,6 +470,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "show Infoline"
 
 msgid "20 MB/s"
 msgstr ""
@@ -527,18 +511,6 @@ msgstr ""
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -569,9 +541,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 msgid "9"
 msgstr "9"
@@ -715,9 +684,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1349,9 +1315,6 @@ msgstr ".התקנה הסתיימה"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-msgid "Automatic"
-msgstr "אוטומטי"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1395,15 +1358,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 msgid "Back"
 msgstr "Back"
@@ -1663,10 +1617,6 @@ msgid "CI slot: "
 msgstr ""
 
 msgid "CPU: "
-msgstr ""
-
-#
-msgid "CVBS"
 msgstr ""
 
 msgid "Cable"
@@ -2172,6 +2122,9 @@ msgstr ""
 msgid "Configure remote control type"
 msgstr "סוג בקרת הורים"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr ""
 
@@ -2438,6 +2391,9 @@ msgstr ""
 msgid "Configuring"
 msgstr "מגדיר"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2659,9 +2615,6 @@ msgstr "צ'כית"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3241,9 +3194,6 @@ msgstr "? האם ברצונך לשחזר את ההגדרות"
 msgid "Do you want to update your receiver?"
 msgstr ""
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3413,9 +3363,6 @@ msgstr ""
 
 msgid "Electronic Program Guide"
 msgstr "Electronic Program Guide"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4198,6 +4145,9 @@ msgstr ""
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr ""
@@ -4430,9 +4380,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4454,9 +4401,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr ""
 
-msgid "HDR10"
-msgstr ""
-
 msgid "HDR10 support"
 msgstr ""
 
@@ -4464,9 +4408,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -4910,16 +4851,13 @@ msgstr "מתקין"
 msgid "Installing software..."
 msgstr "...מתקין תוכנה"
 
-msgid "Instant record"
-msgstr ""
+#, fuzzy
+msgid "Instant recording"
+msgstr "הקלטה מיידית"
 
 #, fuzzy
 msgid "Instant recording location"
 msgstr "מיקום הקלטה מיידית"
-
-#, fuzzy
-msgid "Instant recording"
-msgstr "הקלטה מיידית"
 
 msgid "Interface: "
 msgstr ":ממשק"
@@ -6360,16 +6298,10 @@ msgstr "Tuner הגדרת"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr ""
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6399,7 +6331,7 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7201,9 +7133,6 @@ msgstr ""
 msgid "RF output"
 msgstr "RF output"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "רדיו"
 
@@ -7495,6 +7424,9 @@ msgstr "Repeats"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr ""
 
@@ -7696,9 +7628,6 @@ msgstr ""
 msgid "Rwanda"
 msgstr ""
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -7712,11 +7641,6 @@ msgid "SCR Unicable"
 msgstr ""
 
 #
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
-#
 msgid "SINGLE LAYER DVD"
 msgstr "SINGLE LAYER DVD"
 
@@ -7728,16 +7652,7 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -8157,6 +8072,9 @@ msgstr ""
 #
 msgid "Select channel to record from"
 msgstr "Select channel to record from"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr ""
@@ -10783,12 +10701,12 @@ msgstr ""
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr ""
 
-msgid "Update has completed."
-msgstr ""
-
 #
 msgid "Update feed not available."
 msgstr "Update feed not available."
+
+msgid "Update has completed."
+msgstr ""
 
 #
 msgid "Updating"
@@ -10985,9 +10903,6 @@ msgstr "חיבור רשת"
 
 #
 msgid "VMGM (intro trailer)"
-msgstr ""
-
-msgid "VOB File"
 msgstr ""
 
 msgid "VOB file"
@@ -11625,20 +11540,8 @@ msgstr "Write failed!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr ""
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "שנה"
@@ -11772,8 +11675,8 @@ msgid "You didn't select a channel to record from."
 msgstr ""
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "You have to wait %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12464,9 +12367,6 @@ msgstr "תפריט"
 msgid "mins"
 msgstr "דקות"
 
-msgid "minutes"
-msgstr "דקות"
-
 msgid "month"
 msgstr "חודש"
 
@@ -12494,9 +12394,6 @@ msgstr ""
 msgid "multi"
 msgstr ""
 
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr ""
 
@@ -12508,6 +12405,10 @@ msgstr ""
 
 msgid "never"
 msgstr "לעולם"
+
+#, fuzzy
+msgid "new line"
+msgstr "show Infoline"
 
 msgid "new media"
 msgstr ""
@@ -12576,6 +12477,10 @@ msgstr ""
 msgid "not_tested"
 msgstr ""
 
+#, fuzzy
+msgid "nothing"
+msgstr "do nothing"
+
 msgid "nothing connected"
 msgstr "nothing connected"
 
@@ -12593,6 +12498,9 @@ msgid "off or wpa2 on"
 msgstr ""
 
 msgid "offset is"
+msgstr ""
+
+msgid "omit"
 msgstr ""
 
 #
@@ -12684,9 +12592,6 @@ msgstr ""
 msgid "rewind to the previous chapter"
 msgstr "rewind to the previous chapter"
 
-msgid "rgb"
-msgstr ""
-
 msgid "right"
 msgstr "ימין"
 
@@ -12716,9 +12621,6 @@ msgstr "מצב סריקה"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-msgid "seconds"
-msgstr "שניות"
 
 #
 msgid "select CAId's"
@@ -12820,6 +12722,9 @@ msgid "social/political issues/economics (general)"
 msgstr ""
 
 msgid "social/spiritual science"
+msgstr ""
+
+msgid "space"
 msgstr ""
 
 msgid "special events"
