--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-08-26 20:26+0200\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -19,11 +19,6 @@ msgid ""
 msgstr ""
 "\n"
 "Nakon pritiska na OK, molim pričekajte!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Otkrivanje sukoba je onemogućeno!"
 
 msgid ""
 "\n"
@@ -382,10 +377,6 @@ msgstr[2] "%s dostupnih paketa za ažuriranje"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(VU+ tip)"
 
@@ -448,29 +439,17 @@ msgstr "10 МB/s"
 msgid "100 MB/s"
 msgstr "100 МB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 msgid "12V output"
 msgstr "12V izlaz"
 
-msgid "12bit"
-msgstr "12bit"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -486,6 +465,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Dvije linije"
 
 msgid "20 MB/s"
 msgstr "20 МB/s"
@@ -523,18 +506,6 @@ msgstr "3D mod"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -561,9 +532,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 msgid "9"
 msgstr "9"
@@ -706,9 +674,6 @@ msgstr "STJECANJE TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS file"
 
 msgid "ASS file"
 msgstr "ASS fajl"
@@ -1270,9 +1235,6 @@ msgstr "Automatska instalacija je dovršena"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Automatska instalacija - pričekajte da se paketi ažuriraju"
 
-msgid "Automatic"
-msgstr "Automatsko"
-
 msgid "Automatic Scan"
 msgstr "Automatska pretraga"
 
@@ -1308,15 +1270,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Natrag"
@@ -1555,9 +1508,6 @@ msgstr "CI utor: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kabel"
@@ -2036,6 +1986,9 @@ msgstr "Konfigurirajte za koje uređaje trebate koristiti opciju brisanja u poza
 msgid "Configure remote control type"
 msgstr "Konfigurirajte vrstu daljinskog upravljača"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Konfigurirajte DiSEqC način rada za ovaj LNB."
 
@@ -2288,6 +2241,9 @@ msgstr "Konfigurirajte koji će se priključak koristiti za video izlaz."
 msgid "Configuring"
 msgstr "Konfiguriranje"
 
+msgid "Conflict detection disabled!"
+msgstr "Otkrivanje sukoba je onemogućeno!"
+
 msgid "Conflict not resolved!"
 msgstr "Sukob nije riješen!"
 
@@ -2496,9 +2452,6 @@ msgstr "Češka"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3026,9 +2979,6 @@ msgstr "Želite li ažurirati svoj prijemnik na %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Želite li ažurirati svoj prijemnik?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3183,9 +3133,6 @@ msgstr "El Salvador"
 
 msgid "Electronic Program Guide"
 msgstr "Elektronski programski vodič (EPG)"
-
-msgid "Embedded"
-msgstr "Ugrađen"
 
 msgid "Emergency"
 msgstr "Osnovni skin"
@@ -3926,6 +3873,9 @@ msgstr "Оd:"
 msgid "Frontprocessor version: %s"
 msgstr "Verzija frontprocesora: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Puni zaslon"
@@ -4138,9 +4088,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI dubina boje"
 
@@ -4162,9 +4109,6 @@ msgstr "HDMI-CEC neaktivni izvor"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC postavke"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 podrška"
 
@@ -4173,9 +4117,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "POMOĆ"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG podrška"
@@ -4581,14 +4522,11 @@ msgstr "Instalacija"
 msgid "Installing software..."
 msgstr "Instaliranje softvera..."
 
-msgid "Instant record"
-msgstr "Trenutni zapis"
+msgid "Instant recording"
+msgstr "Mjesto snimanja"
 
 msgid "Instant recording location"
 msgstr "Lokacija mjesta snimanja"
-
-msgid "Instant recording"
-msgstr "Mjesto snimanja"
 
 msgid "Interface: "
 msgstr "Sučelje: "
@@ -5857,17 +5795,11 @@ msgstr "prebrisati konfiguracijske datoteke?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS Fajl"
 
 msgid "PGS file"
 msgstr "PGS fajl"
@@ -5893,7 +5825,8 @@ msgstr "РМТ PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+#, fuzzy
+msgid "PULSe 4K(mini)"
 msgstr "PULSe 4K"
 
 msgid "Package list update"
@@ -6624,9 +6557,6 @@ msgstr "REC"
 msgid "RF output"
 msgstr "RF izlaz"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -6896,6 +6826,9 @@ msgstr "Ponavljanja"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Zamijenite `-` u dijalozima s tekstom u boji po zvučniku (kao što su titlovi teleteksta za osobe oštećenog sluha)."
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Zahtjev za izvješće o fizičkoj adresi"
 
@@ -7081,9 +7014,6 @@ msgstr "Ruska Federacija"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-msgid "S-Video"
-msgstr "S-video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimizirani raspon pretraživanja"
 
@@ -7096,9 +7026,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "Jednoslojni DVD"
 
@@ -7108,17 +7035,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "SRT datoteka"
-
 msgid "SRT file"
 msgstr "SRT datoteka"
-
-msgid "SSA File"
-msgstr "SSA datoteka"
 
 msgid "SSA file"
 msgstr "SSA datoteka"
@@ -7492,6 +7410,9 @@ msgstr "Odaberite kanal"
 
 msgid "Select channel to record from"
 msgstr "Odaberite kanal s kojeg želite snimati"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Odabir lokacije za kopiju:"
@@ -9860,11 +9781,11 @@ msgstr "Ažuriranje je dovršeno. Želite li ponovno pokrenuti prijemnik?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Ažuriranje nije uspjelo. Vaš prijemnik nema aktivnu internetsku vezu."
 
-msgid "Update has completed."
-msgstr "Ažuriranje je dovršeno."
-
 msgid "Update feed not available."
 msgstr "Ažuriranje feeda nije dostupno."
+
+msgid "Update has completed."
+msgstr "Ažuriranje je dovršeno."
 
 msgid "Updating"
 msgstr "Ažuriranje"
@@ -10038,9 +9959,6 @@ msgstr "VLAN veza"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (uvodni trailer)"
-
-msgid "VOB File"
-msgstr "VOB fajl"
 
 msgid "VOB file"
 msgstr "VOB fajl"
@@ -10649,20 +10567,8 @@ msgstr "Zapisivanje nije uspjelo!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Zapisivanje na /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "Da"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "God"
@@ -10807,8 +10713,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Niste odabrali kanal s kojeg želite snimati."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Morate pričekati %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11471,9 +11377,6 @@ msgstr "izbornik"
 msgid "mins"
 msgstr "min"
 
-msgid "minutes"
-msgstr "minute"
-
 msgid "month"
 msgstr "mjesec"
 
@@ -11501,9 +11404,6 @@ msgstr "film/drama (općenito)"
 msgid "multi"
 msgstr "multi"
 
-msgid "multinorm"
-msgstr "više normi"
-
 msgid "music/ballet/dance (general)"
 msgstr "glazba/balet/ples (općenito)"
 
@@ -11515,6 +11415,10 @@ msgstr "priroda/životinje/okolina"
 
 msgid "never"
 msgstr "nikada"
+
+#, fuzzy
+msgid "new line"
+msgstr "Dvije linije"
 
 msgid "new media"
 msgstr "novi mediji"
@@ -11576,6 +11480,10 @@ msgstr "nevažeće sučelje "
 msgid "not_tested"
 msgstr "bez_testa"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Ne radi ništa"
+
 msgid "nothing connected"
 msgstr "ništa nije povezano"
 
@@ -11593,6 +11501,9 @@ msgstr "isklj ili wpa2 uklj"
 
 msgid "offset is"
 msgstr "pomicanje"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "uklj"
@@ -11678,9 +11589,6 @@ msgstr "natrag po datumu"
 msgid "rewind to the previous chapter"
 msgstr "premotavanje unatrag na prethodno poglavlje"
 
-msgid "rgb"
-msgstr "rgb"
-
 msgid "right"
 msgstr "desno"
 
@@ -11707,9 +11615,6 @@ msgstr "status pretraživanja"
 
 msgid "science fiction/fantasy/horror"
 msgstr "znanstvena fantastika/fantazija/horor"
-
-msgid "seconds"
-msgstr "sekunde"
 
 msgid "select CAId's"
 msgstr "odaberite CAId's"
@@ -11807,6 +11712,9 @@ msgstr "društvena/politička pitanja/ekonomija (općenito)"
 
 msgid "social/spiritual science"
 msgstr "društvena/duhovna znanost"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "specijalni događaji"
