--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-03-06\n"
 "Last-Translator: LinuxSTV\n"
 "Language-Team: \n"
@@ -19,11 +19,6 @@ msgid ""
 msgstr ""
 "\n"
 "Setelah tekan OK, silakan tunggu!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Deteksi konflik dimatikan!"
 
 msgid ""
 "\n"
@@ -375,10 +370,6 @@ msgstr[1] "%s pembaruan paket-paket tersedia"
 msgid "%s%d min"
 msgstr "%s%d mnt"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 #, fuzzy
 msgid "(VU+ type)"
 msgstr "(Jenis VU+)"
@@ -443,29 +434,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 msgid "12V output"
 msgstr "keluaran 12V"
 
-msgid "12bit"
-msgstr "12bit"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "Kotaksurat 16:10"
 
 msgid "16:10 PanScan"
 msgstr "PanScan 16:10"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "Kotaksurat 16:9"
@@ -481,6 +460,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Tampilkan baris info"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -518,18 +501,6 @@ msgstr "mode 3d"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "Kotaksurat 4:3"
 
@@ -558,9 +529,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 msgid "9"
 msgstr "9"
@@ -705,10 +673,6 @@ msgstr "Mendapatka TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-#, fuzzy
-msgid "ASS File"
-msgstr "Berkas ASS"
 
 msgid "ASS file"
 msgstr "Berkas ASS"
@@ -1286,9 +1250,6 @@ msgstr "Pemasangan otomatis telah selesai."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Pemasangan otomatis, mohon tunggu paket-paket diperbarui"
 
-msgid "Automatic"
-msgstr "Otomatis"
-
 msgid "Automatic Scan"
 msgstr "Pelacakan Otomatis"
 
@@ -1326,15 +1287,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Kembali"
@@ -1579,9 +1531,6 @@ msgstr "slot CI"
 
 msgid "CPU: "
 msgstr "CPU: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kabel"
@@ -2078,6 +2027,9 @@ msgstr "Atur di perangkat mana pilihan hapus latar seharusnya digunakan."
 msgid "Configure remote control type"
 msgstr "Atur jenis remote kontrol"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Atur mode DiSEqC untuk LNB ini."
 
@@ -2334,6 +2286,9 @@ msgstr "Atur konektor keluaran video mana yang ingin digunakan."
 msgid "Configuring"
 msgstr "Pengaturan"
 
+msgid "Conflict detection disabled!"
+msgstr "Deteksi konflik dimatikan!"
+
 msgid "Conflict not resolved!"
 msgstr "Konflik tidak diselesaikan"
 
@@ -2548,9 +2503,6 @@ msgstr "Ceko"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3101,9 +3053,6 @@ msgstr "Anda ingin memperbarui rx anda ke %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Anda ingin memperbarui rx anda?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominika"
 
@@ -3260,9 +3209,6 @@ msgstr "El Salvador"
 
 msgid "Electronic Program Guide"
 msgstr "Electronic Program Guide"
-
-msgid "Embedded"
-msgstr "Tertanam"
 
 msgid "Emergency"
 msgstr "Darurat"
@@ -4038,6 +3984,9 @@ msgstr "Dari:"
 msgid "Frontprocessor version: %s"
 msgstr "Versi prosessor depan: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
 msgid "Full screen"
@@ -4259,9 +4208,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "Kedalaman warna HDMI"
 
@@ -4284,9 +4230,6 @@ msgstr "Interaktif Sumber HDMI-CEC"
 msgid "HDMI-CEC setup"
 msgstr "Pengaturan HDMI-CEC"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "mendukung HDR10"
@@ -4296,9 +4239,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "TOLONG"
-
-msgid "HLG"
-msgstr "HLG"
 
 #, fuzzy
 msgid "HLG support"
@@ -4719,14 +4659,11 @@ msgstr "Pemasangan"
 msgid "Installing software..."
 msgstr "Memasang perangkat lunak..."
 
-msgid "Instant record"
-msgstr "Rekam segera"
+msgid "Instant recording"
+msgstr "Perekaman segera"
 
 msgid "Instant recording location"
 msgstr "Lokasi perekaman segera"
-
-msgid "Instant recording"
-msgstr "Perekaman segera"
 
 msgid "Interface: "
 msgstr "Antarmuka: "
@@ -6036,17 +5973,11 @@ msgstr "Timpa file konfigurasi?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PID PCR"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "Berkas PGS"
 
 msgid "PGS file"
 msgstr "Berkas PGS"
@@ -6073,7 +6004,7 @@ msgstr "PID PMT"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6822,9 +6753,6 @@ msgstr "REK"
 msgid "RF output"
 msgstr "Keluaran RF"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -7098,6 +7026,9 @@ msgstr "Ulang"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Ganti tanda `- ` pada dialog dengan teks berwarna per pembicara (seperti terjemahan teleteks pada tuna rungu)."
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 #, fuzzy
 msgid "Request for physical address report"
 msgstr "Meminta laporan alamat fisik"
@@ -7293,9 +7224,6 @@ msgstr "Federasi Rusia"
 msgid "Rwanda"
 msgstr "Rwanda"
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "Rentang pencarian dioptimalkan SCPC"
 
@@ -7308,10 +7236,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "Unikabel SCR"
 
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "DVD LAPIS TUNGGAL"
 
@@ -7321,17 +7245,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr "Berkas SRT"
-
 msgid "SRT file"
 msgstr "bekas SRT"
-
-msgid "SSA File"
-msgstr "Berkas SSA"
 
 msgid "SSA file"
 msgstr "berkas SSA"
@@ -7710,6 +7625,9 @@ msgstr "Pilih kanal"
 
 msgid "Select channel to record from"
 msgstr "Pilih kanal untuk direkam"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Pilih tujuan salin untuk:"
@@ -10160,11 +10078,11 @@ msgstr "Pembaruan selesai. Apakah anda ingin reboot Rx anda?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Pembaruan gagal. Rx anda tanpa koneksi internet."
 
-msgid "Update has completed."
-msgstr "Pembaruan telah selesai."
-
 msgid "Update feed not available."
 msgstr "Umpan pembaruan tidak tersedia."
+
+msgid "Update has completed."
+msgstr "Pembaruan telah selesai."
 
 msgid "Updating"
 msgstr "Meningkatkan"
@@ -10342,9 +10260,6 @@ msgstr "Koneksi LAN"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (trailer intro)"
-
-msgid "VOB File"
-msgstr "Berkas VOB"
 
 msgid "VOB file"
 msgstr "berkas VOB"
@@ -10968,20 +10883,8 @@ msgstr "Penulisan gagal!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Tulis ke /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "YA"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Tahun"
@@ -11133,8 +11036,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Anda tidak memilih kanal untuk merekam."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Anda harus menunggu %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11808,9 +11711,6 @@ msgstr "menu"
 msgid "mins"
 msgstr "mnt"
 
-msgid "minutes"
-msgstr "menit"
-
 msgid "month"
 msgstr "bulan"
 
@@ -11838,9 +11738,6 @@ msgstr "film/drama (umum)"
 msgid "multi"
 msgstr "multi"
 
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "musik/ballet/tari (umum)"
 
@@ -11852,6 +11749,10 @@ msgstr "alam/binatang/lingkungan"
 
 msgid "never"
 msgstr "takpernah"
+
+#, fuzzy
+msgid "new line"
+msgstr "Tampilkan baris info"
 
 msgid "new media"
 msgstr "media baru"
@@ -11915,6 +11816,10 @@ msgstr "Frontend satelit tidak ditemukan!"
 msgid "not_tested"
 msgstr "bleum_dites"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Jangan lakukan"
+
 msgid "nothing connected"
 msgstr "tak ada yang tersambung"
 
@@ -11932,6 +11837,9 @@ msgstr "mati atau wpa2 hidup"
 
 msgid "offset is"
 msgstr "offset adalah"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "hidup"
@@ -12017,9 +11925,6 @@ msgstr "putarbalik berdasarkan tanggal"
 msgid "rewind to the previous chapter"
 msgstr "mundur ke bab sebelumnya"
 
-msgid "rgb"
-msgstr "rgb"
-
 msgid "right"
 msgstr "kanan"
 
@@ -12049,9 +11954,6 @@ msgstr "keadaan pemindaian"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasy/horror"
-
-msgid "seconds"
-msgstr "detik"
 
 msgid "select CAId's"
 msgstr "pilih CAId"
@@ -12150,6 +12052,9 @@ msgstr "social/political issues/economics (general)"
 
 msgid "social/spiritual science"
 msgstr "social/spiritual science"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "acara khusus"
