--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2020-05-16 18:44+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -22,10 +22,6 @@ msgid ""
 msgstr ""
 "\n"
 "Bíðið eftir að hafa ýtt á OK!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 #
 msgid ""
@@ -383,10 +379,6 @@ msgstr[1] " uppfærslur tiltækar."
 msgid "%s%d min"
 msgstr ""
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr ""
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -460,23 +452,13 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "12V út"
 
-msgid "12bit"
-msgstr ""
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -485,10 +467,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -508,6 +486,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "sýna upplýsingalínu"
 
 msgid "20 MB/s"
 msgstr ""
@@ -547,19 +530,6 @@ msgstr ""
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -596,9 +566,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 #
 msgid "9"
@@ -745,9 +712,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1384,9 +1348,6 @@ msgstr "Uppsetning búin."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-msgid "Automatic"
-msgstr "Sjálfvirkt"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1425,15 +1386,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 msgid "Back"
 msgstr "Til baka"
@@ -1686,9 +1638,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr ""
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kapalkerfi"
@@ -2186,6 +2135,9 @@ msgstr ""
 msgid "Configure remote control type"
 msgstr "Gerð foreldrastýringar"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr ""
 
@@ -2455,6 +2407,9 @@ msgstr ""
 msgid "Configuring"
 msgstr "Stilli"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2677,9 +2632,6 @@ msgstr "Tékkneska"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3314,9 +3266,6 @@ msgstr "Viltu hlaða niður stýrikerfinu á %s ?"
 msgid "Do you want to update your receiver?"
 msgstr ""
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3493,9 +3442,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Rafrænn dagskrárstjóri (EPG)"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4305,6 +4251,9 @@ msgstr ""
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr ""
@@ -4552,9 +4501,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4576,9 +4522,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr ""
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ekki stutt"
@@ -4587,9 +4530,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -5051,17 +4991,14 @@ msgstr "Set inn"
 msgid "Installing software..."
 msgstr "Set inn hugbúnað..."
 
-msgid "Instant record"
-msgstr ""
-
-#, fuzzy
-msgid "Instant recording location"
-msgstr "Skyndi upptöku staðsetning"
-
 #
 #, fuzzy
 msgid "Instant recording"
 msgstr "Skyndi upptaka"
+
+#, fuzzy
+msgid "Instant recording location"
+msgstr "Skyndi upptöku staðsetning"
 
 msgid "Interface: "
 msgstr "Netkort:"
@@ -6577,16 +6514,10 @@ msgstr "Skrifa yfir stillinga skrár ?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6617,7 +6548,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7485,10 +7416,6 @@ msgid "RF output"
 msgstr "Loftnetsrás"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Útvarp"
 
@@ -7814,6 +7741,9 @@ msgstr "Endurtekningar"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr ""
 
@@ -8033,10 +7963,6 @@ msgstr ""
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -8049,11 +7975,6 @@ msgstr ""
 msgid "SCR Unicable"
 msgstr ""
 
-#
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "SINGLE LAYER DVD"
 
@@ -8065,16 +7986,7 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -8517,6 +8429,9 @@ msgstr ""
 #
 msgid "Select channel to record from"
 msgstr "Veldu rás til að taka upp frá"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr ""
@@ -11256,11 +11171,11 @@ msgstr ""
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr ""
 
-msgid "Update has completed."
-msgstr ""
-
 msgid "Update feed not available."
 msgstr "Uppfærslur á fæðirásum ekki tiltækar."
+
+msgid "Update has completed."
+msgstr ""
 
 #
 msgid "Updating"
@@ -11465,9 +11380,6 @@ msgstr "LAN tenging"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (mynd sýnishorn)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr ""
@@ -12139,21 +12051,8 @@ msgstr "Tókst ekki að skrifa!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr ""
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12292,10 +12191,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Þú valdir ekki rás til að taka upp af."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Þú þarf að bíða %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13040,10 +12938,6 @@ msgid "mins"
 msgstr "mín"
 
 #
-msgid "minutes"
-msgstr "mínútur"
-
-#
 msgid "month"
 msgstr "mánuður"
 
@@ -13075,10 +12969,6 @@ msgstr ""
 msgid "multi"
 msgstr ""
 
-#
-msgid "multinorm"
-msgstr "fjölkerfa"
-
 msgid "music/ballet/dance (general)"
 msgstr ""
 
@@ -13091,6 +12981,11 @@ msgstr ""
 #
 msgid "never"
 msgstr "aldrei"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "sýna upplýsingalínu"
 
 msgid "new media"
 msgstr ""
@@ -13160,6 +13055,11 @@ msgid "not_tested"
 msgstr ""
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "ekki gera neitt"
+
+#
 msgid "nothing connected"
 msgstr "ekkert tengt"
 
@@ -13179,6 +13079,9 @@ msgid "off or wpa2 on"
 msgstr ""
 
 msgid "offset is"
+msgstr ""
+
+msgid "omit"
 msgstr ""
 
 #
@@ -13280,9 +13183,6 @@ msgstr ""
 msgid "rewind to the previous chapter"
 msgstr "fara til baka á fyrri kafla"
 
-msgid "rgb"
-msgstr ""
-
 #
 msgid "right"
 msgstr "hægri"
@@ -13313,10 +13213,6 @@ msgstr "leitar staða"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-#
-msgid "seconds"
-msgstr "sekúndur"
 
 #
 msgid "select CAId's"
@@ -13421,6 +13317,9 @@ msgid "social/political issues/economics (general)"
 msgstr ""
 
 msgid "social/spiritual science"
+msgstr ""
+
+msgid "space"
 msgstr ""
 
 msgid "special events"
