--- a/po/lt.po
+++ b/po/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-08-24 20:00+0300\n"
 "Last-Translator: Audronis <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -20,11 +20,6 @@ msgid ""
 msgstr ""
 "\n"
 "Paspaudę OK, palaukite!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Konfliktų aptikimas išjungtas!"
 
 msgid ""
 "\n"
@@ -383,10 +378,6 @@ msgstr[2] "galimas %s paketų atnaujinimas"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s: %s,%s"
-
 msgid "(VU+ type)"
 msgstr "(VU+ tipas)"
 
@@ -449,29 +440,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10 bitų"
-
 msgid "12V output"
 msgstr "12V išvestis"
 
-msgid "12bit"
-msgstr "12 bitų"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 įterpiant juodas juostas"
 
 msgid "16:10 PanScan"
 msgstr "16:10 nukerpant šonus"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 įterpiant juodas juostas šonuose"
@@ -487,6 +466,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Dvi linijos"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -524,18 +507,6 @@ msgstr "3D režimas"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Įterpiant juodas juostas šonuose"
 
@@ -562,9 +533,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8 bitų"
 
 msgid "9"
 msgstr "9"
@@ -707,9 +675,6 @@ msgstr "GAUNAMAS TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS Failas"
 
 msgid "ASS file"
 msgstr "ASS failas"
@@ -1269,9 +1234,6 @@ msgstr "Automatinis diegimas baigtas"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Automatinis įdiegimas, palaukite kol naujinami paketai"
 
-msgid "Automatic"
-msgstr "Automatinis"
-
 msgid "Automatic Scan"
 msgstr "Automatinė paieška"
 
@@ -1307,15 +1269,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Atgal"
@@ -1554,9 +1507,6 @@ msgstr "CI lizdas: "
 
 msgid "CPU: "
 msgstr "Procesorius: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kabelinė"
@@ -2035,6 +1985,9 @@ msgstr "Nustatykite, kuriuose prietaisuose bus galima trinti fone."
 msgid "Configure remote control type"
 msgstr "Nustatykite nuotolinio pultelio tipą"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Nustatykite DiSEqC veikseną šiam LNB."
 
@@ -2287,6 +2240,9 @@ msgstr "Pasirinkite naudojamą vaizdo išvesties jungtį."
 msgid "Configuring"
 msgstr "Konfigūruojama"
 
+msgid "Conflict detection disabled!"
+msgstr "Konfliktų aptikimas išjungtas!"
+
 msgid "Conflict not resolved!"
 msgstr "Konfliktas neišspręstas!"
 
@@ -2495,9 +2451,6 @@ msgstr "Čekija"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3027,9 +2980,6 @@ msgstr "Ar norite atnaujinti įrangą į %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Ar norite atnaujinti imtuvo įrangą?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominika"
 
@@ -3182,9 +3132,6 @@ msgstr "El salvadoras"
 
 msgid "Electronic Program Guide"
 msgstr "Elektroninis programų vadovas"
-
-msgid "Embedded"
-msgstr "Įterpta"
 
 msgid "Emergency"
 msgstr "Skubus atvejis"
@@ -3921,6 +3868,9 @@ msgstr "Nuo:"
 msgid "Frontprocessor version: %s"
 msgstr "Priekinio procesoriaus versija: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Per visą ekraną"
@@ -4133,9 +4083,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI spalvų erdvė"
 
@@ -4157,9 +4104,6 @@ msgstr "HDMI-CEC neveikiantys šaltiniai"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC sąranka"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 palaikymas"
 
@@ -4168,9 +4112,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "PAGALBA"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG palaikymas"
@@ -4579,14 +4520,11 @@ msgstr "Diegiama"
 msgid "Installing software..."
 msgstr "Diegiama programinė įranga..."
 
-msgid "Instant record"
+msgid "Instant recording"
 msgstr "Momentinis įrašymas"
 
 msgid "Instant recording location"
 msgstr "Momentinio įrašymo vieta"
-
-msgid "Instant recording"
-msgstr "Momentinis įrašymas"
 
 msgid "Interface: "
 msgstr "Sąsaja: "
@@ -5853,17 +5791,11 @@ msgstr "Perrašyti konfigūracijos failus?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS failas"
 
 msgid "PGS file"
 msgstr "PGS failas"
@@ -5889,7 +5821,8 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PLi skydelis"
 
-msgid "PULSe 4K"
+#, fuzzy
+msgid "PULSe 4K(mini)"
 msgstr "PULSe 4K"
 
 msgid "Package list update"
@@ -6620,9 +6553,6 @@ msgstr "REC"
 msgid "RF output"
 msgstr "RF išvestis"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radijas"
 
@@ -6892,6 +6822,9 @@ msgstr "Pakartojimai"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Pakeiskite `- ` į dialogus su spalvotu tekstu vienam pranešėjui (pavyzdžiui, teleteksto subtitrai neprigirdintiems)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Prašymas pateikti fizinio adreso ataskaitą"
 
@@ -7077,9 +7010,6 @@ msgstr "Rusijos Federacija"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimizuotas paieškos diapazonas"
 
@@ -7092,9 +7022,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "VIENO SLUOKSNIO DVD"
 
@@ -7104,17 +7031,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "SRT failas"
-
 msgid "SRT file"
 msgstr "SRT failas"
-
-msgid "SSA File"
-msgstr "SSA failas"
 
 msgid "SSA file"
 msgstr "SSA failas"
@@ -7488,6 +7406,9 @@ msgstr "Pasirinkite kanalą"
 
 msgid "Select channel to record from"
 msgstr "Pasirinkite kanalą įrašymui"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Pasirinkite kopijos vietą:"
@@ -9860,11 +9781,11 @@ msgstr "Atnaujinta. Ar norite paleisti imtuvą iš naujo?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Atnaujinimo klaida. Jūsų imtuvas neturi interneto ryšio."
 
-msgid "Update has completed."
-msgstr "Atnaujinimas baigtas."
-
 msgid "Update feed not available."
 msgstr "Atnaujinimo šaltinis nepasiekiamas."
+
+msgid "Update has completed."
+msgstr "Atnaujinimas baigtas."
 
 msgid "Updating"
 msgstr "Atnaujinama"
@@ -10038,9 +9959,6 @@ msgstr "VLAN prisijungimas"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (anonsas)"
-
-msgid "VOB File"
-msgstr "VOB failas"
 
 msgid "VOB file"
 msgstr "VOB failas"
@@ -10649,20 +10567,8 @@ msgstr "Įrašyti nepavyko!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Rašyti į /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "TAIP"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Metai"
@@ -10809,8 +10715,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Jūs nepasirinkote kanalo, kad įrašyti."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Jūs turite laukti %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11474,9 +11380,6 @@ msgstr "meniu"
 msgid "mins"
 msgstr "min"
 
-msgid "minutes"
-msgstr "minutės"
-
 msgid "month"
 msgstr "mėnuo"
 
@@ -11504,9 +11407,6 @@ msgstr "filmas/drama (bendras)"
 msgid "multi"
 msgstr "daugialypis"
 
-msgid "multinorm"
-msgstr "multinorma"
-
 msgid "music/ballet/dance (general)"
 msgstr "muzika/baletas/šokiai (bendra)"
 
@@ -11518,6 +11418,10 @@ msgstr "gamta/gyvūnai/aplinka"
 
 msgid "never"
 msgstr "niekada"
+
+#, fuzzy
+msgid "new line"
+msgstr "Dvi linijos"
 
 msgid "new media"
 msgstr "nauja media laikmena"
@@ -11579,6 +11483,10 @@ msgstr "neteisinga sąsaja"
 msgid "not_tested"
 msgstr "netikrinta"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Nieko nedaryti"
+
 msgid "nothing connected"
 msgstr "nieko nepajungta"
 
@@ -11596,6 +11504,9 @@ msgstr "išjungta arba WPA2 įjungta"
 
 msgid "offset is"
 msgstr "poslinkis yra"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "įjungta"
@@ -11681,9 +11592,6 @@ msgstr "sukeisti pagal datą"
 msgid "rewind to the previous chapter"
 msgstr "atsukti atgal į ankstesnį skyrių"
 
-msgid "rgb"
-msgstr "rgb"
-
 msgid "right"
 msgstr "dešinė"
 
@@ -11710,9 +11618,6 @@ msgstr "paieškos eiga"
 
 msgid "science fiction/fantasy/horror"
 msgstr "mokslinė fantastika, fantastika, siaubai"
-
-msgid "seconds"
-msgstr "sekundžių"
 
 msgid "select CAId's"
 msgstr "pasirinkite CAId"
@@ -11810,6 +11715,9 @@ msgstr "socialiniai/politiniai klausimai/ekonomika (bendra)"
 
 msgid "social/spiritual science"
 msgstr "socialinis/dvasinis mokslas"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "specialieji įvykiai"
