--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -21,11 +21,6 @@ msgid ""
 msgstr ""
 "\n"
 "Pēc OK nospiešanas uzgaidiet!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Konfliktu noteikšana izslēgta!"
 
 msgid ""
 "\n"
@@ -386,10 +381,6 @@ msgstr[2] "%s pakotņu atjauninājumi pieejami"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(VU+ tips)"
 
@@ -452,29 +443,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 msgid "12V output"
 msgstr "12V izeja"
 
-msgid "12bit"
-msgstr "12bit"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 platekrāns"
 
 msgid "16:10 PanScan"
 msgstr "16:10 panorāma"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 platekrāns"
@@ -490,6 +469,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Divas rindas"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -527,18 +510,6 @@ msgstr "3d režīms"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 platekrāns"
 
@@ -565,9 +536,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 msgid "9"
 msgstr "9"
@@ -710,9 +678,6 @@ msgstr "ACQUIRING TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS fails"
 
 msgid "ASS file"
 msgstr "ASS fails"
@@ -1272,9 +1237,6 @@ msgstr "Uzstādīšana pabeigta"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Lūdzu uzgaidiet kamēr paketes tiks uzstādītas"
 
-msgid "Automatic"
-msgstr "Automātiski"
-
 msgid "Automatic Scan"
 msgstr "Automātiskā meklēšana"
 
@@ -1310,15 +1272,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Atpakaļ"
@@ -1557,9 +1510,6 @@ msgstr "CI slots: "
 
 msgid "CPU: "
 msgstr "Procesors: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kabeļu"
@@ -2038,6 +1988,9 @@ msgstr "Uzstāda uz kuras ierīces būtu jāizmanto fona dzēšanas iespēja."
 msgid "Configure remote control type"
 msgstr "Konfigurēt vadības pults tipu"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Konfigurēt DiSEqC veidu šim LNB."
 
@@ -2290,6 +2243,9 @@ msgstr "Uzstāda kura video izeja tiks lietota."
 msgid "Configuring"
 msgstr "Konfigurē"
 
+msgid "Conflict detection disabled!"
+msgstr "Konfliktu noteikšana izslēgta!"
+
 msgid "Conflict not resolved!"
 msgstr "Konflikts nav novērsts!"
 
@@ -2498,9 +2454,6 @@ msgstr "Čehija"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3028,9 +2981,6 @@ msgstr "Vai vēlaties atjaunot uztvērēju uz %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Vai vēlaties atjaunot uztvērēju?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominika"
 
@@ -3183,9 +3133,6 @@ msgstr "Salvadora"
 
 msgid "Electronic Program Guide"
 msgstr "Elektroniskais Programmu Gids"
-
-msgid "Embedded"
-msgstr "Iekšējais"
 
 msgid "Emergency"
 msgstr "Noklusētais"
@@ -3926,6 +3873,9 @@ msgstr "No:"
 msgid "Frontprocessor version: %s"
 msgstr "Frontprocesora versija: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Aizpildīts ekrāns"
@@ -4139,9 +4089,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI krāsu dziļums"
 
@@ -4163,9 +4110,6 @@ msgstr "HDMI-CEC avots neaktīvs"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC iestatījumi"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 atbalsts"
 
@@ -4174,9 +4118,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "Palīdzība"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG atbalsts"
@@ -4584,14 +4525,11 @@ msgstr "Uzstāda"
 msgid "Installing software..."
 msgstr "Uzstāda programmatūru..."
 
-msgid "Instant record"
+msgid "Instant recording"
 msgstr "Ieraksts"
 
 msgid "Instant recording location"
 msgstr "Ieraksta vieta"
-
-msgid "Instant recording"
-msgstr "Ieraksts"
 
 msgid "Interface: "
 msgstr "Interfeiss: "
@@ -5858,17 +5796,11 @@ msgstr "Pārrakstīt konfigurācijas failus?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS fails"
 
 msgid "PGS file"
 msgstr "PGS fails"
@@ -5894,7 +5826,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanelis"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6625,9 +6557,6 @@ msgstr "IER"
 msgid "RF output"
 msgstr "RF izeja"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -6897,6 +6826,9 @@ msgstr "Atkārtojumi"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Aizvieto `- ` dialogos ar krāsainu tekstu atbilstoši runātājam (kā nedzirdīgo teleteksta subtitros)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Fiziskās adreses pieprasījums"
 
@@ -7082,9 +7014,6 @@ msgstr "Krievijas Federācija"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimizēta meklēšana"
 
@@ -7097,9 +7026,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "SINGLE LAYER DVD"
 
@@ -7109,17 +7035,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "SRT fails"
-
 msgid "SRT file"
 msgstr "SRT fails"
-
-msgid "SSA File"
-msgstr "SSA fails"
 
 msgid "SSA file"
 msgstr "SSA fails"
@@ -7493,6 +7410,9 @@ msgstr "Izvēlieties kanālu"
 
 msgid "Select channel to record from"
 msgstr "Izvēlieties ierakstāmo kanālu"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Izvēlieties kopijas mērķi no:"
@@ -9862,11 +9782,11 @@ msgstr "Atjaunināšana pabeigta. Vai vēlaties pārstartēt uztvērēju?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Atjaunināšana pārtraukta. Uztvērējam nestrādā interneta savienojums."
 
-msgid "Update has completed."
-msgstr "Atjaunināšana pabeigta."
-
 msgid "Update feed not available."
 msgstr "Barotnes nav pieejamas."
+
+msgid "Update has completed."
+msgstr "Atjaunināšana pabeigta."
 
 msgid "Updating"
 msgstr "Atjauno"
@@ -10040,9 +9960,6 @@ msgstr "VLAN savienojums"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (ievada treileris)"
-
-msgid "VOB File"
-msgstr "VOB fails"
 
 msgid "VOB file"
 msgstr "VOB fails"
@@ -10651,20 +10568,8 @@ msgstr "Rakstīšana neizdevās!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Saglabā /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "JĀ"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Gads"
@@ -10809,8 +10714,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Jūs nenorādījāt ierakstāmo kanālu."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Jums jāuzgaida %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11475,9 +11380,6 @@ msgstr "izvēlne"
 msgid "mins"
 msgstr "min."
 
-msgid "minutes"
-msgstr "minūtēm"
-
 msgid "month"
 msgstr "mēnesis"
 
@@ -11505,9 +11407,6 @@ msgstr "filmas/drāma (vispārīgi)"
 msgid "multi"
 msgstr "multi"
 
-msgid "multinorm"
-msgstr "multinorma"
-
 msgid "music/ballet/dance (general)"
 msgstr "mūzika/balets/dejas (vispārīgi)"
 
@@ -11519,6 +11418,10 @@ msgstr "daba/dzīvnieki/vide"
 
 msgid "never"
 msgstr "nekad"
+
+#, fuzzy
+msgid "new line"
+msgstr "Divas rindas"
 
 msgid "new media"
 msgstr "jauni mēdiji"
@@ -11581,6 +11484,10 @@ msgstr "Nav atrasts piemērots pavadonis!"
 msgid "not_tested"
 msgstr "nav_testēts"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Nedarīt neko"
+
 msgid "nothing connected"
 msgstr "nekas nav pievienots"
 
@@ -11598,6 +11505,9 @@ msgstr "izslēgts vai ieslēgts wpa2"
 
 msgid "offset is"
 msgstr "kompensē"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "ieslēgts"
@@ -11683,9 +11593,6 @@ msgstr "otrādi pēc datuma"
 msgid "rewind to the previous chapter"
 msgstr "atgriezties uz iepriekšējo nodaļu"
 
-msgid "rgb"
-msgstr "rgb"
-
 msgid "right"
 msgstr "labā"
 
@@ -11713,9 +11620,6 @@ msgstr "meklēšanas statuss"
 
 msgid "science fiction/fantasy/horror"
 msgstr "zinātniskā fantastika/fantāzijas/šausmu"
-
-msgid "seconds"
-msgstr "sekundes"
 
 msgid "select CAId's"
 msgstr "izvēlēties"
@@ -11813,6 +11717,9 @@ msgstr "sociālie/politiskie jautājumi/ekonomika (vispārīgi)"
 
 msgid "social/spiritual science"
 msgstr "sociālie/garīgā zinātne"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "speciālie notikumi"
