--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-06-19 13:08+0200\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -24,11 +24,6 @@ msgid ""
 msgstr ""
 "\n"
 "Etter å ha trykket OK, vennligst vent!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Konflikt deteksjon frakoblet!"
 
 #
 msgid ""
@@ -388,10 +383,6 @@ msgstr[1] "%s det finnes nye oppdateringer"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(VU+ type)"
 
@@ -462,23 +453,13 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 #
 msgid "12V output"
 msgstr "12V utgang"
 
-msgid "12bit"
-msgstr "12bit"
-
 #
 msgid "13 V"
 msgstr "13V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -486,10 +467,6 @@ msgstr "16:10 Brevsprekkformat"
 
 msgid "16:10 PanScan"
 msgstr "16:10 Breddereduksjon"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Brevsprekkformat"
@@ -508,6 +485,11 @@ msgstr "18V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "To linjer"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -551,19 +533,6 @@ msgstr "3D valg"
 msgid "4"
 msgstr "24"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Brevboks"
@@ -598,9 +567,6 @@ msgstr "8K"
 #
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 #
 msgid "9"
@@ -751,9 +717,6 @@ msgstr "ANSKAFFE TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS fil"
 
 msgid "ASS file"
 msgstr "ASS fil"
@@ -1383,10 +1346,6 @@ msgstr "Autoinstallasjonen er ferdig"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Installerer, vennligst vent til pakkene blir oppdatert"
 
-#
-msgid "Automatic"
-msgstr "Automatisk"
-
 msgid "Automatic Scan"
 msgstr "Automatisk søk"
 
@@ -1427,15 +1386,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "Signalfeil (BER):"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 #
 msgid "Back"
@@ -1703,10 +1653,6 @@ msgstr "CI spor: "
 
 msgid "CPU: "
 msgstr "Prosessor: "
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2246,6 +2192,9 @@ msgstr "Still inn hvilke enheter alternativet for bakgrunnssletting skal brukes.
 msgid "Configure remote control type"
 msgstr "Velg fjernkontroll merke"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Still inn DiSEqC modus for denne LNB."
 
@@ -2501,6 +2450,9 @@ msgstr "Velg video utgangskontakt som skal brukes."
 msgid "Configuring"
 msgstr "Installerer"
 
+msgid "Conflict detection disabled!"
+msgstr "Konflikt deteksjon frakoblet!"
+
 msgid "Conflict not resolved!"
 msgstr "Konflikt ikke løst!"
 
@@ -2736,9 +2688,6 @@ msgstr "Tsjekkia"
 #, fuzzy
 msgid "D"
 msgstr "HD"
-
-msgid "DAC"
-msgstr "DAC"
 
 #
 msgid "DHCP"
@@ -3337,9 +3286,6 @@ msgstr "Vil du oppdatere mottakeren til %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Vil du oppdatere mottakeren?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3508,9 +3454,6 @@ msgstr "El Salvador"
 #
 msgid "Electronic Program Guide"
 msgstr "Elektronisk Program Guide"
-
-msgid "Embedded"
-msgstr "Innebygd"
 
 msgid "Emergency"
 msgstr "Nødsituasjon"
@@ -4340,6 +4283,9 @@ msgstr "Fra:"
 msgid "Frontprocessor version: %s"
 msgstr "Frontprosessor versjon: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Full skjerm"
@@ -4574,9 +4520,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI fargedybde"
 
@@ -4598,9 +4541,6 @@ msgstr "HDMI-CEC kilde ubrukt"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC innstilling"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10-støtte"
 
@@ -4609,9 +4549,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "HELP"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG-støtte"
@@ -5060,16 +4997,12 @@ msgid "Installing software..."
 msgstr "Installerer programvare..."
 
 #
-msgid "Instant record"
+msgid "Instant recording"
 msgstr "Direkte opptak"
 
 #
 msgid "Instant recording location"
 msgstr "Mappe for direkteopptak"
-
-#
-msgid "Instant recording"
-msgstr "Direkte opptak"
 
 #
 msgid "Interface: "
@@ -6503,17 +6436,11 @@ msgstr "Overskrive innstilte filer?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS fil"
 
 msgid "PGS file"
 msgstr "PGS fil"
@@ -6542,7 +6469,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7374,10 +7301,6 @@ msgid "RF output"
 msgstr "RF utgang"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7679,6 +7602,9 @@ msgstr "Gjentakelser"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Erstatt `- ` i dialogboksen med farget tekst for tale (som tekst-TV tekst for hørselshemmede)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Forespørsel for rapport om fysisk adresse"
 
@@ -7885,10 +7811,6 @@ msgstr "Russland"
 msgid "Rwanda"
 msgstr "Rwanda"
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimalisert søkeområde"
 
@@ -7903,9 +7825,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 #
 msgid "SINGLE LAYER DVD"
 msgstr "ETTLAGS DVD"
@@ -7917,17 +7836,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "SRT fil"
-
 msgid "SRT file"
 msgstr "SRT fil"
-
-msgid "SSA File"
-msgstr "SSA fil"
 
 msgid "SSA file"
 msgstr "SSA fil"
@@ -8338,6 +8248,9 @@ msgstr "Velg kanal"
 
 msgid "Select channel to record from"
 msgstr "Velg kanal for opptak"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Velg kopierings mål for:"
@@ -10965,11 +10878,11 @@ msgstr "Oppdateringen er ferdig. Vil du starte mottakeren på nytt?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Oppdateringen mislyktes. Internett forbindelsen til mottakeren fungerer ikke."
 
-msgid "Update has completed."
-msgstr "Oppdateringen er ferdig."
-
 msgid "Update feed not available."
 msgstr "Oppdateringssted er ikke tilgjengelig."
+
+msgid "Update has completed."
+msgstr "Oppdateringen er ferdig."
 
 msgid "Updating"
 msgstr "Oppdaterer"
@@ -11159,9 +11072,6 @@ msgstr "VLAN tilkobling"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-msgid "VOB File"
-msgstr "VOB fil"
 
 msgid "VOB file"
 msgstr "VOB fil"
@@ -11806,21 +11716,8 @@ msgstr "Skriving mislyktes!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Skriv til /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "JA"
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -11975,10 +11872,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Du valgte ingen kanal til opptak."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Vent litt %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12724,10 +12620,6 @@ msgid "mins"
 msgstr "min"
 
 #
-msgid "minutes"
-msgstr "minutter"
-
-#
 msgid "month"
 msgstr "måned"
 
@@ -12760,10 +12652,6 @@ msgstr "film/drama (generelt)"
 msgid "multi"
 msgstr "multi"
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "musikk/ballett/dans (generell)"
 
@@ -12776,6 +12664,11 @@ msgstr "natur/dyr/miljø"
 #
 msgid "never"
 msgstr "aldri"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "To linjer"
 
 msgid "new media"
 msgstr "nytt media"
@@ -12849,6 +12742,11 @@ msgid "not_tested"
 msgstr "ikke_testet"
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Ikke gjør noe"
+
+#
 msgid "nothing connected"
 msgstr "ikke noe er tilkoblet"
 
@@ -12868,6 +12766,9 @@ msgstr "av eller WPA2 på"
 
 msgid "offset is"
 msgstr "offset er"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -12965,9 +12866,6 @@ msgstr "bakover etter dato"
 msgid "rewind to the previous chapter"
 msgstr "spol tilbake til forrige kapittel"
 
-msgid "rgb"
-msgstr "rgb"
-
 #
 msgid "right"
 msgstr "høyre"
@@ -12997,10 +12895,6 @@ msgstr "søkestatus"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasi/skrekk"
-
-#
-msgid "seconds"
-msgstr "sekunder"
 
 #
 msgid "select CAId's"
@@ -13105,6 +12999,9 @@ msgstr "sosialt/politiske spørsmål/økonomi (generelt)"
 
 msgid "social/spiritual science"
 msgstr "sosialt/åndsvitenskap"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "spesial program"
