--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -19,11 +19,6 @@ msgid ""
 msgstr ""
 "\n"
 "Na indrukken van Ok, een moment geduld aub!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Detectie van conflicten is uitgeschakeld!"
 
 msgid ""
 "\n"
@@ -370,10 +365,6 @@ msgstr[1] "%s nieuwe pakketten beschikbaar"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(VU+ type)"
 
@@ -436,29 +427,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10 bit"
-
 msgid "12V output"
 msgstr "12V uitgang"
 
-msgid "12bit"
-msgstr "12 bit"
-
 msgid "13 V"
 msgstr "13V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -474,6 +453,10 @@ msgstr "18V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Twee lijnen"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -511,18 +494,6 @@ msgstr "3d modus"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -549,9 +520,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8 bit"
 
 msgid "9"
 msgstr "9"
@@ -694,9 +662,6 @@ msgstr "VERKRIJG TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS bestand"
 
 msgid "ASS file"
 msgstr "ASS bestand"
@@ -1255,9 +1220,6 @@ msgstr "(Auto)installatie is afgerond"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Autoinstallatie, wacht totdat alle packages ge-update zijn"
 
-msgid "Automatic"
-msgstr "Automatisch"
-
 msgid "Automatic Scan"
 msgstr "Automatische scan"
 
@@ -1293,15 +1255,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Terug"
@@ -1543,9 +1496,6 @@ msgstr "CI slot: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kabel"
@@ -2077,6 +2027,9 @@ msgstr ""
 msgid "Configure remote control type"
 msgstr "Configureer het type afstandbediening"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configureer de DiSEqC modus voor deze LNB."
 
@@ -2450,6 +2403,9 @@ msgstr ""
 msgid "Configuring"
 msgstr "Configureren"
 
+msgid "Conflict detection disabled!"
+msgstr "Detectie van conflicten is uitgeschakeld!"
+
 msgid "Conflict not resolved!"
 msgstr "Conflict niet opgelost!"
 
@@ -2658,9 +2614,6 @@ msgstr "Tsjechië"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3198,9 +3151,6 @@ msgstr "Wilt u uw ontvanger updaten naar %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Wilt u de ontvanger updaten?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Gemenebest Dominica"
 
@@ -3356,9 +3306,6 @@ msgstr "El Salvador"
 
 msgid "Electronic Program Guide"
 msgstr "Elektronische Programma Gids"
-
-msgid "Embedded"
-msgstr "Ingebouwd"
 
 msgid "Emergency"
 msgstr "Noodgeval"
@@ -4102,6 +4049,9 @@ msgstr "Van:"
 msgid "Frontprocessor version: %s"
 msgstr "Frontprocessor versie: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Volledig beeld"
@@ -4315,9 +4265,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI kleurdiepte"
 
@@ -4339,9 +4286,6 @@ msgstr "HDMI-CEC Bron inactief"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC instellingen"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 ondersteuning"
 
@@ -4350,9 +4294,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "HELP"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG ondersteuning"
@@ -4769,14 +4710,11 @@ msgstr "Installeert"
 msgid "Installing software..."
 msgstr "De software wordt geïnstalleerd..."
 
-msgid "Instant record"
+msgid "Instant recording"
 msgstr "Directe opname"
 
 msgid "Instant recording location"
 msgstr "Opname-locatie directe opnames"
-
-msgid "Instant recording"
-msgstr "Directe opname"
 
 msgid "Interface: "
 msgstr "Interface: "
@@ -6050,17 +5988,11 @@ msgstr "Configuratie bestanden overschrijven?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PDC"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS bestand"
 
 msgid "PGS file"
 msgstr "PGS bestand"
@@ -6086,7 +6018,8 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+#, fuzzy
+msgid "PULSe 4K(mini)"
 msgstr "PULSe4K"
 
 msgid "Package list update"
@@ -6845,9 +6778,6 @@ msgstr "REC"
 msgid "RF output"
 msgstr "RF modulator"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -7117,6 +7047,9 @@ msgstr "Herhalingen"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Indien geactiveerd, dan worden `- ` vervangen in gesprekken waarin de teksten per deelnemer gekleurd zijn. Net zoals bij teletekst ondertitels voor gehoorgestoorden."
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 # Graag een acceptabele correctie.
 msgid "Request for physical address report"
 msgstr "Verzoek aanvraag van fysiek adres"
@@ -7306,9 +7239,6 @@ msgstr "Russische federatie"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC geoptimaliseerd zoekbereik"
 
@@ -7321,9 +7251,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "SINGLE LAYER DVD"
 
@@ -7333,17 +7260,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "SRT bestand"
-
 msgid "SRT file"
 msgstr "SRT bestand"
-
-msgid "SSA File"
-msgstr "SSA bestand"
 
 msgid "SSA file"
 msgstr "SSA bestand"
@@ -7714,6 +7632,9 @@ msgstr "Kies de zender"
 
 msgid "Select channel to record from"
 msgstr "Kies de juiste zender om van op te nemen"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Kies kopieerbestemming voor:"
@@ -10118,11 +10039,11 @@ msgstr "De update is gereed. Wilt u de ontvanger herstarten?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Update mislukt. Uw ontvanger heeft geen actieve internetaansluiting."
 
-msgid "Update has completed."
-msgstr "De update is gereed."
-
 msgid "Update feed not available."
 msgstr "Update feed niet beschikbaar."
+
+msgid "Update has completed."
+msgstr "De update is gereed."
 
 msgid "Updating"
 msgstr "Bezig met update"
@@ -10302,9 +10223,6 @@ msgstr "VLAN verbinding"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-msgid "VOB File"
-msgstr "VOB bestand"
 
 msgid "VOB file"
 msgstr "VOB bestand"
@@ -10957,20 +10875,8 @@ msgstr "Schrijven mislukt!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Schrijf naar /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "JA"
-
-msgid "YPbPr"
-msgstr "Component"
 
 msgid "Year"
 msgstr "Jaar"
@@ -11116,8 +11022,8 @@ msgid "You didn't select a channel to record from."
 msgstr "U heeft geen kanaal geselecteerd om van op te nemen."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Wacht op %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11785,9 +11691,6 @@ msgstr "menu"
 msgid "mins"
 msgstr "min"
 
-msgid "minutes"
-msgstr "minuten"
-
 msgid "month"
 msgstr "maand"
 
@@ -11815,9 +11718,6 @@ msgstr "Film/Drama (Algemeen)"
 msgid "multi"
 msgstr "multi"
 
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "Muziek/Ballet/Dans (Algemeen)"
 
@@ -11829,6 +11729,10 @@ msgstr "Natuur/Dieren/Milieu"
 
 msgid "never"
 msgstr "nooit"
+
+#, fuzzy
+msgid "new line"
+msgstr "Twee lijnen"
 
 msgid "new media"
 msgstr "nieuwe media"
@@ -11890,6 +11794,10 @@ msgstr "geen juiste frontend"
 msgid "not_tested"
 msgstr "niet_getest"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Geen actie"
+
 msgid "nothing connected"
 msgstr "niets aangesloten"
 
@@ -11907,6 +11815,9 @@ msgstr "Uit of wpa2 aan"
 
 msgid "offset is"
 msgstr "afstand is"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "aan"
@@ -11992,9 +11903,6 @@ msgstr "Terug op datum"
 msgid "rewind to the previous chapter"
 msgstr "terugspoelen naar vorig hoofdstuk"
 
-msgid "rgb"
-msgstr "RGB"
-
 msgid "right"
 msgstr "rechts"
 
@@ -12021,9 +11929,6 @@ msgstr "zoekstatus"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Science Fiction/Fantasie/Horror"
-
-msgid "seconds"
-msgstr "seconden"
 
 msgid "select CAId's"
 msgstr "Selecteer CAId's"
@@ -12122,6 +12027,9 @@ msgstr "Sociaal/Politiek/Economisch (Algemeen)"
 
 msgid "social/spiritual science"
 msgstr "Sociale/Geestelijke wetenschap"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "speciale gebeurtenissen"
