--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -24,10 +24,6 @@ msgid ""
 msgstr ""
 "\n"
 "Etter å ha trykket OK, vennligst vent!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 #
 msgid ""
@@ -373,10 +369,6 @@ msgstr[1] "%s oppdaterte programvarepakker er tilgjengelig"
 msgid "%s%d min"
 msgstr ""
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr ""
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -448,22 +440,12 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "12V utgang"
 
-msgid "12bit"
-msgstr ""
-
 #
 msgid "13 V"
-msgstr ""
-
-#
-msgid "16:10"
 msgstr ""
 
 #
@@ -471,10 +453,6 @@ msgid "16:10 Letterbox"
 msgstr ""
 
 msgid "16:10 PanScan"
-msgstr ""
-
-#
-msgid "16:9"
 msgstr ""
 
 msgid "16:9 Letterbox"
@@ -494,6 +472,11 @@ msgstr ""
 #
 msgid "2"
 msgstr ""
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Vis informasjonslinje"
 
 msgid "20 MB/s"
 msgstr ""
@@ -536,19 +519,6 @@ msgstr "3d valg"
 msgid "4"
 msgstr ""
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-#
-msgid "4:3"
-msgstr ""
-
 #
 msgid "4:3 Letterbox"
 msgstr ""
@@ -579,9 +549,6 @@ msgid "8"
 msgstr ""
 
 msgid "8K"
-msgstr ""
-
-msgid "8bit"
 msgstr ""
 
 #
@@ -733,9 +700,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1362,10 +1326,6 @@ msgstr "Installasjonen er ferdig"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-#
-msgid "Automatic"
-msgstr "Automatisk"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1407,15 +1367,6 @@ msgstr ""
 
 #
 msgid "BER:"
-msgstr ""
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
 msgstr ""
 
 #
@@ -1687,10 +1638,6 @@ msgid "CI slot: "
 msgstr ""
 
 msgid "CPU: "
-msgstr ""
-
-#
-msgid "CVBS"
 msgstr ""
 
 #
@@ -2223,6 +2170,9 @@ msgstr "Still inn på hvilke enheter bakgrunnssletting skal benyttes."
 msgid "Configure remote control type"
 msgstr "Still inn fjernkontroll valg"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Still inn DiSEqC valg for denne LNB."
 
@@ -2482,6 +2432,9 @@ msgstr "Velg videoutgang som skal brukes."
 msgid "Configuring"
 msgstr "Stiller inn"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2715,9 +2668,6 @@ msgstr "Tjekkisk"
 
 #
 msgid "D"
-msgstr ""
-
-msgid "DAC"
 msgstr ""
 
 #
@@ -3328,9 +3278,6 @@ msgstr "Vil du oppdatere mottaker til %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Vil du oppdatere din mottaker?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3503,9 +3450,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Elektronisk Program Guide"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4312,6 +4256,9 @@ msgstr "Fra:"
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
 msgid "Full screen"
@@ -4548,9 +4495,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4572,9 +4516,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr ""
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ikke støttet"
@@ -4583,9 +4524,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -5035,16 +4973,13 @@ msgstr "Installerer"
 msgid "Installing software..."
 msgstr "Installerer programvare..."
 
-msgid "Instant record"
-msgstr ""
+#
+msgid "Instant recording"
+msgstr "Direkte opptak"
 
 #
 msgid "Instant recording location"
 msgstr "Plassering for direkteopptak"
-
-#
-msgid "Instant recording"
-msgstr "Direkte opptak"
 
 #
 msgid "Interface: "
@@ -6490,16 +6425,10 @@ msgstr "Overskrive innstilte filer?"
 msgid "PAL"
 msgstr ""
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr ""
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6529,7 +6458,7 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7348,10 +7277,6 @@ msgid "RF output"
 msgstr "RF utgang"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7647,6 +7572,9 @@ msgstr "Gjentakelser"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 #, fuzzy
 msgid "Request for physical address report"
 msgstr "TV fysiske adresse"
@@ -7862,10 +7790,6 @@ msgstr ""
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr ""
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -7876,9 +7800,6 @@ msgid "SCR JESS"
 msgstr ""
 
 msgid "SCR Unicable"
-msgstr ""
-
-msgid "SDR"
 msgstr ""
 
 #
@@ -7893,16 +7814,7 @@ msgstr ""
 msgid "SNR:"
 msgstr ""
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -8309,6 +8221,9 @@ msgstr ""
 
 msgid "Select channel to record from"
 msgstr "Velg kanal for opptak"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Velg kopierings mål for:"
@@ -10926,11 +10841,11 @@ msgstr "Oppdateringen er ferdig. Mottakeren må startes på nytt for at endringe
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Oppdateringen mislyktes. Mottakeren mangler internettforbindelse."
 
-msgid "Update has completed."
-msgstr "Oppdateringen er ferdig."
-
 msgid "Update feed not available."
 msgstr "Oppdateringsstedet er ikke tilgjengelig."
+
+msgid "Update has completed."
+msgstr "Oppdateringen er ferdig."
 
 #
 msgid "Updating"
@@ -11124,9 +11039,6 @@ msgstr "LAN oppkobling"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr ""
@@ -11777,20 +11689,7 @@ msgstr "Skriving feilet!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
-msgstr ""
-
-#
-msgid "YPbPr"
 msgstr ""
 
 #
@@ -11936,10 +11835,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Du har ikke valgt kanal for opptak."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Du må vente %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12689,10 +12587,6 @@ msgid "mins"
 msgstr "min"
 
 #
-msgid "minutes"
-msgstr "minutter"
-
-#
 msgid "month"
 msgstr "måned"
 
@@ -12724,10 +12618,6 @@ msgstr "film/drama (generelt)"
 msgid "multi"
 msgstr ""
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "musikk/ballett/dans (generelt)"
 
@@ -12740,6 +12630,11 @@ msgstr "natur/dyr/miljø"
 #
 msgid "never"
 msgstr "aldri"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Vis informasjonslinje"
 
 msgid "new media"
 msgstr "ny media"
@@ -12812,6 +12707,11 @@ msgid "not_tested"
 msgstr ""
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Gjør ingenting"
+
+#
 msgid "nothing connected"
 msgstr "ikke noe er tilkoblet"
 
@@ -12831,6 +12731,9 @@ msgstr ""
 
 msgid "offset is"
 msgstr "offset er"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -12927,9 +12830,6 @@ msgstr "bakover etter dato"
 msgid "rewind to the previous chapter"
 msgstr "spol tilbake til forrige kapittel"
 
-msgid "rgb"
-msgstr ""
-
 #
 msgid "right"
 msgstr "høyre"
@@ -12960,10 +12860,6 @@ msgstr "søkestatus"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction/fantasi/skrekk"
-
-#
-msgid "seconds"
-msgstr "sekunder"
 
 #
 msgid "select CAId's"
@@ -13069,6 +12965,9 @@ msgstr "sosial/politiske spørsmål/økonomi (generelt)"
 
 msgid "social/spiritual science"
 msgstr "sosial/åndsvitenskap"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "spesial program"
