--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-05-05 20:00+0200\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -19,11 +19,6 @@ msgid ""
 msgstr ""
 "\n"
 "Po naciśnięciu OK czekaj!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Wykrywanie konfliktów wyłączone!"
 
 msgid ""
 "\n"
@@ -383,10 +378,6 @@ msgstr[2] "%s zaktualizowanych pakietów dostępnych"
 msgid "%s%d min"
 msgstr ""
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr ""
-
 msgid "(VU+ type)"
 msgstr "(Typ VU+)"
 
@@ -449,29 +440,17 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 msgid "12V output"
 msgstr "Wyjście 12V"
 
-msgid "12bit"
-msgstr ""
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -487,6 +466,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Dwie linie"
 
 msgid "20 MB/s"
 msgstr ""
@@ -524,18 +507,6 @@ msgstr "Tryb 3d"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -562,9 +533,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr ""
 
 msgid "9"
 msgstr "9"
@@ -707,9 +675,6 @@ msgstr "UZYSKIWANIE TSID/ONID"
 
 msgid "AGC:"
 msgstr ""
-
-msgid "ASS File"
-msgstr "Plik ASS"
 
 msgid "ASS file"
 msgstr "Plik ASS"
@@ -1269,9 +1234,6 @@ msgstr "Automatyczna instalacja zakończona"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Automatyczna instalacja - czekaj na aktualizację pakietów"
 
-msgid "Automatic"
-msgstr "Automatycznie"
-
 msgid "Automatic Scan"
 msgstr "Skanowanie automatyczne"
 
@@ -1307,15 +1269,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 msgid "Back"
 msgstr "Powrót"
@@ -1554,9 +1507,6 @@ msgstr "Slot CI: "
 
 msgid "CPU: "
 msgstr ""
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kablówka"
@@ -2035,6 +1985,9 @@ msgstr "Skonfiguruj dla jakich urządzeń opcja usuwania w tle ma być użyta."
 msgid "Configure remote control type"
 msgstr "Skonfiguruj typ pilota zdalnego sterowania"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Skonfiguruj tryb DiSEqC dla tego LNB."
 
@@ -2287,6 +2240,9 @@ msgstr "Skonfiguruj które wyście wideo ma być użyte."
 msgid "Configuring"
 msgstr "Konfigurowanie"
 
+msgid "Conflict detection disabled!"
+msgstr "Wykrywanie konfliktów wyłączone!"
+
 msgid "Conflict not resolved!"
 msgstr "Konflikt nierozwiązany!"
 
@@ -2495,9 +2451,6 @@ msgstr "Czechy"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3025,9 +2978,6 @@ msgstr "Chcesz zaktualizować oprogramowanie odbiornika do %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Chcesz zaktualizować oprogramowanie odbiornika?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr "Dominika"
 
@@ -3180,9 +3130,6 @@ msgstr "Salwador"
 
 msgid "Electronic Program Guide"
 msgstr "EPG"
-
-msgid "Embedded"
-msgstr "Wtopione"
 
 msgid "Emergency"
 msgstr "awaryjna"
@@ -3923,6 +3870,9 @@ msgstr "Z:"
 msgid "Frontprocessor version: %s"
 msgstr "Wersja front procesora: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Tryb pełnoekranowy"
@@ -4136,9 +4086,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr "Głębia kolorów HDMI"
 
@@ -4160,9 +4107,6 @@ msgstr "Źródło HDMI-CEC nieaktywne"
 msgid "HDMI-CEC setup"
 msgstr "Ustawienia HDMI-CEC"
 
-msgid "HDR10"
-msgstr ""
-
 msgid "HDR10 support"
 msgstr "Obsługa HDR10"
 
@@ -4170,9 +4114,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 msgid "HLG support"
@@ -4580,14 +4521,11 @@ msgstr "Instalowanie"
 msgid "Installing software..."
 msgstr "Instalowanie oprogramowania..."
 
-msgid "Instant record"
-msgstr "Natychmiastowe nagranie - menu"
+msgid "Instant recording"
+msgstr "Natychmiastowe nagranie"
 
 msgid "Instant recording location"
 msgstr "Lokalizacja 'natychmiastowego' nagrania"
-
-msgid "Instant recording"
-msgstr "Natychmiastowe nagranie"
 
 msgid "Interface: "
 msgstr "Interfejs: "
@@ -5856,17 +5794,11 @@ msgstr "Nadpisać pliki konfiguracyjne?"
 msgid "PAL"
 msgstr ""
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr ""
 
 msgid "PDC"
 msgstr ""
-
-msgid "PGS File"
-msgstr "Plik PGS"
 
 msgid "PGS file"
 msgstr "Plik PGS"
@@ -5892,7 +5824,7 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6623,9 +6555,6 @@ msgstr ""
 msgid "RF output"
 msgstr "Wyjście RF"
 
-msgid "RGB"
-msgstr ""
-
 msgid "Radio"
 msgstr ""
 
@@ -6895,6 +6824,9 @@ msgstr "Powtórzenia"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Zamienia '- '  w dialogach na różne kolory dla poszczególnych rozmówców (jak w napisach teletekst dla niesłyszących)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Żądanie raportowania fizycznego adresu TV"
 
@@ -7080,9 +7012,6 @@ msgstr "Federacja Rosyjska"
 msgid "Rwanda"
 msgstr ""
 
-msgid "S-Video"
-msgstr ""
-
 msgid "SCPC optimized search range"
 msgstr "Zoptymalizowany zakres wyszukiwania SCPC"
 
@@ -7095,9 +7024,6 @@ msgstr ""
 msgid "SCR Unicable"
 msgstr ""
 
-msgid "SDR"
-msgstr ""
-
 msgid "SINGLE LAYER DVD"
 msgstr "Jednowarstwowe DVD"
 
@@ -7107,17 +7033,8 @@ msgstr ""
 msgid "SNR:"
 msgstr ""
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr "Plik SRT"
-
 msgid "SRT file"
 msgstr "Plik SRT"
-
-msgid "SSA File"
-msgstr "Plik SSA"
 
 msgid "SSA file"
 msgstr "Plik SSA"
@@ -7491,6 +7408,9 @@ msgstr "Wybierz kanał"
 
 msgid "Select channel to record from"
 msgstr "Wybierz kanał z którego nagrywać"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Wybierz miejsce docelowe kopii dla:"
@@ -9865,11 +9785,11 @@ msgstr "Aktualizacja zakończona. Czy chcesz zrestartować odbiornik?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Aktualizacja nie powiodła się. Brak działającego połączenia internetowego."
 
-msgid "Update has completed."
-msgstr "Aktualizacja zakończona."
-
 msgid "Update feed not available."
 msgstr "Aktualizacje nie dostępne."
+
+msgid "Update has completed."
+msgstr "Aktualizacja zakończona."
 
 msgid "Updating"
 msgstr "Aktualizowanie"
@@ -10043,9 +9963,6 @@ msgstr "Połączenie VLAN"
 
 msgid "VMGM (intro trailer)"
 msgstr ""
-
-msgid "VOB File"
-msgstr "Plik VOB"
 
 msgid "VOB file"
 msgstr "Plik VOB"
@@ -10654,20 +10571,8 @@ msgstr "Błąd zapisu!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Zapisz do /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr "Tak"
-
-msgid "YPbPr"
-msgstr "Component"
 
 msgid "Year"
 msgstr "Rok"
@@ -10812,8 +10717,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Nie wybrałeś kanału z którego nagrywać."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Musisz poczekać %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11477,9 +11382,6 @@ msgstr "Menu"
 msgid "mins"
 msgstr "min"
 
-msgid "minutes"
-msgstr "minuty"
-
 msgid "month"
 msgstr "miesiąc"
 
@@ -11507,9 +11409,6 @@ msgstr "Film/Dramat"
 msgid "multi"
 msgstr ""
 
-msgid "multinorm"
-msgstr "Multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "Muzyka/Balet/Taniec"
 
@@ -11521,6 +11420,10 @@ msgstr "Natura/Zwierzęta/Środowisko"
 
 msgid "never"
 msgstr "Nigdy"
+
+#, fuzzy
+msgid "new line"
+msgstr "Dwie linie"
 
 msgid "new media"
 msgstr "Nowe media"
@@ -11582,6 +11485,10 @@ msgstr "nieprawidłowy frontend"
 msgid "not_tested"
 msgstr "nieprzetestowane"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Nic nie rób"
+
 msgid "nothing connected"
 msgstr "Nic nie podłączono"
 
@@ -11599,6 +11506,9 @@ msgstr "wyłączone lub wpa2"
 
 msgid "offset is"
 msgstr "offset jest"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "Włączony"
@@ -11684,9 +11594,6 @@ msgstr "Wg daty (od najstarszego)"
 msgid "rewind to the previous chapter"
 msgstr "Cofnij do poprzedniego rozdziału"
 
-msgid "rgb"
-msgstr ""
-
 msgid "right"
 msgstr "Prawy"
 
@@ -11713,9 +11620,6 @@ msgstr "Status skanowania"
 
 msgid "science fiction/fantasy/horror"
 msgstr "SF/Fantasy/Horror"
-
-msgid "seconds"
-msgstr "sekundy"
 
 msgid "select CAId's"
 msgstr "Wybierz CAId'y"
@@ -11813,6 +11717,9 @@ msgstr "Poltyka/Społeczeństwo/Ekonomia"
 
 msgid "social/spiritual science"
 msgstr "Nauki społeczne"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "Wydarzenia specjalne"
