--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -22,10 +22,6 @@ msgid ""
 msgstr ""
 "\n"
 "Depois de pressionar OK, aguarde por favor!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 #
 msgid ""
@@ -383,10 +379,6 @@ msgstr[1] "%s actualizações disponíveis."
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -455,21 +447,12 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "saída 12V"
 
-msgid "12bit"
-msgstr ""
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -478,9 +461,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -498,6 +478,11 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Mostrar linha de informação"
 
 msgid "20 MB/s"
 msgstr ""
@@ -536,18 +521,6 @@ msgstr "modo 3D"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -578,9 +551,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 msgid "9"
 msgstr "9"
@@ -740,9 +710,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1429,10 +1396,6 @@ msgstr "Instalação completa."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-#
-msgid "Automatic"
-msgstr "Automático"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1475,15 +1438,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 #
 msgid "Back"
@@ -1757,9 +1711,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr ""
-
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2311,6 +2262,9 @@ msgstr "Configurar quais os dispositivos em que a eliminação em segundo plano 
 msgid "Configure remote control type"
 msgstr "Configurar o tipo de controlo remoto"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Configurar o modo DISEqC para este LNB."
 
@@ -2593,6 +2547,9 @@ msgstr "Configura qual conector de saída de vídeo que deverá ser usado."
 msgid "Configuring"
 msgstr "A configurar"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2842,9 +2799,6 @@ msgstr "Checo"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3481,9 +3435,6 @@ msgstr "Deseja actualizar o receptor para %s ?"
 msgid "Do you want to update your receiver?"
 msgstr "Deseja actualizar o receptor?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3666,9 +3617,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Guia de Programação"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4498,6 +4446,9 @@ msgstr "De:"
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
 msgid "Full screen"
@@ -4740,9 +4691,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4765,9 +4713,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr "Configurações HDMI-CEC"
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "não suportado"
@@ -4776,9 +4721,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -5246,18 +5188,15 @@ msgstr "A instalar"
 msgid "Installing software..."
 msgstr "A instalar o software..."
 
-msgid "Instant record"
-msgstr ""
+#
+#, fuzzy
+msgid "Instant recording"
+msgstr "Gravação instantânea"
 
 #
 #, fuzzy
 msgid "Instant recording location"
 msgstr "Localização das gravações instantâneas"
-
-#
-#, fuzzy
-msgid "Instant recording"
-msgstr "Gravação instantânea"
 
 msgid "Interface: "
 msgstr "Interface: "
@@ -6781,16 +6720,10 @@ msgstr "Substituir os ficheiros de configuração?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6821,7 +6754,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7717,10 +7650,6 @@ msgid "RF output"
 msgstr "Saída RF"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Rádio"
 
@@ -8050,6 +7979,9 @@ msgstr "Repetições"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 #, fuzzy
 msgid "Request for physical address report"
 msgstr "Relatório endereço físico TV"
@@ -8277,10 +8209,6 @@ msgstr "Ventilador"
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr "S-Vídeo"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -8294,11 +8222,6 @@ msgid "SCR Unicable"
 msgstr ""
 
 #
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
-#
 msgid "SINGLE LAYER DVD"
 msgstr "DVD Single Layer"
 
@@ -8310,16 +8233,7 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -8765,6 +8679,9 @@ msgstr ""
 #
 msgid "Select channel to record from"
 msgstr "Seleccione o canal que deseja gravar"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Seleccione o destino para copiar:"
@@ -11548,12 +11465,12 @@ msgstr "Actualização completa. Deseja reiniciar o seu receptor?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "A actualização falhou. O seu receptor não tem uma ligação à Internet funcional."
 
-msgid "Update has completed."
-msgstr "A actualização foi concluída."
-
 #
 msgid "Update feed not available."
 msgstr "Servidor de actualizações não disponível"
+
+msgid "Update has completed."
+msgstr "A actualização foi concluída."
 
 #
 msgid "Updating"
@@ -11763,9 +11680,6 @@ msgstr "Ligação LAN"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (trailer de intro)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr ""
@@ -12460,21 +12374,8 @@ msgstr "Escrita falhou!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr ""
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12622,10 +12523,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Não seleccionou um canal para gravar."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Por favor aguarde %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13386,10 +13286,6 @@ msgid "mins"
 msgstr "mins"
 
 #
-msgid "minutes"
-msgstr "minutos"
-
-#
 msgid "month"
 msgstr "mês"
 
@@ -13421,10 +13317,6 @@ msgstr "filmes/drama"
 msgid "multi"
 msgstr ""
 
-#
-msgid "multinorm"
-msgstr "multinorma"
-
 msgid "music/ballet/dance (general)"
 msgstr "musica/ballet/dança"
 
@@ -13437,6 +13329,11 @@ msgstr "natureza/animais/ambiente"
 #
 msgid "never"
 msgstr "nunca"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Mostrar linha de informação"
 
 msgid "new media"
 msgstr "nova média"
@@ -13508,6 +13405,11 @@ msgid "not_tested"
 msgstr ""
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Não efectue alterações"
+
+#
 msgid "nothing connected"
 msgstr "nada ligado"
 
@@ -13528,6 +13430,9 @@ msgstr ""
 
 msgid "offset is"
 msgstr "o desvio é"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -13628,9 +13533,6 @@ msgstr "reservar por data"
 msgid "rewind to the previous chapter"
 msgstr "voltar ao capítulo anterior"
 
-msgid "rgb"
-msgstr ""
-
 #
 msgid "right"
 msgstr "direita"
@@ -13662,10 +13564,6 @@ msgstr "estado da pesquisa"
 
 msgid "science fiction/fantasy/horror"
 msgstr "ciência ficção/fantasia/terror"
-
-#
-msgid "seconds"
-msgstr "segundos"
 
 #
 msgid "select CAId's"
@@ -13774,6 +13672,9 @@ msgstr "social/política/economia"
 
 msgid "social/spiritual science"
 msgstr "social/ciência espiritual"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "programas especiais"
