--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2020-05-16 18:48+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -20,10 +20,6 @@ msgid ""
 msgstr ""
 "\n"
 "Po pritisku na OK, počakajte!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 #
 msgid ""
@@ -412,10 +408,6 @@ msgstr[3] "%s nadgradenj na voljo."
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -489,23 +481,13 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "12V izhod"
 
-msgid "12bit"
-msgstr ""
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -514,10 +496,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -537,6 +515,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Prikaz info. vrstice"
 
 msgid "20 MB/s"
 msgstr ""
@@ -579,19 +562,6 @@ msgstr "3D način"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -628,9 +598,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 #
 msgid "9"
@@ -790,9 +757,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1464,10 +1428,6 @@ msgstr "Namestitev je zaključena."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-#
-msgid "Automatic"
-msgstr "Samodejno"
-
 msgid "Automatic Scan"
 msgstr "Samodejno iskanje "
 
@@ -1512,15 +1472,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 #
 msgid "Back"
@@ -1800,10 +1751,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr "CPU: "
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2343,6 +2290,9 @@ msgstr "Nastavitev omogoča, da določite, na katerih napravah naj bo uporabljen
 msgid "Configure remote control type"
 msgstr "Nastavitve vrsto daljinskega upravljalnika"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Nastavitev DiSEqC načina za ta LNB."
 
@@ -2614,6 +2564,9 @@ msgstr "Nastavitev omogoča izbiro želenega video izhoda. Sedaj je večinoma v 
 msgid "Configuring"
 msgstr "Nastavljam..."
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr "Konflikt ni razrešen!"
 
@@ -2860,9 +2813,6 @@ msgstr "Češko"
 #
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 #
 msgid "DHCP"
@@ -3501,9 +3451,6 @@ msgstr "Želite nadgraditi vaš sprejemnik na verzijo %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Želite posodobiti vaš sprejemnik na zadnjo verzijo OpenPLi slike?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3693,9 +3640,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Elektronski spored programov (EPG)"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4544,6 +4488,9 @@ msgstr "Od:"
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
@@ -4788,9 +4735,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4813,9 +4757,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC nastavitve"
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "ni podprto"
@@ -4824,9 +4765,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -5295,16 +5233,13 @@ msgstr "Nameščam..."
 msgid "Installing software..."
 msgstr "Poteka nameščanje programske opreme..."
 
-msgid "Instant record"
+#
+msgid "Instant recording"
 msgstr "Takojšnje snemanje"
 
 #
 msgid "Instant recording location"
 msgstr "Lokacija takojšnjega snemanja"
-
-#
-msgid "Instant recording"
-msgstr "Takojšnje snemanje"
 
 #
 msgid "Interface: "
@@ -6794,16 +6729,10 @@ msgstr "Prepis nastavitvenih datotek?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6833,7 +6762,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7720,10 +7649,6 @@ msgid "RF output"
 msgstr "RF Izhod"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -8047,6 +7972,9 @@ msgstr "Ponovitve"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Zamenjava `- ` v dialogih z obarvanim besedilom glede na govornika (kot teletekst podnapisi za gluhe in naglušne)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr ""
 
@@ -8276,10 +8204,6 @@ msgstr "Delovanje ventilatorja"
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -8293,11 +8217,6 @@ msgid "SCR Unicable"
 msgstr ""
 
 #
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
-#
 msgid "SINGLE LAYER DVD"
 msgstr "Enoslojni DVD"
 
@@ -8309,16 +8228,7 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -8761,6 +8671,9 @@ msgstr "Izberi kanal"
 #
 msgid "Select channel to record from"
 msgstr "Izberite kanal za snemanje"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Izberite končni cilj za:"
@@ -11518,12 +11431,12 @@ msgstr "Nadgradnja je končana. Želite izvesti ponovni zagon sprejemnika?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Posodobitev ni bila uspešna. Sprejemnik nima delujoče internetne povezave!"
 
-msgid "Update has completed."
-msgstr "Posodobitev se je uspešno zaključila."
-
 #
 msgid "Update feed not available."
 msgstr "Server je trenutno nedosegljiv."
+
+msgid "Update has completed."
+msgstr "Posodobitev se je uspešno zaključila."
 
 #
 msgid "Updating"
@@ -11725,9 +11638,6 @@ msgstr "Žična omrežna povezava"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (v trailer)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr ""
@@ -12409,21 +12319,8 @@ msgstr "Zapisovanje neuspešno!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr ""
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12574,10 +12471,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Niste izbrali ustreznega kanala za snemanje."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Počakati morate %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13340,10 +13236,6 @@ msgid "mins"
 msgstr "mins"
 
 #
-msgid "minutes"
-msgstr "minute"
-
-#
 msgid "month"
 msgstr "mesec"
 
@@ -13375,10 +13267,6 @@ msgstr ""
 msgid "multi"
 msgstr ""
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr ""
 
@@ -13391,6 +13279,11 @@ msgstr ""
 #
 msgid "never"
 msgstr "nikoli"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Prikaz info. vrstice"
 
 msgid "new media"
 msgstr ""
@@ -13463,6 +13356,11 @@ msgid "not_tested"
 msgstr ""
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Izhod"
+
+#
 msgid "nothing connected"
 msgstr "nič ni povezano"
 
@@ -13482,6 +13380,9 @@ msgid "off or wpa2 on"
 msgstr ""
 
 msgid "offset is"
+msgstr ""
+
+msgid "omit"
 msgstr ""
 
 #
@@ -13585,9 +13486,6 @@ msgstr "razvrščanje po datumu (obratno)"
 msgid "rewind to the previous chapter"
 msgstr "previjanje na prejšnje poglavje"
 
-msgid "rgb"
-msgstr ""
-
 #
 msgid "right"
 msgstr "desno"
@@ -13617,9 +13515,6 @@ msgstr "stanje iskanja"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-msgid "seconds"
-msgstr "sekund"
 
 #
 msgid "select CAId's"
@@ -13727,6 +13622,9 @@ msgid "social/political issues/economics (general)"
 msgstr ""
 
 msgid "social/spiritual science"
+msgstr ""
+
+msgid "space"
 msgstr ""
 
 msgid "special events"
