--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -22,11 +22,6 @@ msgid ""
 msgstr ""
 "\n"
 "Efter att ha tryckt OK, var god vänta!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Konfliktdetektering avstängd!"
 
 #
 msgid ""
@@ -379,10 +374,6 @@ msgstr[1] "%s uppdateringar tillgängliga."
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 #, fuzzy
 msgid "(VU+ type)"
 msgstr "DVB Typ"
@@ -457,33 +448,19 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "12V utgång"
 
-msgid "12bit"
-msgstr ""
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -502,6 +479,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Visa Infolinje"
 
 msgid "20 MB/s"
 msgstr ""
@@ -541,19 +523,6 @@ msgstr "3d läge"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -590,9 +559,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 #
 msgid "9"
@@ -755,10 +721,6 @@ msgstr ""
 
 msgid "AGC:"
 msgstr "AGC :"
-
-#, fuzzy
-msgid "ASS File"
-msgstr "ASS fil"
 
 msgid "ASS file"
 msgstr "ASS fil"
@@ -1413,10 +1375,6 @@ msgstr "Installationen är klar."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-#
-msgid "Automatic"
-msgstr "Automatisk"
-
 msgid "Automatic Scan"
 msgstr "Automatisk Sökning"
 
@@ -1460,15 +1418,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER : "
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 #
 msgid "Back"
@@ -1743,10 +1692,6 @@ msgstr "CI plats :"
 
 msgid "CPU: "
 msgstr ""
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2284,6 +2229,9 @@ msgstr "Konfigurera på vilka enheter som bakgrundsradering ska användas."
 msgid "Configure remote control type"
 msgstr "Konfigurera fjärrkontrollstyp"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Konfigurera DiSEqC läget för denna LNB."
 
@@ -2554,6 +2502,9 @@ msgstr "Konfigurera vilken videoutgång som ska användas."
 msgid "Configuring"
 msgstr "Konfigurering"
 
+msgid "Conflict detection disabled!"
+msgstr "Konfliktdetektering avstängd!"
+
 msgid "Conflict not resolved!"
 msgstr "Konflikt inte löst!"
 
@@ -2798,9 +2749,6 @@ msgstr "Tjeckiska"
 #
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 #
 msgid "DHCP"
@@ -3425,9 +3373,6 @@ msgstr "Vill du uppdatera din mottagare till %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Vill du uppdatera din mottagare?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3607,10 +3552,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Elektronisk Program Guide"
-
-#, fuzzy
-msgid "Embedded"
-msgstr "inbyggd"
 
 msgid "Emergency"
 msgstr ""
@@ -4438,6 +4379,9 @@ msgstr "Från :"
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 #, fuzzy
 msgid "Full screen"
@@ -4676,9 +4620,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr "HDMI Färgdjup"
 
@@ -4703,9 +4644,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC inställning"
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "stöds ej"
@@ -4714,9 +4652,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -5173,16 +5108,13 @@ msgstr "Installerar"
 msgid "Installing software..."
 msgstr "Installerar mjukvara..."
 
-msgid "Instant record"
+#
+msgid "Instant recording"
 msgstr "Direktinspelning"
 
 #
 msgid "Instant recording location"
 msgstr "Direktinspelningens plats"
-
-#
-msgid "Instant recording"
-msgstr "Direktinspelning"
 
 #
 msgid "Interface: "
@@ -6654,18 +6586,11 @@ msgstr "Skriva över konfigurationsfilerna ?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr ""
-
-#, fuzzy
-msgid "PGS File"
-msgstr "PGS fil"
 
 msgid "PGS file"
 msgstr "PGS fil"
@@ -6693,7 +6618,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7557,10 +7482,6 @@ msgid "RF output"
 msgstr "RF ut"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -7878,6 +7799,9 @@ msgstr "Upprepningar"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Ersätt `-` i dialoger med färgad text per högtalare (som text-TV undertexter för hörselnedsatta)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 #, fuzzy
 msgid "Request for physical address report"
 msgstr "TV - fysisk adress rapport"
@@ -8102,10 +8026,6 @@ msgstr "Fläktdrift"
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimerat sökområde"
 
@@ -8119,11 +8039,6 @@ msgid "SCR Unicable"
 msgstr ""
 
 #
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
-#
 msgid "SINGLE LAYER DVD"
 msgstr "SINGLE LAYER DVD"
 
@@ -8135,19 +8050,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR :"
 
-msgid "SPDIF"
-msgstr ""
-
-#, fuzzy
-msgid "SRT File"
-msgstr "SRT fil"
-
 msgid "SRT file"
 msgstr "SRT fil"
-
-#, fuzzy
-msgid "SSA File"
-msgstr "SSA fil"
 
 msgid "SSA file"
 msgstr "SSA fil"
@@ -8574,6 +8478,9 @@ msgstr "Välj kanal"
 #
 msgid "Select channel to record from"
 msgstr "Välj kanal att spela in från"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Välj destination för kopia :"
@@ -11309,12 +11216,12 @@ msgstr "Uppdatering färdig, vill du starta om din mottagare?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Uppdatering misslyckades. Din mottagare har inte en fungerande internetanslutning."
 
-msgid "Update has completed."
-msgstr "Uppdatering har slutförts."
-
 #
 msgid "Update feed not available."
 msgstr "Uppdateringsfeed ej tillgänglig."
+
+msgid "Update has completed."
+msgstr "Uppdatering har slutförts."
 
 #
 msgid "Updating"
@@ -11510,10 +11417,6 @@ msgstr "LAN anslutning"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-#, fuzzy
-msgid "VOB File"
-msgstr "VOB fil"
 
 msgid "VOB file"
 msgstr "VOB fil"
@@ -12194,21 +12097,8 @@ msgstr "Skrivning misslyckades!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Skriv till /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr "Ja"
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12372,10 +12262,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Du valde ingen kanal att spela in från."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Du måste vänta %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13130,10 +13019,6 @@ msgid "mins"
 msgstr "min"
 
 #
-msgid "minutes"
-msgstr "minuter"
-
-#
 msgid "month"
 msgstr "månad"
 
@@ -13165,10 +13050,6 @@ msgstr "film / drama (allmänt)"
 msgid "multi"
 msgstr "multi"
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "musik / balett / dans (allmänt)"
 
@@ -13181,6 +13062,11 @@ msgstr "natur / djur / miljö"
 #
 msgid "never"
 msgstr "aldrig"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Visa Infolinje"
 
 msgid "new media"
 msgstr "nya medier"
@@ -13252,6 +13138,11 @@ msgid "not_tested"
 msgstr "inte_testad"
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Gör inget"
+
+#
 msgid "nothing connected"
 msgstr "inget anslutet"
 
@@ -13272,6 +13163,9 @@ msgstr "avstängd eller wpa2 på"
 
 msgid "offset is"
 msgstr "förskjutningen är"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -13373,9 +13267,6 @@ msgstr "omvänd datumordning"
 msgid "rewind to the previous chapter"
 msgstr "spola bakåt till föregående kapitel"
 
-msgid "rgb"
-msgstr ""
-
 #
 msgid "right"
 msgstr "höger"
@@ -13407,10 +13298,6 @@ msgstr "sökningsstatus"
 
 msgid "science fiction/fantasy/horror"
 msgstr "science fiction / fantasi / skräck"
-
-#
-msgid "seconds"
-msgstr "sekunder"
 
 #
 msgid "select CAId's"
@@ -13517,6 +13404,9 @@ msgstr "sociala / politiska frågor / ekonomi (allmänt)"
 
 msgid "social/spiritual science"
 msgstr "social / andlig vetenskap"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "speciella evenemang"
