--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2021-07-31 17:00+0800\n"
 "Last-Translator: 孤独之剑 <haotzyy1970@yahoo.com>\n"
 "Language-Team: 孤独之剑 <haotzyy1970@yahoo.com>\n"
@@ -20,11 +20,6 @@ msgid ""
 msgstr ""
 "\n"
 "按OK键确定后,请稍等!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"冲突检测禁用!"
 
 msgid ""
 "\n"
@@ -371,10 +366,6 @@ msgstr[1] "%s 个更新包可用"
 msgid "%s%d min"
 msgstr "%s%d 分钟"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(VU类型)"
 
@@ -437,29 +428,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10位"
-
 msgid "12V output"
 msgstr "12V 输出"
 
-msgid "12bit"
-msgstr "12位"
-
 msgid "13 V"
 msgstr "13V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10信箱模式"
 
 msgid "16:10 PanScan"
 msgstr "16:10伸缩"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9信箱模式"
@@ -475,6 +454,10 @@ msgstr "18V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "双行模式"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -512,18 +495,6 @@ msgstr "3D模式"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3信箱模式"
 
@@ -550,9 +521,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8位"
 
 msgid "9"
 msgstr "9"
@@ -696,9 +664,6 @@ msgstr "获取TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS文件"
 
 msgid "ASS file"
 msgstr "ASS文件"
@@ -1258,9 +1223,6 @@ msgstr "自动安装已完成"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "自动安装请等待更新包"
 
-msgid "Automatic"
-msgstr "自动"
-
 msgid "Automatic Scan"
 msgstr "自动扫描"
 
@@ -1296,15 +1258,6 @@ msgstr "误码率"
 
 msgid "BER:"
 msgstr "误码:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "返回"
@@ -1543,9 +1496,6 @@ msgstr "CI插槽: "
 
 msgid "CPU: "
 msgstr "处理器: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "有线"
@@ -2024,6 +1974,9 @@ msgstr "配置哪些设备后台删除选项可以使用."
 msgid "Configure remote control type"
 msgstr "配置遥控类型"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "配置高频头的DiSEqC模式."
 
@@ -2276,6 +2229,9 @@ msgstr "配置使用哪一个视频输出连接端口."
 msgid "Configuring"
 msgstr "配置"
 
+msgid "Conflict detection disabled!"
+msgstr "冲突检测禁用!"
+
 msgid "Conflict not resolved!"
 msgstr "冲突没有解决!"
 
@@ -2484,9 +2440,6 @@ msgstr "捷克语"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "自动分配地址(DHCP)"
@@ -3010,9 +2963,6 @@ msgstr "是否想升级机顶盒到 %s?"
 msgid "Do you want to update your receiver?"
 msgstr "是否想升级机顶盒?"
 
-msgid "Dolby"
-msgstr "杜比"
-
 msgid "Dominica"
 msgstr "多米尼加"
 
@@ -3164,9 +3114,6 @@ msgstr "萨尔瓦多"
 
 msgid "Electronic Program Guide"
 msgstr "电子节目指南"
-
-msgid "Embedded"
-msgstr "集成"
 
 msgid "Emergency"
 msgstr "应急"
@@ -3907,6 +3854,9 @@ msgstr "来自:"
 msgid "Frontprocessor version: %s"
 msgstr "前端处理器版本: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "全屏"
@@ -4120,9 +4070,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr "HD60/Multibox/Multibox SE"
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI色彩深度"
 
@@ -4144,9 +4091,6 @@ msgstr "HDMI-CEC源未激活"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC设置"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10支持"
 
@@ -4155,9 +4099,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000迷你"
 
 msgid "HELP"
 msgstr "帮助"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG支持"
@@ -4560,14 +4501,11 @@ msgstr "正在安装"
 msgid "Installing software..."
 msgstr "正在安装软件..."
 
-msgid "Instant record"
+msgid "Instant recording"
 msgstr "即时录制"
 
 msgid "Instant recording location"
 msgstr "即时录制位置"
-
-msgid "Instant recording"
-msgstr "即时录制"
 
 msgid "Interface: "
 msgstr "网卡: "
@@ -5835,17 +5773,11 @@ msgstr "覆盖配置文件?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "时钟同步PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS文件"
 
 msgid "PGS file"
 msgstr "PGS文件"
@@ -5871,7 +5803,8 @@ msgstr "节目映射表PID"
 msgid "PPanel"
 msgstr "ppanel面板"
 
-msgid "PULSe 4K"
+#, fuzzy
+msgid "PULSe 4K(mini)"
 msgstr "脉冲4K"
 
 msgid "Package list update"
@@ -6602,9 +6535,6 @@ msgstr "录制"
 msgid "RF output"
 msgstr "射频输出"
 
-msgid "RGB"
-msgstr "RGB三原色"
-
 msgid "Radio"
 msgstr "广播"
 
@@ -6874,6 +6804,9 @@ msgstr "重复"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "使用彩色文本替换每个对话框中的‘-’符号(就像为听力受损者提供的文本字幕)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "请求物理地址报告"
 
@@ -7059,9 +6992,6 @@ msgstr "俄罗斯"
 msgid "Rwanda"
 msgstr "卢旺达"
 
-msgid "S-Video"
-msgstr "S-视频"
-
 msgid "SCPC optimized search range"
 msgstr "载波优化搜索范围"
 
@@ -7074,9 +7004,6 @@ msgstr "SCR极轴"
 msgid "SCR Unicable"
 msgstr "SCR单一同轴电缆"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "单层DVD"
 
@@ -7086,17 +7013,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF光纤数字音频接口"
-
-msgid "SRT File"
-msgstr "SRT文件"
-
 msgid "SRT file"
 msgstr "SRT文件"
-
-msgid "SSA File"
-msgstr "SSA文件"
 
 msgid "SSA file"
 msgstr "SSA文件"
@@ -7467,6 +7385,9 @@ msgstr "选择频道"
 
 msgid "Select channel to record from"
 msgstr "选择要录制的频道"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "选择目标位置:"
@@ -9836,11 +9757,11 @@ msgstr "更新完成.是否重启接收机？"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "更新失败.接收机没有可用的互联网连接."
 
-msgid "Update has completed."
-msgstr "升级已完成."
-
 msgid "Update feed not available."
 msgstr "更新资源无效."
+
+msgid "Update has completed."
+msgstr "升级已完成."
 
 msgid "Updating"
 msgstr "正在更新"
@@ -10016,9 +9937,6 @@ msgstr "VLAN连接"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM（简介预告片）"
-
-msgid "VOB File"
-msgstr "VOB文件"
 
 msgid "VOB file"
 msgstr "VOB文件"
@@ -10627,20 +10545,8 @@ msgstr "写入失败!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "写入到 /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "是"
-
-msgid "YPbPr"
-msgstr "色差端子"
 
 msgid "Year"
 msgstr "年"
@@ -10783,8 +10689,8 @@ msgid "You didn't select a channel to record from."
 msgstr "你没有选择要录制的频道."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "您必须等待 %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11448,9 +11354,6 @@ msgstr "菜单"
 msgid "mins"
 msgstr "分钟"
 
-msgid "minutes"
-msgstr "分钟"
-
 msgid "month"
 msgstr "月"
 
@@ -11478,9 +11381,6 @@ msgstr "电影/戏剧"
 msgid "multi"
 msgstr "多个"
 
-msgid "multinorm"
-msgstr "多标准"
-
 msgid "music/ballet/dance (general)"
 msgstr "音乐/芭蕾/舞蹈"
 
@@ -11492,6 +11392,10 @@ msgstr "自然/动物/环境"
 
 msgid "never"
 msgstr "从不"
+
+#, fuzzy
+msgid "new line"
+msgstr "双行模式"
 
 msgid "new media"
 msgstr "新的媒体"
@@ -11553,6 +11457,10 @@ msgstr "无法获取前端"
 msgid "not_tested"
 msgstr "未测试"
 
+#, fuzzy
+msgid "nothing"
+msgstr "无动作"
+
 msgid "nothing connected"
 msgstr "未连接"
 
@@ -11570,6 +11478,9 @@ msgstr "关闭或打开wpa2"
 
 msgid "offset is"
 msgstr "自定义偏移"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "开"
@@ -11655,9 +11566,6 @@ msgstr "按日期排序"
 msgid "rewind to the previous chapter"
 msgstr "退回上一个章节"
 
-msgid "rgb"
-msgstr "rgb三色模式"
-
 msgid "right"
 msgstr "右边"
 
@@ -11684,9 +11592,6 @@ msgstr "扫描状态"
 
 msgid "science fiction/fantasy/horror"
 msgstr "科幻小说/梦幻/恐怖"
-
-msgid "seconds"
-msgstr "秒"
 
 msgid "select CAId's"
 msgstr "选择CAID"
@@ -11784,6 +11689,9 @@ msgstr "社会/政治/经济"
 
 msgid "social/spiritual science"
 msgstr "社会/精神科学"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "特殊特性"
