--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -20,11 +20,6 @@ msgid ""
 msgstr ""
 "\n"
 "Vajuta OK ja oota!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Konflikti avastamine keelatud!"
 
 msgid ""
 "\n"
@@ -369,10 +364,6 @@ msgstr[1] " %s uuendatud paketti saadaval "
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(VU+ tüüp)"
 
@@ -435,29 +426,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 msgid "12V output"
 msgstr "12V väljund"
 
-msgid "12bit"
-msgstr "12bit"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 letterbox"
@@ -473,6 +452,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Näita infot"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -510,18 +493,6 @@ msgstr "3d režiim"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 letterbox"
 
@@ -550,9 +521,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr "8bit"
 
 msgid "9"
 msgstr "9"
@@ -695,10 +663,6 @@ msgstr "TSID/ONID OTSING"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-#, fuzzy
-msgid "ASS File"
-msgstr "ASS fail"
 
 msgid "ASS file"
 msgstr "ASS fail"
@@ -1268,9 +1232,6 @@ msgstr "Paigaldamine on lõppenud."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-msgid "Automatic"
-msgstr "Automaatne"
-
 msgid "Automatic Scan"
 msgstr "Automaatotsing"
 
@@ -1307,15 +1268,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Tagasi"
@@ -1555,9 +1507,6 @@ msgstr "CI pesa: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-msgid "CVBS"
-msgstr "Komposiit (CVBS)"
 
 msgid "Cable"
 msgstr "Kaabel (DVB-C)"
@@ -2027,6 +1976,9 @@ msgstr "Määra, millisel andmekandjal kasutatakse taustal kustutamise võimalus
 msgid "Configure remote control type"
 msgstr "Määra puldi tüüp"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Määra selle LNB DiSEqC režiim."
 
@@ -2281,6 +2233,9 @@ msgstr "See valik määrab, millist ühenduspesa video väljund kasutab."
 msgid "Configuring"
 msgstr "Seadistatakse"
 
+msgid "Conflict detection disabled!"
+msgstr "Konflikti avastamine keelatud!"
+
 msgid "Conflict not resolved!"
 msgstr "Konflikt pole lahendatud!"
 
@@ -2492,9 +2447,6 @@ msgstr "Tšehhi Vabariik"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3035,9 +2987,6 @@ msgstr "Kas soovid uuendada vastuvõtja tarkvara %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Kas soovid uuendada vastuvõtja tarkvara?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3190,10 +3139,6 @@ msgstr "El Salvador"
 
 msgid "Electronic Program Guide"
 msgstr "EPG"
-
-#, fuzzy
-msgid "Embedded"
-msgstr "sisseehitatud"
 
 msgid "Emergency"
 msgstr ""
@@ -3942,6 +3887,9 @@ msgstr "Kellelt:"
 msgid "Frontprocessor version: %s"
 msgstr "Esiprotsessori versioon: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Täisekraan"
@@ -4159,9 +4107,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI värvisügavus"
 
@@ -4183,9 +4128,6 @@ msgstr "HDMI-CEC allikas pole aktiivne"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC seaded"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 tugi"
 
@@ -4195,9 +4137,6 @@ msgstr "HD11/HD51/HD1100/HD1200/HD1265/HD1500/HD500C/HD530C/VS1000/VS1500/et7x00
 
 msgid "HELP"
 msgstr ""
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG tugi"
@@ -4606,14 +4545,11 @@ msgstr "Paigaldamine"
 msgid "Installing software..."
 msgstr "Tarkvara paigaldamine..."
 
-msgid "Instant record"
-msgstr "Kohene salvestus"
+msgid "Instant recording"
+msgstr "Kohene salvestamine"
 
 msgid "Instant recording location"
 msgstr "Kohese salvestuse asukoht"
-
-msgid "Instant recording"
-msgstr "Kohene salvestamine"
 
 msgid "Interface: "
 msgstr "Liides: "
@@ -5894,18 +5830,11 @@ msgstr "Seadistusfailid kirjutatakse üle?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-#, fuzzy
-msgid "PGS File"
-msgstr "PGS fail"
 
 msgid "PGS file"
 msgstr "PGS fail"
@@ -5931,7 +5860,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPaneel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6671,9 +6600,6 @@ msgstr "REC"
 msgid "RF output"
 msgstr "RF-väljund"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Raadio"
 
@@ -6945,6 +6871,9 @@ msgstr "Kordused"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Asenda `- ` dialoogides rääkija värvilise tekstiga (nagu teleteksti subtiitrid vaegkuuljate jaoks)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Nõue füüsilise aadressi raportile"
 
@@ -7134,9 +7063,6 @@ msgstr "Venemaa Föderatsioon"
 msgid "Rwanda"
 msgstr "Rwanda"
 
-msgid "S-Video"
-msgstr "S-video (Y/C)"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimeeritud otsivahemik"
 
@@ -7149,9 +7075,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "ÜHEKIHILINE DVD"
 
@@ -7161,19 +7084,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-#, fuzzy
-msgid "SRT File"
-msgstr "SRT fail"
-
 msgid "SRT file"
 msgstr "SRT fail"
-
-#, fuzzy
-msgid "SSA File"
-msgstr "SSA fail"
 
 msgid "SSA file"
 msgstr "SSA fail"
@@ -7549,6 +7461,9 @@ msgstr "Vali kanal"
 
 msgid "Select channel to record from"
 msgstr "Vali salvestatav kanal"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Vali kopeerimise asukoht:"
@@ -9983,11 +9898,11 @@ msgstr "Uuendamine on tehtud. Kas taaskäivitad vastuvõtja?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Uuendamine nurjus. Vastuvõtjal puudub töötav internetiühendus."
 
-msgid "Update has completed."
-msgstr "Uuendamine on lõppenud."
-
 msgid "Update feed not available."
 msgstr "Uuenduslink pole saadaval."
+
+msgid "Update has completed."
+msgstr "Uuendamine on lõppenud."
 
 msgid "Updating"
 msgstr "Uuendan"
@@ -10163,10 +10078,6 @@ msgstr "VLAN ühendus"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-#, fuzzy
-msgid "VOB File"
-msgstr "VOB fail"
 
 msgid "VOB file"
 msgstr "VOB fail"
@@ -10790,20 +10701,8 @@ msgstr "Kirjutamine nurjus!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Kirjuta /tmp/positionersetup.log  faili"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "JAH"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Aasta"
@@ -10948,8 +10847,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Salvestatavat kanalit pole valitud."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Tuleb oodata %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11622,9 +11521,6 @@ msgstr "menüü"
 msgid "mins"
 msgstr "min"
 
-msgid "minutes"
-msgstr "minutid"
-
 msgid "month"
 msgstr "kuu"
 
@@ -11652,9 +11548,6 @@ msgstr "film/draama (üldine)"
 msgid "multi"
 msgstr "multi"
 
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr "muusika/ballett/tants (üldine)"
 
@@ -11666,6 +11559,10 @@ msgstr "loodus/loomad/keskkond"
 
 msgid "never"
 msgstr "mitte kunagi"
+
+#, fuzzy
+msgid "new line"
+msgstr "Näita infot"
 
 msgid "new media"
 msgstr "uus meedia"
@@ -11728,6 +11625,10 @@ msgstr "Ei leitud satelliidi tuunerit!"
 msgid "not_tested"
 msgstr "pole_testitud"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Ära tee midagi"
+
 msgid "nothing connected"
 msgstr "pole ühendatud"
 
@@ -11745,6 +11646,9 @@ msgstr "välja, või wpa2 sisse"
 
 msgid "offset is"
 msgstr "hüvitus on"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "sees"
@@ -11830,9 +11734,6 @@ msgstr "tagurpidi kuupäevajärj."
 msgid "rewind to the previous chapter"
 msgstr "tagasi eelmisele peatükile"
 
-msgid "rgb"
-msgstr "RGB"
-
 msgid "right"
 msgstr "parem"
 
@@ -11861,9 +11762,6 @@ msgstr "otsingu seis"
 
 msgid "science fiction/fantasy/horror"
 msgstr "ulme/fantaasia/õudus"
-
-msgid "seconds"
-msgstr "sekundit"
 
 msgid "select CAId's"
 msgstr "vali CAID-id"
@@ -11961,6 +11859,9 @@ msgstr "ühiskondlikud/poliitilised asjad/majandus (üldiselt)"
 
 msgid "social/spiritual science"
 msgstr "ühiskonna/hingeteadus"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "erisündmused"
