--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2020-05-16 18:41+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -22,10 +22,6 @@ msgid ""
 msgstr ""
 "\n"
 "Kun olet painanut OK-näppäintä, odota!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 #
 msgid ""
@@ -387,10 +383,6 @@ msgstr[1] "%s päivitettyä ohjelmapakettia saatavilla"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -461,22 +453,13 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 #
 msgid "12V output"
 msgstr "12V-ulostulo"
 
-msgid "12bit"
-msgstr "12bit"
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -485,10 +468,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 Pan&Scan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -507,6 +486,11 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Näytä tietopalkki"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -545,18 +529,6 @@ msgstr "3D-tila"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -587,9 +559,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr "8bit"
 
 msgid "9"
 msgstr "9"
@@ -745,9 +714,6 @@ msgstr "HAETAAN TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr ""
 
 msgid "ASS file"
 msgstr "ASS-tiedosto"
@@ -1390,10 +1356,6 @@ msgid "Autoinstalling please wait for packages being updated"
 msgstr "Asennetaan, odota kun ohjelmistoa päivitetään"
 
 #
-msgid "Automatic"
-msgstr "Automaattinen"
-
-#
 msgid "Automatic Scan"
 msgstr "Automaattihaku"
 
@@ -1433,15 +1395,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 #
 msgid "Back"
@@ -1708,10 +1661,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr ""
-
-#
-msgid "CVBS"
-msgstr "Komposiitti (CVBS)"
 
 #
 msgid "Cable"
@@ -2235,6 +2184,9 @@ msgstr "Määritä millä laitteilla tallenteiden taustalla poistoa käytetään
 msgid "Configure remote control type"
 msgstr "Määritä kaukosäätimen tyyppi"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Määritä tämän LNB:n DiSEqC-tila."
 
@@ -2491,6 +2443,9 @@ msgstr "Määrittää mitä video-ulostuloa käytetään."
 msgid "Configuring"
 msgstr "Muokataan"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr "Ristiriitaa ei ratkaistu!"
 
@@ -2730,9 +2685,6 @@ msgstr "Czechia"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DCHP"
@@ -3348,9 +3300,6 @@ msgstr "Haluatko päivittää vastaanottimeesi %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Haluatko päivittää vastaanottimesi?"
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3530,9 +3479,6 @@ msgstr "El Salvador"
 #
 msgid "Electronic Program Guide"
 msgstr "Ohjelmaopas"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4339,6 +4285,9 @@ msgstr "Mistä:"
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Kokoruutu"
@@ -4573,9 +4522,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr "HDMI"
-
 #
 msgid "HDMI Colordepth"
 msgstr "HDMI värisyvyys"
@@ -4600,9 +4546,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC asetukset"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 tuki"
 
@@ -4610,9 +4553,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 msgid "HLG support"
@@ -5066,14 +5006,11 @@ msgstr "Asennetaan"
 msgid "Installing software..."
 msgstr "Asennetaan ohjelmistoa..."
 
-msgid "Instant record"
-msgstr "Pikatallennus..."
+msgid "Instant recording"
+msgstr "Pikatallennus"
 
 msgid "Instant recording location"
 msgstr "Pikatallennuksen hakemisto"
-
-msgid "Instant recording"
-msgstr "Pikatallennus"
 
 msgid "Interface: "
 msgstr "Liittymä: "
@@ -6542,17 +6479,11 @@ msgstr "Korvaa asetustiedostot?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr ""
 
 msgid "PGS file"
 msgstr "PGS-tiedosto"
@@ -6579,7 +6510,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7439,10 +7370,6 @@ msgstr ""
 msgid "RF output"
 msgstr "RF-ulostulo"
 
-#
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -7761,6 +7688,9 @@ msgstr "Toistokerrat"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Korvaa `- ` tekstityksissä väreillä samaan tapaan kuin kuulovammaisten tekstityksissä."
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr ""
 
@@ -7975,10 +7905,6 @@ msgstr "Venäjä"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-#
-msgid "S-Video"
-msgstr "S-video (Y/C)"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimoitu hakualue"
 
@@ -7991,10 +7917,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-#
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "SINGLE LAYER DVD"
 
@@ -8005,17 +7927,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
 msgstr "SRT-tiedosto"
-
-msgid "SSA File"
-msgstr ""
 
 msgid "SSA file"
 msgstr "SSA-tiedosto"
@@ -8436,6 +8349,9 @@ msgstr "Valitse kanava"
 #
 msgid "Select channel to record from"
 msgstr "Valitse tallennettava kanava"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Valitse kohde kopioinnille:"
@@ -11108,11 +11024,11 @@ msgstr "Päivitys asennettu. Haluatko uudelleenkäynnistää vastaanottimesi?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Päivitys epäonnistui. Vastaanottimellasi ei ole toimivaa internet yhteyttä."
 
-msgid "Update has completed."
-msgstr "Päivitys on valmis."
-
 msgid "Update feed not available."
 msgstr "Päivityslähde ei ole saatavilla."
+
+msgid "Update has completed."
+msgstr "Päivitys on valmis."
 
 #
 msgid "Updating"
@@ -11313,9 +11229,6 @@ msgstr "VLAN-yhteys"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (intro trailer)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr "VOB-tiedosto"
@@ -11975,21 +11888,8 @@ msgstr "Kirjoitus epäonnistui!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Kirjoita /tmp/positionersetup.log:iin  "
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "KYLLÄ"
-
-#
-msgid "YPbPr"
-msgstr "Komponentti (YPbPr)"
 
 #
 msgid "Year"
@@ -12141,10 +12041,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Et valinnut tallennuskanavaa."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Sinun täytyy odottaa %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -12885,10 +12784,6 @@ msgid "mins"
 msgstr "minuuttia"
 
 #
-msgid "minutes"
-msgstr "minuuttia"
-
-#
 msgid "month"
 msgstr "kuukausi"
 
@@ -12921,10 +12816,6 @@ msgstr "elokuva/draama (yleinen)"
 msgid "multi"
 msgstr "Moni"
 
-#
-msgid "multinorm"
-msgstr "Moninormi"
-
 msgid "music/ballet/dance (general)"
 msgstr "musiikki/baletti/tanssi (yleinen)"
 
@@ -12937,6 +12828,11 @@ msgstr "luonto/eläimet/ympäristö"
 #
 msgid "never"
 msgstr "Ei koskaan"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Näytä tietopalkki"
 
 msgid "new media"
 msgstr "uusi media"
@@ -13008,6 +12904,11 @@ msgid "not_tested"
 msgstr ""
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "Älä tee mitään"
+
+#
 msgid "nothing connected"
 msgstr "Ei kytketty"
 
@@ -13028,6 +12929,9 @@ msgstr "Pois tai WPA2 päällä"
 
 msgid "offset is"
 msgstr "offsetin määrä"
+
+msgid "omit"
+msgstr ""
 
 #
 msgid "on"
@@ -13128,9 +13032,6 @@ msgstr "Käänteinen aikajärjestys"
 msgid "rewind to the previous chapter"
 msgstr "Kelaa edelliseen kappaleeseen"
 
-msgid "rgb"
-msgstr "rgb"
-
 #
 msgid "right"
 msgstr "Oikea"
@@ -13162,10 +13063,6 @@ msgstr "Haun tila"
 
 msgid "science fiction/fantasy/horror"
 msgstr "scifi/fantasia/kauhu"
-
-#
-msgid "seconds"
-msgstr "sekuntia"
 
 #
 msgid "select CAId's"
@@ -13273,6 +13170,9 @@ msgstr "sosiaaliset/poliittiset aiheet/talous (yleinen)"
 
 msgid "social/spiritual science"
 msgstr "sosiaalinen/hengellinen tiede"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "erikoistapahtuma"
