--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2020-12-05 15:11+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -19,11 +19,6 @@ msgid ""
 msgstr ""
 "\n"
 "Az OK gomb lenyomása után kérem, várjon!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"Az ütközések figyelése ki van kapcsolva!"
 
 msgid ""
 "\n"
@@ -371,10 +366,6 @@ msgstr[1] "%s frissítés elérhető"
 msgid "%s%d min"
 msgstr "%s%d perc"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(VU+ típus)"
 
@@ -437,29 +428,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 msgid "12V output"
 msgstr "12V kimenet"
 
-msgid "12bit"
-msgstr "12bit"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -475,6 +454,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Két sor"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -512,18 +495,6 @@ msgstr "3D mód"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -550,9 +521,6 @@ msgstr "8"
 
 msgid "8K"
 msgstr "8K"
-
-msgid "8bit"
-msgstr "8bit"
 
 msgid "9"
 msgstr "9"
@@ -695,9 +663,6 @@ msgstr "TSID/ONID BESZERZÉSE"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "ASS fájl"
 
 msgid "ASS file"
 msgstr "ASS fájl"
@@ -1257,9 +1222,6 @@ msgstr "Automatikus telepítés elkészült"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Automatikus telepítés. Kérjük, várjon, amíg a csomagok frissítése megtörténik"
 
-msgid "Automatic"
-msgstr "Automatikus"
-
 msgid "Automatic Scan"
 msgstr "Automatikus keresés"
 
@@ -1295,15 +1257,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Vissza"
@@ -1542,9 +1495,6 @@ msgstr "CI foglalat: "
 
 msgid "CPU: "
 msgstr "Processzor: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Kábel"
@@ -2023,6 +1973,9 @@ msgstr "Milyen eszközökre legyen érvényes a háttérben történő törölge
 msgid "Configure remote control type"
 msgstr "Távirányító típusának beállítása"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "A DiSEqC mód beállítása ehhez a fejhez."
 
@@ -2275,6 +2228,9 @@ msgstr "Melyik videó kimeneti csatlakozó van bekötve."
 msgid "Configuring"
 msgstr "Konfigurálás"
 
+msgid "Conflict detection disabled!"
+msgstr "Az ütközések figyelése ki van kapcsolva!"
+
 msgid "Conflict not resolved!"
 msgstr "Az ütközés nem lett megoldva!"
 
@@ -2481,9 +2437,6 @@ msgstr "Csehország"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3011,9 +2964,6 @@ msgstr "Szeretné frissíteni a készülék szoftverét %s-re?"
 msgid "Do you want to update your receiver?"
 msgstr "Szeretné frissíteni a készülék szoftverét?"
 
-msgid "Dolby"
-msgstr "Dolby"
-
 msgid "Dominica"
 msgstr "Dominikai Közösség"
 
@@ -3165,9 +3115,6 @@ msgstr "Salvador"
 
 msgid "Electronic Program Guide"
 msgstr "Elektronikus Műsorújság"
-
-msgid "Embedded"
-msgstr "Beágyazott"
 
 msgid "Emergency"
 msgstr "Vészhelyzet"
@@ -3905,6 +3852,9 @@ msgstr "Innen:"
 msgid "Frontprocessor version: %s"
 msgstr "Processzor verzió: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Teljes képernyő"
@@ -4118,9 +4068,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "HDMI színmélység"
 
@@ -4142,9 +4089,6 @@ msgstr "HDMI-CEC forrás inaktív"
 msgid "HDMI-CEC setup"
 msgstr "HDMI-CEC beállítások"
 
-msgid "HDR10"
-msgstr "HDR10"
-
 msgid "HDR10 support"
 msgstr "HDR10 támogatás"
 
@@ -4153,9 +4097,6 @@ msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "SEGÍTSÉG"
-
-msgid "HLG"
-msgstr "HLG"
 
 msgid "HLG support"
 msgstr "HLG támogatás"
@@ -4565,14 +4506,11 @@ msgstr "Telepítés"
 msgid "Installing software..."
 msgstr "Szoftver telepítése..."
 
-msgid "Instant record"
-msgstr "Azonnali felvétel"
+msgid "Instant recording"
+msgstr "Felvétel azonnali indítása"
 
 msgid "Instant recording location"
 msgstr "Azonnali felvételek helye"
-
-msgid "Instant recording"
-msgstr "Felvétel azonnali indítása"
 
 msgid "Interface: "
 msgstr "Interfész: "
@@ -5843,17 +5781,11 @@ msgstr "Konfigurációs fájlok felülírása?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "PGS fájl"
 
 msgid "PGS file"
 msgstr "PGS fájl"
@@ -5879,7 +5811,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6610,9 +6542,6 @@ msgstr "Felvétel"
 msgid "RF output"
 msgstr "RF kimenet"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Rádió"
 
@@ -6880,6 +6809,9 @@ msgstr "Ismétlések"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "A párbeszédeknél hangszórónként lecseréli a \"-\" jelet színes szövegre (mint a hallássérült teletext-szöveg esetén)"
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Fizikai cím jelentés kérése"
 
@@ -7065,9 +6997,6 @@ msgstr "Oroszország"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "SCPC optimizált keresési tartomány"
 
@@ -7080,9 +7009,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR"
-
 msgid "SINGLE LAYER DVD"
 msgstr "Egyrétegű DVD"
 
@@ -7092,17 +7018,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "SRT fájl"
-
 msgid "SRT file"
 msgstr "SRT fájl"
-
-msgid "SSA File"
-msgstr "SSA fájl"
 
 msgid "SSA file"
 msgstr "SSA fájl"
@@ -7473,6 +7390,9 @@ msgstr "Válasszon csatornát"
 
 msgid "Select channel to record from"
 msgstr "Csatorna kiválasztása melyről fel szeretne venni"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Másolási cél kiválasztása ehhez:"
@@ -9851,11 +9771,11 @@ msgstr "Frissítés sikeres. Újraindítja most a készüléket?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "A frissítés nem sikerült. A készüléknek nincs egy működőképes kapcsolata az internettel."
 
-msgid "Update has completed."
-msgstr "A frissítés elkészült."
-
 msgid "Update feed not available."
 msgstr "Frissítő szerver nem elérhető."
+
+msgid "Update has completed."
+msgstr "A frissítés elkészült."
 
 msgid "Updating"
 msgstr "Frissítés"
@@ -10029,9 +9949,6 @@ msgstr "VLAN kapcsolat"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (Intro trailer)"
-
-msgid "VOB File"
-msgstr "VOB fájl"
 
 msgid "VOB file"
 msgstr "VOB fájl"
@@ -10636,20 +10553,8 @@ msgstr "Az írás sikertelen!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Írás ide: /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "IGEN"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Év"
@@ -10797,8 +10702,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Nem választott ki csatornát, ahonnan történjen a felvétel."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Várnia kell (%s)!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11463,9 +11368,6 @@ msgstr "menü"
 msgid "mins"
 msgstr "perc"
 
-msgid "minutes"
-msgstr "perc"
-
 msgid "month"
 msgstr "hónap"
 
@@ -11493,9 +11395,6 @@ msgstr "mozi/színház (általános)"
 msgid "multi"
 msgstr "multi"
 
-msgid "multinorm"
-msgstr "többnormás"
-
 msgid "music/ballet/dance (general)"
 msgstr "zene/balett/tánc (általános)"
 
@@ -11507,6 +11406,10 @@ msgstr "természet/állatvilág/környezet"
 
 msgid "never"
 msgstr "soha"
+
+#, fuzzy
+msgid "new line"
+msgstr "Két sor"
 
 msgid "new media"
 msgstr "új média"
@@ -11569,6 +11472,10 @@ msgstr "Nem található műholdas megjelenítő felület!"
 msgid "not_tested"
 msgstr "nincs tesztelve"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Ne csináljon semmit"
+
 msgid "nothing connected"
 msgstr "semmi sincs csatlakoztatva"
 
@@ -11586,6 +11493,9 @@ msgstr "ki vagy wpa2 be"
 
 msgid "offset is"
 msgstr "offszet"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "be"
@@ -11671,9 +11581,6 @@ msgstr "dátum szerint csökkenő"
 msgid "rewind to the previous chapter"
 msgstr "visszatekerés az előző chapterhez"
 
-msgid "rgb"
-msgstr "rgb"
-
 msgid "right"
 msgstr "jobb"
 
@@ -11701,9 +11608,6 @@ msgstr "keresési állapot"
 
 msgid "science fiction/fantasy/horror"
 msgstr "sci-fi/fantasy/horror"
-
-msgid "seconds"
-msgstr "másodperc"
 
 msgid "select CAId's"
 msgstr "CAId-k kiválasztása"
@@ -11801,6 +11705,9 @@ msgstr "szociális/politikai/gazdasági (általános)"
 
 msgid "social/spiritual science"
 msgstr "szociális/spirituális"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "különleges események"
