--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2020-05-16 18:46+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -26,11 +26,6 @@ msgid ""
 msgstr ""
 "\n"
 "Dopo aver premuto OK, attendere!"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
-"L'individuazione dei conflitti è disabilitata!"
 
 msgid ""
 "\n"
@@ -379,10 +374,6 @@ msgstr[1] "Disponibili %s pacchetti aggiornati"
 msgid "%s%d min"
 msgstr "%s%d min"
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr "%s/%s: %s"
-
 msgid "(VU+ type)"
 msgstr "(tipo VU+)"
 
@@ -445,29 +436,17 @@ msgstr "10 MB/s"
 msgid "100 MB/s"
 msgstr "100 MB/s"
 
-msgid "10bit"
-msgstr "10bit"
-
 msgid "12V output"
 msgstr "12V output"
 
-msgid "12bit"
-msgstr "12bit"
-
 msgid "13 V"
 msgstr "13 V"
-
-msgid "16:10"
-msgstr "16:10"
 
 msgid "16:10 Letterbox"
 msgstr "16:10 Letterbox"
 
 msgid "16:10 PanScan"
 msgstr "16:10 Pan & Scan"
-
-msgid "16:9"
-msgstr "16:9"
 
 msgid "16:9 Letterbox"
 msgstr "16:9 Letterbox"
@@ -483,6 +462,10 @@ msgstr "18 V"
 
 msgid "2"
 msgstr "2"
+
+#, fuzzy
+msgid "2 new lines"
+msgstr "Mostrare la riga di informazioni"
 
 msgid "20 MB/s"
 msgstr "20 MB/s"
@@ -520,18 +503,6 @@ msgstr "Modalità 3D"
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr "420"
-
-msgid "422"
-msgstr "422"
-
-msgid "444"
-msgstr "444"
-
-msgid "4:3"
-msgstr "4:3"
-
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
 
@@ -560,9 +531,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr "8bit"
 
 msgid "9"
 msgstr "9"
@@ -705,9 +673,6 @@ msgstr "ACQUISIZIONE TSID/ONID"
 
 msgid "AGC:"
 msgstr "AGC:"
-
-msgid "ASS File"
-msgstr "File ASS"
 
 msgid "ASS file"
 msgstr "File ASS"
@@ -1272,9 +1237,6 @@ msgstr "Installazione completata"
 msgid "Autoinstalling please wait for packages being updated"
 msgstr "Installazione automatica attendere l'aggiornamento dei pacchetti"
 
-msgid "Automatic"
-msgstr "Automatico"
-
 msgid "Automatic Scan"
 msgstr "Ricerca automatica"
 
@@ -1310,15 +1272,6 @@ msgstr "BER"
 
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr "BT 2020 CL"
-
-msgid "BT 2020 NCL"
-msgstr "BT 2020 NCL"
-
-msgid "BT 709"
-msgstr "BT 709"
 
 msgid "Back"
 msgstr "Indietro"
@@ -1558,9 +1511,6 @@ msgstr "Slot CI: "
 
 msgid "CPU: "
 msgstr "CPU: "
-
-msgid "CVBS"
-msgstr "CVBS"
 
 msgid "Cable"
 msgstr "Cavo"
@@ -2027,6 +1977,9 @@ msgstr "Impostare su quali supporti utilizzare l'opzione di cancellazione in sot
 msgid "Configure remote control type"
 msgstr "Impostare il tipo di telecomando"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr "Impostare la modalità DiSEqC per questo LNB."
 
@@ -2279,6 +2232,9 @@ msgstr "Selezionare l'uscita video da utilizzare."
 msgid "Configuring"
 msgstr "Impostazione in corso..."
 
+msgid "Conflict detection disabled!"
+msgstr "L'individuazione dei conflitti è disabilitata!"
+
 msgid "Conflict not resolved!"
 msgstr "Conflitto non risolto!"
 
@@ -2488,9 +2444,6 @@ msgstr "Repubblica Ceca"
 
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr "DAC"
 
 msgid "DHCP"
 msgstr "DHCP"
@@ -3024,9 +2977,6 @@ msgstr "Aggiornare il ricevitore a %s?"
 msgid "Do you want to update your receiver?"
 msgstr "Aggiornare il ricevitore?"
 
-msgid "Dolby"
-msgstr "Dolby Vision"
-
 msgid "Dominica"
 msgstr "Dominica"
 
@@ -3178,9 +3128,6 @@ msgstr "El Salvador"
 
 msgid "Electronic Program Guide"
 msgstr "Guida Programmi Elettronica"
-
-msgid "Embedded"
-msgstr "Incorporato"
 
 msgid "Emergency"
 msgstr ""
@@ -3932,6 +3879,9 @@ msgstr "Da:"
 msgid "Frontprocessor version: %s"
 msgstr "Versione del frontprocessor: %s"
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr "Schermo intero"
@@ -4149,9 +4099,6 @@ msgstr "HD2400"
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr "HDMI"
-
 msgid "HDMI Colordepth"
 msgstr "Profondità di colore HDMI"
 
@@ -4173,9 +4120,6 @@ msgstr "Sorgente HDMI-CEC non attiva"
 msgid "HDMI-CEC setup"
 msgstr "Protocollo HDMI-CEC"
 
-msgid "HDR10"
-msgstr "HDR10 (High Dynamic Range)"
-
 msgid "HDR10 support"
 msgstr "Supporto HDR10"
 
@@ -4184,9 +4128,6 @@ msgstr "HD11/HD51/HD1100/HD1200/HD1265/HD1500/HD500C/HD530C/VS1000/VS1500/et7x00
 
 msgid "HELP"
 msgstr ""
-
-msgid "HLG"
-msgstr "HLG (Hybrid Log Gamma)"
 
 msgid "HLG support"
 msgstr "Supporto HLG"
@@ -4595,14 +4536,11 @@ msgstr "Installazione"
 msgid "Installing software..."
 msgstr "Installazione software..."
 
-msgid "Instant record"
+msgid "Instant recording"
 msgstr "Registrazione immediata"
 
 msgid "Instant recording location"
 msgstr "Percorso delle registrazioni immediate"
-
-msgid "Instant recording"
-msgstr "Registrazione immediata"
 
 msgid "Interface: "
 msgstr "Interfaccia: "
@@ -5882,17 +5820,11 @@ msgstr "Sovrascrivere i file di configurazione?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr "PCM"
-
 msgid "PCR PID"
 msgstr "PID PCR"
 
 msgid "PDC"
 msgstr "PDC"
-
-msgid "PGS File"
-msgstr "File PSG"
 
 msgid "PGS file"
 msgstr "File PSG"
@@ -5918,7 +5850,7 @@ msgstr "PID PMT"
 msgid "PPanel"
 msgstr "PPanel"
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 msgid "Package list update"
@@ -6652,9 +6584,6 @@ msgstr "REC"
 msgid "RF output"
 msgstr "Uscita RF"
 
-msgid "RGB"
-msgstr "RGB"
-
 msgid "Radio"
 msgstr "Radio"
 
@@ -6925,6 +6854,9 @@ msgstr "Repliche"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr "Sostituire nei dialoghi l'indicatore '-' con un testo colorato in modo differente per ogni voce parlante (simile ai sottotitoli televideo per non udenti)."
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr "Richiesta di informazioni sull'indirizzo fisico"
 
@@ -7112,9 +7044,6 @@ msgstr "Federazione Russa"
 msgid "Rwanda"
 msgstr "Ruanda"
 
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr "Intervallo di ricerca SCPC ottimizzato"
 
@@ -7127,9 +7056,6 @@ msgstr "SCR JESS"
 msgid "SCR Unicable"
 msgstr "SCR Unicable"
 
-msgid "SDR"
-msgstr "SDR (Standard Dynamic Range)"
-
 msgid "SINGLE LAYER DVD"
 msgstr "DVD a singolo strato"
 
@@ -7139,17 +7065,8 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr "SPDIF"
-
-msgid "SRT File"
-msgstr "File SRT"
-
 msgid "SRT file"
 msgstr "File SRT"
-
-msgid "SSA File"
-msgstr "File SSA"
 
 msgid "SSA file"
 msgstr "File SSA"
@@ -7521,6 +7438,9 @@ msgstr "Selezionare un canale"
 
 msgid "Select channel to record from"
 msgstr "Selezionare un canale da registrare"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr "Selezionare la destinazione per la copia di:"
@@ -9919,11 +9839,11 @@ msgstr "Aggiornamento completato. Riavviare il ricevitore?"
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr "Aggiornamento non riuscito. Il ricevitore non è connesso ad Internet."
 
-msgid "Update has completed."
-msgstr "Aggiornamento completato."
-
 msgid "Update feed not available."
 msgstr "Fonte degli aggiornamenti non disponibile."
+
+msgid "Update has completed."
+msgstr "Aggiornamento completato."
 
 msgid "Updating"
 msgstr "Aggiornamento in corso..."
@@ -10097,9 +10017,6 @@ msgstr "Connessione VLAN"
 
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (trailer introduttivo)"
-
-msgid "VOB File"
-msgstr "File VOB"
 
 msgid "VOB file"
 msgstr "File VOB"
@@ -10716,20 +10633,8 @@ msgstr "Salvataggio non riuscito!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr "Salvataggio su /tmp/positionersetup.log"
 
-msgid "YCbCr420"
-msgstr "YCbCr420"
-
-msgid "YCbCr422"
-msgstr "YCbCr422"
-
-msgid "YCbCr444"
-msgstr "YCbCr444"
-
 msgid "YES"
 msgstr "Sì"
-
-msgid "YPbPr"
-msgstr "YPbPr"
 
 msgid "Year"
 msgstr "Anno"
@@ -10874,8 +10779,8 @@ msgid "You didn't select a channel to record from."
 msgstr "Non è stato selezionato alcun canale da cui registrare."
 
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Occorre attendere per %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -11543,9 +11448,6 @@ msgstr "Menu"
 msgid "mins"
 msgstr "min"
 
-msgid "minutes"
-msgstr "minuti"
-
 msgid "month"
 msgstr "mese"
 
@@ -11573,9 +11475,6 @@ msgstr "Film/Opera  (generale)"
 msgid "multi"
 msgstr "Multi"
 
-msgid "multinorm"
-msgstr "Multistandard"
-
 msgid "music/ballet/dance (general)"
 msgstr "Musica/Balletto/Danza (generale)"
 
@@ -11587,6 +11486,10 @@ msgstr "Natura/Animali/Ambiente"
 
 msgid "never"
 msgstr "Mai"
+
+#, fuzzy
+msgid "new line"
+msgstr "Mostrare la riga di informazioni"
 
 msgid "new media"
 msgstr "Nuovi media"
@@ -11649,6 +11552,10 @@ msgstr "Impossibile trovare un impianto satellitare!"
 msgid "not_tested"
 msgstr "Non verificato"
 
+#, fuzzy
+msgid "nothing"
+msgstr "Nessuna"
+
 msgid "nothing connected"
 msgstr "Nessun collegamento"
 
@@ -11666,6 +11573,9 @@ msgstr "Nessuno o WPA2 abilitato"
 
 msgid "offset is"
 msgstr "il margine  è"
+
+msgid "omit"
+msgstr ""
 
 msgid "on"
 msgstr "Sì"
@@ -11751,9 +11661,6 @@ msgstr "Per data decrescente"
 msgid "rewind to the previous chapter"
 msgstr "Ritornare al capitolo precedente"
 
-msgid "rgb"
-msgstr "RGB"
-
 msgid "right"
 msgstr "Destra"
 
@@ -11782,9 +11689,6 @@ msgstr "Stato della ricerca"
 
 msgid "science fiction/fantasy/horror"
 msgstr "Fantascienza/Fantasy/Horror"
-
-msgid "seconds"
-msgstr "secondi"
 
 msgid "select CAId's"
 msgstr "Selezionare i CAId"
@@ -11882,6 +11786,9 @@ msgstr "Sociale/Politica/Economia (generale)"
 
 msgid "social/spiritual science"
 msgstr "Sociale/Spiritualità"
+
+msgid "space"
+msgstr ""
 
 msgid "special events"
 msgstr "Eventi particolari"
