--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-08-27 05:57+0200\n"
+"POT-Creation-Date: 2021-09-02 01:12+0300\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -25,10 +25,6 @@ msgid ""
 msgstr ""
 "\n"
 "Posle stiskanja OK,molim pričekajte"
-
-msgid ""
-"Conflict detection disabled!"
-msgstr ""
 
 #
 msgid ""
@@ -399,10 +395,6 @@ msgstr[2] "ažuriranja dostupna."
 msgid "%s%d min"
 msgstr ""
 
-#, python-format
-msgid "%s/%s: %s"
-msgstr ""
-
 msgid "(VU+ type)"
 msgstr ""
 
@@ -476,23 +468,13 @@ msgstr ""
 msgid "100 MB/s"
 msgstr ""
 
-msgid "10bit"
-msgstr ""
-
 #
 msgid "12V output"
 msgstr "12V izlaz"
 
-msgid "12bit"
-msgstr ""
-
 #
 msgid "13 V"
 msgstr "13 V"
-
-#
-msgid "16:10"
-msgstr "16:10"
 
 #
 msgid "16:10 Letterbox"
@@ -501,10 +483,6 @@ msgstr "16:10 Letterbox"
 #
 msgid "16:10 PanScan"
 msgstr "16:10 PanScan"
-
-#
-msgid "16:9"
-msgstr "16:9"
 
 #
 msgid "16:9 Letterbox"
@@ -524,6 +502,11 @@ msgstr "18 V"
 #
 msgid "2"
 msgstr "2"
+
+#
+#, fuzzy
+msgid "2 new lines"
+msgstr "Pokaži Info liniju "
 
 msgid "20 MB/s"
 msgstr ""
@@ -562,19 +545,6 @@ msgstr ""
 msgid "4"
 msgstr "4"
 
-msgid "420"
-msgstr ""
-
-msgid "422"
-msgstr ""
-
-msgid "444"
-msgstr ""
-
-#
-msgid "4:3"
-msgstr "4:3"
-
 #
 msgid "4:3 Letterbox"
 msgstr "4:3 Letterbox"
@@ -610,9 +580,6 @@ msgstr "8"
 #, fuzzy
 msgid "8K"
 msgstr "8"
-
-msgid "8bit"
-msgstr ""
 
 #
 msgid "9"
@@ -768,9 +735,6 @@ msgid "ACQUIRING TSID/ONID"
 msgstr ""
 
 msgid "AGC:"
-msgstr ""
-
-msgid "ASS File"
 msgstr ""
 
 msgid "ASS file"
@@ -1449,10 +1413,6 @@ msgstr "Instalacija završena."
 msgid "Autoinstalling please wait for packages being updated"
 msgstr ""
 
-#
-msgid "Automatic"
-msgstr "Automatski"
-
 msgid "Automatic Scan"
 msgstr ""
 
@@ -1498,15 +1458,6 @@ msgstr "BER"
 #
 msgid "BER:"
 msgstr "BER:"
-
-msgid "BT 2020 CL"
-msgstr ""
-
-msgid "BT 2020 NCL"
-msgstr ""
-
-msgid "BT 709"
-msgstr ""
 
 #
 msgid "Back"
@@ -1784,10 +1735,6 @@ msgstr ""
 
 msgid "CPU: "
 msgstr ""
-
-#
-msgid "CVBS"
-msgstr "CVBS"
 
 #
 msgid "Cable"
@@ -2339,6 +2286,9 @@ msgstr ""
 msgid "Configure remote control type"
 msgstr "Tip roditeljske zaštite"
 
+msgid "Configure separator type used in full description for separate short and extended descriptions."
+msgstr ""
+
 msgid "Configure the DiSEqC mode for this LNB."
 msgstr ""
 
@@ -2620,6 +2570,9 @@ msgstr ""
 msgid "Configuring"
 msgstr "Konfigurišem"
 
+msgid "Conflict detection disabled!"
+msgstr ""
+
 msgid "Conflict not resolved!"
 msgstr ""
 
@@ -2870,9 +2823,6 @@ msgstr "Češki"
 #
 msgid "D"
 msgstr "D"
-
-msgid "DAC"
-msgstr ""
 
 #
 msgid "DHCP"
@@ -3514,9 +3464,6 @@ msgstr "Da li želite da skinete imidž u %s ?"
 msgid "Do you want to update your receiver?"
 msgstr ""
 
-msgid "Dolby"
-msgstr ""
-
 msgid "Dominica"
 msgstr ""
 
@@ -3705,9 +3652,6 @@ msgstr ""
 #
 msgid "Electronic Program Guide"
 msgstr "Elektronski Programski Vodič"
-
-msgid "Embedded"
-msgstr ""
 
 msgid "Emergency"
 msgstr ""
@@ -4539,6 +4483,9 @@ msgstr ""
 msgid "Frontprocessor version: %s"
 msgstr ""
 
+msgid "Full description separator"
+msgstr ""
+
 #. TRANSLATORS: (aspect ratio policy: display as fullscreen, even if the content aspect ratio does not match the screen ratio)
 msgid "Full screen"
 msgstr ""
@@ -4789,9 +4736,6 @@ msgstr ""
 msgid "HD60/Multibox/Multibox SE"
 msgstr ""
 
-msgid "HDMI"
-msgstr ""
-
 msgid "HDMI Colordepth"
 msgstr ""
 
@@ -4813,9 +4757,6 @@ msgstr ""
 msgid "HDMI-CEC setup"
 msgstr ""
 
-msgid "HDR10"
-msgstr ""
-
 #, fuzzy
 msgid "HDR10 support"
 msgstr "nije podržano"
@@ -4824,9 +4765,6 @@ msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 msgstr ""
 
 msgid "HELP"
-msgstr ""
-
-msgid "HLG"
 msgstr ""
 
 #, fuzzy
@@ -5294,18 +5232,15 @@ msgstr "Instaliram"
 msgid "Installing software..."
 msgstr "Instaliram softver..."
 
-msgid "Instant record"
-msgstr ""
+#
+#, fuzzy
+msgid "Instant recording"
+msgstr "Trenutno snimanje"
 
 #
 #, fuzzy
 msgid "Instant recording location"
 msgstr "Lokacija instant snimanja"
-
-#
-#, fuzzy
-msgid "Instant recording"
-msgstr "Trenutno snimanje"
 
 #
 msgid "Interface: "
@@ -6838,16 +6773,10 @@ msgstr "Prepiši konfiguracione datoteke?"
 msgid "PAL"
 msgstr "PAL"
 
-msgid "PCM"
-msgstr ""
-
 msgid "PCR PID"
 msgstr "PCR PID"
 
 msgid "PDC"
-msgstr ""
-
-msgid "PGS File"
 msgstr ""
 
 msgid "PGS file"
@@ -6878,7 +6807,7 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
-msgid "PULSe 4K"
+msgid "PULSe 4K(mini)"
 msgstr ""
 
 #
@@ -7765,10 +7694,6 @@ msgid "RF output"
 msgstr "RF Izlaz"
 
 #
-msgid "RGB"
-msgstr "RGB"
-
-#
 msgid "Radio"
 msgstr "Radio"
 
@@ -8095,6 +8020,9 @@ msgstr "Ponavljanja"
 msgid "Replace `- ` in dialogs with colored text per speaker (like teletext subtitles for the hearing impaired)"
 msgstr ""
 
+msgid "Replace newlines in EPG"
+msgstr ""
+
 msgid "Request for physical address report"
 msgstr ""
 
@@ -8318,10 +8246,6 @@ msgstr ""
 msgid "Rwanda"
 msgstr ""
 
-#
-msgid "S-Video"
-msgstr "S-Video"
-
 msgid "SCPC optimized search range"
 msgstr ""
 
@@ -8335,11 +8259,6 @@ msgid "SCR Unicable"
 msgstr ""
 
 #
-#, fuzzy
-msgid "SDR"
-msgstr "SNR"
-
-#
 msgid "SINGLE LAYER DVD"
 msgstr "JEDNOSLOJNI DVD"
 
@@ -8351,16 +8270,7 @@ msgstr "SNR"
 msgid "SNR:"
 msgstr "SNR:"
 
-msgid "SPDIF"
-msgstr ""
-
-msgid "SRT File"
-msgstr ""
-
 msgid "SRT file"
-msgstr ""
-
-msgid "SSA File"
 msgstr ""
 
 msgid "SSA file"
@@ -8812,6 +8722,9 @@ msgstr ""
 #
 msgid "Select channel to record from"
 msgstr "Odaberite kanal za snimanje od"
+
+msgid "Select char for replacing newlines in epg."
+msgstr ""
 
 msgid "Select copy destination for:"
 msgstr ""
@@ -11593,12 +11506,12 @@ msgstr ""
 msgid "Update failed. Your receiver does not have a working internet connection."
 msgstr ""
 
-msgid "Update has completed."
-msgstr ""
-
 #
 msgid "Update feed not available."
 msgstr "Fid ažuriranja nije dostupan."
+
+msgid "Update has completed."
+msgstr ""
 
 #
 msgid "Updating"
@@ -11805,9 +11718,6 @@ msgstr "LAN veza"
 #
 msgid "VMGM (intro trailer)"
 msgstr "VMGM (unutrašnji trejler)"
-
-msgid "VOB File"
-msgstr ""
 
 msgid "VOB file"
 msgstr ""
@@ -12483,21 +12393,8 @@ msgstr "Upisivanje nije uspelo!"
 msgid "Write to /tmp/positionersetup.log"
 msgstr ""
 
-msgid "YCbCr420"
-msgstr ""
-
-msgid "YCbCr422"
-msgstr ""
-
-msgid "YCbCr444"
-msgstr ""
-
 msgid "YES"
 msgstr ""
-
-#
-msgid "YPbPr"
-msgstr "YPbPr"
 
 #
 msgid "Year"
@@ -12641,10 +12538,9 @@ msgstr ""
 msgid "You didn't select a channel to record from."
 msgstr "Niste odabrali kanal sa koga ćete snimati."
 
-#
 #, python-format
-msgid "You have to wait %s!"
-msgstr "Morate pričekati %s!"
+msgid "You have to wait %(min)d minutes, %(sec)d seconds!"
+msgstr ""
 
 #, python-format
 msgid "You must switch to the service %s (%s - '%s')!\n"
@@ -13396,10 +13292,6 @@ msgid "mins"
 msgstr "mins"
 
 #
-msgid "minutes"
-msgstr "minuti"
-
-#
 msgid "month"
 msgstr "Mesec"
 
@@ -13431,10 +13323,6 @@ msgstr ""
 msgid "multi"
 msgstr ""
 
-#
-msgid "multinorm"
-msgstr "multinorm"
-
 msgid "music/ballet/dance (general)"
 msgstr ""
 
@@ -13447,6 +13335,11 @@ msgstr ""
 #
 msgid "never"
 msgstr "nikad"
+
+#
+#, fuzzy
+msgid "new line"
+msgstr "Pokaži Info liniju "
 
 msgid "new media"
 msgstr ""
@@ -13517,6 +13410,11 @@ msgid "not_tested"
 msgstr ""
 
 #
+#, fuzzy
+msgid "nothing"
+msgstr "ne čini ništa "
+
+#
 msgid "nothing connected"
 msgstr "ništa nije spojeno"
 
@@ -13536,6 +13434,9 @@ msgid "off or wpa2 on"
 msgstr ""
 
 msgid "offset is"
+msgstr ""
+
+msgid "omit"
 msgstr ""
 
 #
@@ -13637,9 +13538,6 @@ msgstr ""
 msgid "rewind to the previous chapter"
 msgstr "Premotaj na prethodno poglavlje"
 
-msgid "rgb"
-msgstr ""
-
 #
 msgid "right"
 msgstr "desno"
@@ -13670,10 +13568,6 @@ msgstr "status skeniranja"
 
 msgid "science fiction/fantasy/horror"
 msgstr ""
-
-#
-msgid "seconds"
-msgstr "sekundi"
 
 #
 msgid "select CAId's"
@@ -13779,6 +13673,9 @@ msgid "social/political issues/economics (general)"
 msgstr ""
 
 msgid "social/spiritual science"
+msgstr ""
+
+msgid "space"
 msgstr ""
 
 msgid "special events"
